working on join component

--- a/src/assets/i18n/de-DE.json
+++ b/src/assets/i18n/de-DE.json
@@ -55,12 +55,294 @@
 		"VERSION_EXCLUSION_FOR_DATE_ONLY": "Die Version ihres Browsers unterstützt Web Conferencing nicht. Verwenden Sie eine andere Version,<br>einen anderen <span class=\"underline\">unterstützten Browser</span> oder laden Sie den Client herunter.",
 		"OLD_EDGE": "Ihr Browser ist nicht kompatibel mit Avaya Meetings. Bitte wechseln Sie zu Google Chrome bzw. der aktuellsten Version von Microsoft Edge für die besten Ergebnisse."
 	},
+	"JOIN": {
+		"MEETING_DID_NOT_START": "Wenn die Besprechung nicht gestartet wurde, können Sie",
+		"OPEN_MANUALLY": "sie manuell aufrufen.",
+		"STARTED_SWC": "Ihre Besprechung wurde in einem neuen Fenster gestartet.",
+		"AUDIO_VIDEO_CHECK": "Audio-/Video-Überprüfung in App geöffnet",
+		"STARTED_AC": "Ihre Besprechung wurde in der App gestartet.",
+		"STARTED_CLIENT_SETTINGS": "Audio-/Video-Überprüfung in App geöffnet",
+		"IF_SWC_NOT_STARTED": "Wenn die Besprechung nicht automatisch gestartet wurde, klicken Sie bitte auf diesen <a href=\"{{link}}\" target=\"_blank\">Link</a>.",
+		"IF_AC_NOT_STARTED": "Wenn die Besprechung nicht automatisch gestartet wurde, können Sie ",
+		"IF_CLIENT_SETTINGS_NOT_STARTED": "Wird die Audio-/Video-Überprüfung nicht automatisch geöffnet, können Sie",
+		"JOIN_WITH_YOUR_BROWSER": "über Ihren Browser beitreten",
+		"OR": "oder",
+		"DOWNLOAD_LATEST_EQUINOX_APP": "die aktuelle App herunterladen.",
+		"JOIN_ANOTHER": "Zurück",
+		"CAPTION": "Auf geht's zur Besprechung!",
+		"WELCOME_USER": "Hallo, {{userName}}!",
+		"USER_NAME": "Geben Sie Ihren Namen ein",
+		"MEETING_ID": "Besprechungs-ID eingeben",
+		"JOIN": "Teilnehmen",
+		"JOIN_A_MEETING": "An einer Besprechung teilnehmen",
+		"MY_MEETING": "Meine Besprechung",
+		"USE_BROWSER": "Browser für Audio und Video verwenden",
+		"IN_PROGRESS": "Läuft",
+		"YOU": "Sie{{separator}}",
+		"AND_N_OTHERS": " + {{n}} andere Teilnehmer",
+		"BROWSER_AUDIO_VIDEO": "Browser für Audio/Video + Präsentation",
+		"USE_BROWSER_FOR_AUDIO_AND_VIDEO": "Browser für Audio und Video verwenden",
+		"USE_BROWSER_FOR_PRESENTATION_ONLY": "Browser nur für Präsentationen verwenden",
+		"DOWNLOAD_CLIENT": "Client herunterladen",
+		"ADJUST_AUDIO_VIDEO_DEVICES": "Audio- und Videotest",
+		"PRESENTATION_ONLY": "Nur Präsentation",
+		"CALL_ME": "Mich anrufen",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "Erstellen Sie eine Einmal-PIN. Nur Ziffern sind zulässig.",
+			"ENTER_PIN": "PIN eingeben",
+			"OK": "OK",
+			"CANCEL": "Abbrechen"
+		},
+		"ENTER_YOUR_NAME": "Geben Sie Ihren Namen ein, um der Besprechung beizutreten.",
+		"OPEN_MC": "Avaya Workplace Mobile-Client öffnen?",
+		"OK": "OK",
+		"OPEN": "Öffnen",
+		"CANCEL": "Abbrechen",
+		"DONE": "Fertig",
+		"WAITING_FOR_MODERATOR": "Die Besprechung hat noch nicht begonnen.",
+		"NEXT_CHECK_IN_SECS": "Nächste Überprüfung in {{countDown}} Sekunden",
+		"CHECK_NOW": "Jetzt überprüfen",
+		"ERROR": {
+			"CAPTION": "Es ist ein Fehler aufgetreten.",
+			"NOT_VALID_USER_NAME": "Der Benutzername ist zu lang.",
+			"NOT_VALID_MEETING_ID": "Ungültige Besprechungs-ID!",
+			"CONFERENCE_DOES_NOT_EXIST": "Der Besprechungsraum wurde nicht gefunden. Überprüfen Sie die Besprechungs-ID und versuchen Sie es erneut.",
+			"INVALID_MEETING_ID": "Die von Ihnen eingegebene Besprechungs-ID ist unbekannt. Geben Sie eine gültige ID ein.",
+			"SERVICE_UNAVAILABLE": "Keine Antwort vom Server oder Serverfehler. Versuchen Sie es später erneut.",
+			"SERVICE_INTERNAL_ERROR": "Interner Serverfehler oder Fehlkonfiguration. Ihre Anfrage konnte nicht verarbeitet werden. Wenden Sie sich an den Serveradministrator.",
+			"MISSING_REQUEST_PARAM": "Erforderliche Eingabe fehlt. Wenden Sie sich an den Administrator.",
+			"MEETING_NOT_STARTED_YET": "Die Besprechung hat noch nicht begonnen.",
+			"FAIL_TO_JOIN_UNAUTHORIZED_PARTICIPANT_ID": "Diese Besprechung ist nur für autorisierte Benutzer. Sie müssen sich erst anmelden, bevor Sie der Besprechung beitreten.",
+			"TOKEN_EXPIRED": "Authentifizierungstoken abgelaufen.",
+			"TOKEN_INVALID": "Ungültiges Authentifizierungstoken.",
+			"ERROR": "Ein unerwarteter Fehler ist aufgetreten. Wenden Sie sich an den Serveradministrator.",
+			"YOU_DONT_HAVE_VIRTUAL_ROOM": "Sie haben keinen virtuellen Raum.",
+			"WRONG_CURRENT_CONFERENCE": "Die Konferenz existiert nicht.",
+			"DISALLOW_INITIATE_NON_VIRTUAL_ROOM_MEETING": "Nicht-virtuelle Besprechung konnte nicht gestartet werden",
+			"FORBIDDEN_ONE_TIME_PIN_REQUIRED": "Entweder dürfen Sie nicht beitreten oder die Besprechung hat noch nicht begonnen.",
+			"ERC_LOCKED_CONFERENCE": "Beitritt nicht möglich, weil diese Besprechung gesperrt ist. Bitten Sie den Moderator, die Besprechung zu öffnen, und versuchen Sie es erneut.",
+			"ERC_START_CONF_FAILED": "Problem auf dem Konferenzserver. Wenden Sie sich an das Support-Team.",
+			"ERC_NO_DEFAULT_MCU_SERVICE_DEFINED_IN_VIRTUAL_ROOM": "Problem auf dem Konferenzserver. Wenden Sie sich an das Support-Team.",
+			"ERC_WEB_COLLABORATION_DISABLED": "Web Collaboration-Fähigkeiten sind deaktiviert",
+			"ERC_VIRTUAL_ROOM_NOT_ALLOW_INSTANT_MEETING": "In virtuellen Räumen sind sofortige Besprechungen nicht möglich",
+			"ERC_AUTH_ACCESS_DENIED": "Zugriff als Gast ist nicht möglich. Bitte melden Sie sich an."
+		},
+		"WARNING": {
+			"NO_NAME_OR_ID": "Geben Sie {{noName ? 'Ihren Namen' : ''}}{{noName && noId ? ' und ' : ''}}{{noId ? 'die Besprechungs-ID' : ''}} ein"
+		},
+		"GUEST": "Gast",
+		"FIRST_TIME_DOWNLOAD_SUGGESTION": "Wenn Sie den Avaya Workplace-Client noch nicht haben, können Sie ihn <a href=\"{{link}}\" target=\"_blank\">herunterladen</a>.",
+		"OPTIONAL_UPGRADE_DOWNLOAD": "Eine neue Version der App ist verfügbar. Aktualisieren Sie für ein besseres App-Erlebnis auf die <a href=\"\" ng-click=\"showAppIsInstalled()\" translate-once=\"{{text}}\"></a>",
+		"OPTIONAL_UPGRADE_DOWNLOAD_LINK": "aktuelle App.",
+		"LEGAL_TEXT": {
+			"DEFAULT": "Durch Klicken auf <b>BEITRETEN</b> stimmen Sie zu, Ihren Namen als Anzeigenamen für Besprechungsteilnehmer und das Browser-Cookie für eine bessere Benutzererfahrung zu verwenden.",
+			"QUICK_START": "Schnellstart",
+			"APP_GUIDE": "Anleitung zur App",
+			"PORTAL_GUIDE": "Anleitung zum Portal",
+			"CONTACT_SUPPORT": "Support kontaktieren",
+			"AGREEMENT": "Durch Klicken auf <small><b>BEITRETEN</b></small> stimmen Sie den ",
+			"TERMS": "allgemeinen Geschäftsbedingungen zu.",
+			"PRIVACY": "Datenschutzerklärung",
+			"DIAL_IN_NUMBER": "Einwahlnummer"
+		},
+		"STARTED_MOBILE": "Wenn Sie die erforderliche Avaya Workplace-App nicht installiert haben, müssen Sie sie installieren, um an der Besprechung teilnehmen zu können."
+	},
 	"NAVIGATION": {
 		"JOIN": "Besprechung jetzt starten",
 		"RECORDING": "Aufzeichnungen + Ereignisse",
 		"SCHEDULE": "Planen",
 		"SETTINGS": "Einstellungen",
 		"SIGN_OUT": "Abmelden"
+	},
+	"RECORDINGS": {
+		"PLAYBACK": {
+			"QA": "F&A",
+			"RELATED_VIDEOS": "Ähnliche Videos",
+			"BROWSE": "Durchsuchen",
+			"VIDEO_DATE_AT": "{{date1}} um {{date2}}",
+			"NOT_ACTIVE": "Das Ereignis ist nicht aktiv."
+		},
+		"CHAT": {
+			"NEW_ONLY": "Nur neue Elemente anzeigen",
+			"QUESTIONS_AND_ANSWERS": "Fragen und Antworten",
+			"ENTER_QUESTION": "Fragen an den Moderator eingeben",
+			"ENTER_RESPONSE": "Eine Antwort an {{name}} eingeben",
+			"ME": "Ich",
+			"GUEST": "Gast",
+			"REPLY_TO": "{{name}} antworten",
+			"NAME_REQUEST": {
+				"TITLE": "Geben Sie Ihren Namen ein, um an den F&A teilzunehmen",
+				"JOIN_QA": "An F&A teilnehmen",
+				"PLACE_HOLDER": "Name"
+			},
+			"PIN_REQUEST": {
+				"TITLE": "Moderator-PIN für F&A eingeben:",
+				"PLACE_HOLDER": "PIN eingeben",
+				"MODERATE": "Moderieren",
+				"CANCEL": "Abbrechen",
+				"ERROR": "Die angegebene PIN ist ungültig"
+			}
+		},
+		"PIN_REQUEST": {
+			"TITLE": "Dieses Video ist PIN-geschützt.",
+			"ENTER_PIN": "PIN eingeben",
+			"OK": "OK",
+			"CANCEL": "Abbrechen",
+			"ERROR": "Die angegebene PIN ist ungültig"
+		},
+		"TAB": {
+			"RECOMMENDED": "Empfohlen",
+			"EVENTS": "Ereignisse",
+			"ALL_RECORDINGS": "Alle Aufzeichnungen",
+			"MY_RECORDINGS": "Meine Aufzeichnungen",
+			"CATEGORY": "Kategorie",
+			"TRASH": "Papierkorb"
+		},
+		"TABLE_HEADER": {
+			"DATE": "Datum",
+			"EXPIRY": "Ablauf",
+			"DURATION": "Dauer",
+			"IMAGE": "Bild",
+			"TITLE": "Titel",
+			"VIEWS": "Aufrufe",
+			"OWNER": "Besitzer",
+			"SIZE": "Größe"
+		},
+		"TRASH": {
+			"DELETE_ITEMS": "{{n}} Elemente löschen?",
+			"DELETE_ITEM": "Ein Element löschen?",
+			"CANNOT_UNDONE": "Dies lässt sich nicht rückgängig machen.",
+			"DELETE": "Löschen",
+			"CANCEL": "Abbrechen"
+		},
+		"SEARCH_RECORDINGS": "Suchen",
+		"RECORDING_DETAILS": {
+			"RECORDING_INFO": {
+				"MEETING_ID": "Besprechungs-ID:",
+				"OWNER": "Besitzer:",
+				"DATE": "Datum:",
+				"EXPIRY": "Ablauf:",
+				"CHECKSUM": "Prüfsumme:",
+				"DIRECT_URL": "Direkte URL:",
+				"DURATION": "Dauer:",
+				"SIZE": "Größe:",
+				"PROFILE": "Profil:",
+				"SIZE_W_X_H": "{{width}}x{{height}}",
+				"SIZE_W_X_H_BITRATE": "{{width}}x{{height}}, {{bitrate}} KBit/s",
+				"VIEWS": "Aufrufe: {{number}}",
+				"VIEWERS": "Betrachter: {{number}}",
+				"ACCESS_LEVEL": "Diese Aufzeichnung ist als „Privat“ eingestellt. Ändern Sie die Benutzerzugriffsebene zu „Öffentlich“, um dieses Video öffentlich zu machen."
+			},
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "Zugriff auf diese Aufzeichnung:",
+				"ACCESS_FOOTNOTE": "*Wenn oben eine Zugriffs-PIN eingegeben wurde, muss sie zum Zugriff auf die Aufzeichnung eingegeben werden.",
+				"ONLY_ME": "Privat (nur ich)",
+				"ONLY_FOLLOWING_USERS": "Privat – ausgewählte Benutzer",
+				"ALL_AUTH_USERS": "Alle authentifizierten Benutzer",
+				"ALL_USERS": "Öffentlich (alle Benutzer)",
+				"ADD_ALL": "Alle bekannten Teilnehmer hinzufügen",
+				"NAME_OR_USER_ID": "Namen oder Benutzer-ID eingeben",
+				"N_SELECTED": "{{n}} ausgewählt",
+				"CHANGE_LEVEL": "Wenn Sie die Benutzerzugriffsebene zu „Öffentlich“ ändern, können alle Benutzer auf diese Aufzeichnung zugreifen.",
+				"DOWNLOAD_RECORDING": "App herunterladen",
+				"SEE_RECORDING_IN_USER_PORTAL": "Die Aufzeichnung im Benutzerportal anzeigen",
+				"ALLOW_USER": "Diesen Benutzern folgendes gestatten:"
+			},
+			"ERROR": {
+				"INVALID_TITLE": "Die Aufzeichnung benötigt eine Bezeichnung!"
+			},
+			"UPLOAD": "Fügen Sie ein Bild hinzu, damit diese Aufzeichnung einfacher gefunden wird",
+			"THUMBNAIL": "Video-Miniaturbild",
+			"RECORDING_INFO_TAB_NAME": "Aufzeichnungsinformationen",
+			"USER_ACCESS_TAB_NAME": "Benutzerzugriff",
+			"RECORDING_MAIN_TAB_NAME": "Hauptrufnummer",
+			"CLOSE": "Schließen",
+			"VIEW_RECORDING_DETAILS": "Aufzeichnungsdetails anzeigen",
+			"EDIT_RECORDING_DETAILS": "Aufzeichnungsdetails bearbeiten",
+			"DESCRIPTION": "Beschreibung:",
+			"CATEGORY": "Kategorie:",
+			"ACCESS_PIN": "Zugriffs-PIN:",
+			"ADD_CATEGORY": "Kategorie hinzufügen",
+			"OPTIONAL": "Optional",
+			"REQUIRED": "Erforderlich",
+			"ALLOW_RECORDING_TO_BE_DOWNLOADED": "Herunterladen der Aufzeichnung zulassen",
+			"SHOW_PUBLICLY": "Öffentlich im Portal anzeigen",
+			"SAVE": "Speichern",
+			"CANCEL": "Abbrechen",
+			"ENTER_DESCRIPTION": "Eine Beschreibung eingeben",
+			"RECORDING_TITLE": "Titel"
+		},
+		"BROADCAST_DETAILS": {
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "Zugriff auf diese Rundsendung:",
+				"SEE_BROADCAST_IN_USER_PORTAL": "Rundsendung im Benutzerportal anzeigen"
+			},
+			"BROADCAST_DETAILS": "Rundsendungsdetails",
+			"VIEW_BROADCAST_DETAILS": "Rundsendungsdetails anzeigen",
+			"EDIT_BROADCAST_DETAILS": "Rundsendungsdetails bearbeiten",
+			"BROADCAST_INFO_TAB_NAME": "Info zur Rundsendung"
+		},
+		"NOW": "Findet jetzt statt",
+		"HAPPENING_TODAY": "Findet heute statt",
+		"RECENTLY_ADDED": "Zuletzt hinzugefügt",
+		"MOST_VIEWED": "Am häufigsten angezeigt",
+		"UPCOMING": "Bevorstehende Besprechungen",
+		"LATER_TODAY": "Später heute",
+		"TOMORROW": "Morgen",
+		"VIEW_DETAILS": "Details anzeigen",
+		"EDIT_DETAILS": "Details bearbeiten",
+		"BROADCAST_MODERATE": "Moderieren",
+		"COPY_LINK": "Link kopieren",
+		"SHARE_LINK": "Per E-Mail teilen",
+		"DOWNLOAD": "Herunterladen",
+		"DELETE": "Löschen",
+		"RECOVER": "Wiederherstellen",
+		"TODAY": "Heute",
+		"YESTERDAY": "Gestern",
+		"TRASH_NOTICE": "Die Objekte in Ihrem Papierkorb werden nach {{n}} Tagen automatisch gelöscht.",
+		"DELETE_ALL": "Alle löschen",
+		"RECOVER_ALL": "Alle wiederherstellen",
+		"PAGE": "Seite",
+		"OF": "von {{n}}",
+		"SHOW": "Anzeigen:",
+		"ITEMS": "Elemente",
+		"LOAD_MORE": "Mehr laden",
+		"RESULTS": "{{n}} Ergebnisse",
+		"RESULT": "1 Ergebnis",
+		"SHOWING": "(Reihenfolge {{first}}-{{second}})",
+		"TYPE_IN_SEARCH": "Geben Sie die Suchanfrage ein und drücken Sie die Eingabetaste.",
+		"SEARCHING": "Suchen...",
+		"NO_RECOMMENDED": "Es sind keine empfohlenen Aufzeichnungen vorhanden.",
+		"NO_BROADCASTS": "Es gibt keine Live-Ereignisse",
+		"NO_RECORDINGS": "Keine Aufzeichnungen vorhanden",
+		"NO_ACCESS": "Bitte <a class='sign-in'>Anmelden</a> oder einen Link zum Anzeigen einer Aufzeichnung oder eines Ereignisses verwenden.",
+		"VIEWS": "{{n}} Mal betrachtet",
+		"VIEWERS": "{{n}} Betrachter",
+		"CANCEL": "Abbrechen",
+		"CONTINUE": "Weiter",
+		"ERROR": {
+			"DOWNLOAD": "Downloadfehler",
+			"DOWNLOAD_LINK": "Download-Link ist nicht verfügbar.",
+			"RECORDING_DELETED": "Die Aufzeichnung wurde gelöscht. Um die Aufzeichnung abzuspielen, muss sie wiederhergestellt werden.",
+			"RECORDING_NOT_ACTIVE": "Ereignis ist nicht aktiv.",
+			"UPDATE_FAILED": "Die Aufzeichnung konnte nicht aktualisiert werden."
+		},
+		"EXPIRY": {
+			"TITLE": "Läuft ab:",
+			"IN": "In",
+			"DAY": "Tag",
+			"DAYS": "Tagen",
+			"HOUR": "Stunde",
+			"HOURS": "Stunden",
+			"EXPIRED": "Abgelaufen"
+		},
+		"SIZE": {
+			"KB": "KB",
+			"MB": "MB",
+			"GB": "GB",
+			"TB": "TB",
+			"PB": "PB"
+		}
 	},
 	"SETTINGS": {
 		"TITLE": "Avaya-Einstellungen",
