--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -55,12 +55,294 @@
 		"VERSION_EXCLUSION_FOR_DATE_ONLY": "Your browser version does not support web conferencing. For a better collaboration experience,<br>try another version, other <span class=\"underline\">supported browsers</span> or download the client.",
 		"OLD_EDGE": "Your browser is not compatible with Avaya Meetings. Please switch to Google Chrome or the latest Microsoft Edge for the best experience."
 	},
+	"JOIN": {
+		"MEETING_DID_NOT_START": "If your meeting didn't start,",
+		"OPEN_MANUALLY": "Open it manually",
+		"STARTED_SWC": "Your meeting started in a new window",
+		"AUDIO_VIDEO_CHECK": "Audio/Video check opened in the App",
+		"STARTED_AC": "Your meeting started in the App",
+		"STARTED_CLIENT_SETTINGS": "Audio/Video check opened in the App",
+		"IF_SWC_NOT_STARTED": "If meeting wasn't started automatically please click this <a href=\"{{link}}\" target=\"_blank\">link</a>.",
+		"IF_AC_NOT_STARTED": "If meeting wasn't started automatically, you can ",
+		"IF_CLIENT_SETTINGS_NOT_STARTED": "If your Audio/Video check did not open,",
+		"JOIN_WITH_YOUR_BROWSER": "Join with your browser",
+		"OR": "or",
+		"DOWNLOAD_LATEST_EQUINOX_APP": "Download the latest app",
+		"JOIN_ANOTHER": "Back",
+		"CAPTION": "Let's get into this meeting!",
+		"WELCOME_USER": "Welcome {{userName}}!",
+		"USER_NAME": "Enter your name",
+		"MEETING_ID": "Enter your meeting ID",
+		"JOIN": "Join",
+		"JOIN_A_MEETING": "Join a Meeting",
+		"MY_MEETING": "My Meeting",
+		"USE_BROWSER": "Use browser for audio + video",
+		"IN_PROGRESS": "In progress",
+		"YOU": "You{{separator}}",
+		"AND_N_OTHERS": " and {{n}} others",
+		"BROWSER_AUDIO_VIDEO": "Browser Audio/Video + Presentation",
+		"USE_BROWSER_FOR_AUDIO_AND_VIDEO": "Use browser for audio + video",
+		"USE_BROWSER_FOR_PRESENTATION_ONLY": "Use browser for presentation only",
+		"DOWNLOAD_CLIENT": "Download client",
+		"ADJUST_AUDIO_VIDEO_DEVICES": "Audio and Video Check",
+		"PRESENTATION_ONLY": "Presentation Only",
+		"CALL_ME": "Call Me",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "Please create a onetime pin. Only numeric digits are allowed.",
+			"ENTER_PIN": "Enter PIN",
+			"OK": "OK",
+			"CANCEL": "Cancel"
+		},
+		"ENTER_YOUR_NAME": "Please enter your name to join the meeting",
+		"OPEN_MC": "Open Avaya Workplace Mobile Client?",
+		"OK": "OK",
+		"OPEN": "Open",
+		"CANCEL": "Cancel",
+		"DONE": "Done",
+		"WAITING_FOR_MODERATOR": "The meeting has not yet started",
+		"NEXT_CHECK_IN_SECS": "Next check in {{countDown}} seconds",
+		"CHECK_NOW": "Check now",
+		"ERROR": {
+			"CAPTION": "An error occurred",
+			"NOT_VALID_USER_NAME": "User name is too long",
+			"NOT_VALID_MEETING_ID": "Not a valid meeting ID!",
+			"CONFERENCE_DOES_NOT_EXIST": "Meeting room could not be found. Check meeting ID and try again.",
+			"INVALID_MEETING_ID": "The meeting ID you entered does not exist. You should enter a valid ID.",
+			"SERVICE_UNAVAILABLE": "No response from server or server error. Try again later.",
+			"SERVICE_INTERNAL_ERROR": "The server encountered an internal error or misconfiguration and was unable to complete your request. Please contact the server administrator.",
+			"MISSING_REQUEST_PARAM": "Request parameter is missing. Please check with your Administrator.",
+			"MEETING_NOT_STARTED_YET": "Meeting is not started yet",
+			"FAIL_TO_JOIN_UNAUTHORIZED_PARTICIPANT_ID": "The meeting is for authorized users only. You must sign-in first before joining the meeting.",
+			"TOKEN_EXPIRED": "Authentication token expired.",
+			"TOKEN_INVALID": "Authentication token is invalid.",
+			"ERROR": "An unexpected error occurred. Please contact the server administrator.",
+			"YOU_DONT_HAVE_VIRTUAL_ROOM": "You don't have virtual room.",
+			"WRONG_CURRENT_CONFERENCE": "Current conference does not exist",
+			"DISALLOW_INITIATE_NON_VIRTUAL_ROOM_MEETING": "Unable to start non virtual room meeting",
+			"FORBIDDEN_ONE_TIME_PIN_REQUIRED": "You are not allowed to join or conference isn't started yet",
+			"ERC_LOCKED_CONFERENCE": "You cannot join this meeting because it is locked. Ask the moderator of the meeting to unlock it, and try again",
+			"ERC_START_CONF_FAILED": "There is a problem with the conference server. Please contact your support team.",
+			"ERC_NO_DEFAULT_MCU_SERVICE_DEFINED_IN_VIRTUAL_ROOM": "There is a problem with the conference server. Please contact your support team.",
+			"ERC_WEB_COLLABORATION_DISABLED": "Web collaboration capabilities are disabled",
+			"ERC_VIRTUAL_ROOM_NOT_ALLOW_INSTANT_MEETING": "Virtual room does not allow instant meetings",
+			"ERC_AUTH_ACCESS_DENIED": "Guest access is not allowed. Please sign in."
+		},
+		"WARNING": {
+			"NO_NAME_OR_ID": "Please enter {{noName ? 'Your name' : ''}}{{noName && noId ? ' and ' : ''}}{{noId ? 'the Meeting ID' : ''}}"
+		},
+		"GUEST": "Guest",
+		"FIRST_TIME_DOWNLOAD_SUGGESTION": "If you don't have Avaya Workplace client, please <a href=\"{{link}}\" target=\"_blank\">download</a> it.",
+		"OPTIONAL_UPGRADE_DOWNLOAD": "New version of the App is available. For best experience, upgrade to <a href=\"\" ng-click=\"showAppIsInstalled()\" translate-once=\"{{text}}\"></a>",
+		"OPTIONAL_UPGRADE_DOWNLOAD_LINK": "latest App.",
+		"LEGAL_TEXT": {
+			"DEFAULT": "By clicking <b>JOIN</b> you agree to use your name as meeting participant display name and use the browser cookie for better user experiences.",
+			"QUICK_START": "Quick Start",
+			"APP_GUIDE": "App Guide",
+			"PORTAL_GUIDE": "Portal Guide",
+			"CONTACT_SUPPORT": "Contact Support",
+			"AGREEMENT": "By clicking <small><b>JOIN</b></small> you agree to the ",
+			"TERMS": "Terms Of Use",
+			"PRIVACY": "Privacy Statement",
+			"DIAL_IN_NUMBER": "Dial-in Number"
+		},
+		"STARTED_MOBILE": "If you haven't installed the required Avaya Workplace app, you will need to install it in order to join the meeting."
+	},
 	"NAVIGATION": {
 		"JOIN": "Meet Now",
 		"RECORDING": "Recordings + Events",
 		"SCHEDULE": "Schedule",
 		"SETTINGS": "Settings",
 		"SIGN_OUT": "Sign out"
+	},
+	"RECORDINGS": {
+		"PLAYBACK": {
+			"QA": "Q & A",
+			"RELATED_VIDEOS": "Related Videos",
+			"BROWSE": "Browse",
+			"VIDEO_DATE_AT": "{{date1}} at {{date2}}",
+			"NOT_ACTIVE": "The event is not active"
+		},
+		"CHAT": {
+			"NEW_ONLY": "Show new items only",
+			"QUESTIONS_AND_ANSWERS": "Questions & Answers",
+			"ENTER_QUESTION": "Enter a question for the moderator",
+			"ENTER_RESPONSE": "Enter a reply to {{name}}",
+			"ME": "Me",
+			"GUEST": "Guest",
+			"REPLY_TO": "Reply to {{name}}",
+			"NAME_REQUEST": {
+				"TITLE": "Enter your name to join the Q & A",
+				"JOIN_QA": "Join Q & A",
+				"PLACE_HOLDER": "Name"
+			},
+			"PIN_REQUEST": {
+				"TITLE": "Enter Q&A moderator PIN",
+				"PLACE_HOLDER": "Enter PIN",
+				"MODERATE": "Moderate",
+				"CANCEL": "Cancel",
+				"ERROR": "The PIN you provided is invalid"
+			}
+		},
+		"PIN_REQUEST": {
+			"TITLE": "This video is PIN protected",
+			"ENTER_PIN": "Enter PIN",
+			"OK": "OK",
+			"CANCEL": "Cancel",
+			"ERROR": "The PIN you provided is invalid"
+		},
+		"TAB": {
+			"RECOMMENDED": "Recommended",
+			"EVENTS": "Events",
+			"ALL_RECORDINGS": "All Recordings",
+			"MY_RECORDINGS": "My Recordings",
+			"CATEGORY": "Category",
+			"TRASH": "Trash"
+		},
+		"TABLE_HEADER": {
+			"DATE": "Date",
+			"EXPIRY": "Expiry",
+			"DURATION": "Duration",
+			"IMAGE": "Image",
+			"TITLE": "Title",
+			"VIEWS": "Views",
+			"OWNER": "Owner",
+			"SIZE": "Size"
+		},
+		"TRASH": {
+			"DELETE_ITEMS": "Delete {{n}} items?",
+			"DELETE_ITEM": "Delete 1 item?",
+			"CANNOT_UNDONE": "This cannot be undone",
+			"DELETE": "Delete",
+			"CANCEL": "Cancel"
+		},
+		"SEARCH_RECORDINGS": "Search",
+		"RECORDING_DETAILS": {
+			"RECORDING_INFO": {
+				"MEETING_ID": "Meeting ID:",
+				"OWNER": "Owner:",
+				"DATE": "Date:",
+				"EXPIRY": "Expiry:",
+				"CHECKSUM": "Checksum:",
+				"DIRECT_URL": "Direct URL:",
+				"DURATION": "Duration:",
+				"SIZE": "Size:",
+				"PROFILE": "Profile:",
+				"SIZE_W_X_H": "{{width}}x{{height}}",
+				"SIZE_W_X_H_BITRATE": "{{width}}x{{height}}, {{bitrate}} Kb/s",
+				"VIEWS": "Views: {{number}}",
+				"VIEWERS": "Viewers: {{number}}",
+				"ACCESS_LEVEL": "This Recording is set to Private. Please change User Access Level to Public to share this video with public."
+			},
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "This recording can be accessed by:",
+				"ACCESS_FOOTNOTE": "*If an Access PIN has been entered above, it will be required to access the recording.",
+				"ONLY_ME": "Private (only me)",
+				"ONLY_FOLLOWING_USERS": "Private - selected users",
+				"ALL_AUTH_USERS": "All authenticated users",
+				"ALL_USERS": "Public (all users)",
+				"ADD_ALL": "Add all known attendees",
+				"NAME_OR_USER_ID": "Enter name or user id",
+				"N_SELECTED": "{{n}} selected",
+				"CHANGE_LEVEL": "Changing User Access level to Public will allow anyone to view this recording",
+				"DOWNLOAD_RECORDING": "Download the recording",
+				"SEE_RECORDING_IN_USER_PORTAL": "See the recording in the user portal",
+				"ALLOW_USER": "Allow these users to"
+			},
+			"ERROR": {
+				"INVALID_TITLE": "Recording's name cannot be empty!"
+			},
+			"UPLOAD": "Add an image to help people identify this recording",
+			"THUMBNAIL": "Video thumbnail",
+			"RECORDING_INFO_TAB_NAME": "Recording info",
+			"USER_ACCESS_TAB_NAME": "User Access",
+			"RECORDING_MAIN_TAB_NAME": "Main",
+			"CLOSE": "Close",
+			"VIEW_RECORDING_DETAILS": "View Recording Details",
+			"EDIT_RECORDING_DETAILS": "Edit Recording Details",
+			"DESCRIPTION": "Description:",
+			"CATEGORY": "Category:",
+			"ACCESS_PIN": "Access PIN:",
+			"ADD_CATEGORY": "Add category",
+			"OPTIONAL": "Optional",
+			"REQUIRED": "Required",
+			"ALLOW_RECORDING_TO_BE_DOWNLOADED": "Allow recording to be downloaded",
+			"SHOW_PUBLICLY": "Show publicly in portal",
+			"SAVE": "Save",
+			"CANCEL": "Cancel",
+			"ENTER_DESCRIPTION": "Enter a description",
+			"RECORDING_TITLE": "Title"
+		},
+		"BROADCAST_DETAILS": {
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "This broadcast can be accessed by:",
+				"SEE_BROADCAST_IN_USER_PORTAL": "See the broadcast in the user portal"
+			},
+			"BROADCAST_DETAILS": "Broadcast Details",
+			"VIEW_BROADCAST_DETAILS": "View Broadcast Details",
+			"EDIT_BROADCAST_DETAILS": "Edit Broadcast Details",
+			"BROADCAST_INFO_TAB_NAME": "Broadcast info"
+		},
+		"NOW": "Happening Now",
+		"HAPPENING_TODAY": "Happening Today",
+		"RECENTLY_ADDED": "Recently Added",
+		"MOST_VIEWED": "Most Viewed",
+		"UPCOMING": "Upcoming Meetings",
+		"LATER_TODAY": "Later today",
+		"TOMORROW": "Tomorrow",
+		"VIEW_DETAILS": "View Details",
+		"EDIT_DETAILS": "Edit Details",
+		"BROADCAST_MODERATE": "Moderate",
+		"COPY_LINK": "Copy link",
+		"SHARE_LINK": "Share by e-mail",
+		"DOWNLOAD": "Download",
+		"DELETE": "Delete",
+		"RECOVER": "Recover",
+		"TODAY": "Today",
+		"YESTERDAY": "Yesterday",
+		"TRASH_NOTICE": "Items in your trash will automatically be deleted after {{n}} days",
+		"DELETE_ALL": "Delete All",
+		"RECOVER_ALL": "Recover All",
+		"PAGE": "Page",
+		"OF": "of {{n}}",
+		"SHOW": "Show:",
+		"ITEMS": "items",
+		"LOAD_MORE": "Load More",
+		"RESULTS": "{{n}} results",
+		"RESULT": "1 result",
+		"SHOWING": "(showing {{first}}-{{second}})",
+		"TYPE_IN_SEARCH": "Type in your search and hit enter",
+		"SEARCHING": "Searching...",
+		"NO_RECOMMENDED": "There are no recommended recordings",
+		"NO_BROADCASTS": "There are no live events",
+		"NO_RECORDINGS": "No recordings",
+		"NO_ACCESS": "Please <a class='sign-in'>Sign in</a> or use a link provided to view a recording or event.",
+		"VIEWS": "{{n}} views",
+		"VIEWERS": "{{n}} viewers",
+		"CANCEL": "Cancel",
+		"CONTINUE": "Continue",
+		"ERROR": {
+			"DOWNLOAD": "Download error",
+			"DOWNLOAD_LINK": "Download link is not available",
+			"RECORDING_DELETED": "Recording has been deleted. Need to restore recording to play it.",
+			"RECORDING_NOT_ACTIVE": "Event is not active.",
+			"UPDATE_FAILED": "Failed to update recording"
+		},
+		"EXPIRY": {
+			"TITLE": "Expires:",
+			"IN": "In",
+			"DAY": "day",
+			"DAYS": "days",
+			"HOUR": "hour",
+			"HOURS": "hours",
+			"EXPIRED": "Expired"
+		},
+		"SIZE": {
+			"KB": "KB",
+			"MB": "MB",
+			"GB": "GB",
+			"TB": "TB",
+			"PB": "PB"
+		}
 	},
 	"SETTINGS": {
 		"TITLE": "Avaya Settings",
