--- a/src/assets/i18n/it-IT.json
+++ b/src/assets/i18n/it-IT.json
@@ -55,12 +55,294 @@
 		"VERSION_EXCLUSION_FOR_DATE_ONLY": "La versione del browser non supporta le conferenze su Web. Per un'esperienza migliore della collaborazione,<br>provare un'altra versione o un altro <span class=\"underline\">browser supportato</span> oppure scaricare il client.",
 		"OLD_EDGE": "Il browser non è compatibile con Avaya Meetings. Passare a Google Chrome o all'ultima versione di Microsoft Edge per una migliore esperienza."
 	},
+	"JOIN": {
+		"MEETING_DID_NOT_START": "Se la riunione non si avvia,",
+		"OPEN_MANUALLY": "aprila manualmente",
+		"STARTED_SWC": "La riunione è stata avviata in una nuova finestra",
+		"AUDIO_VIDEO_CHECK": "Controllo Audio/Video aperto nell’app",
+		"STARTED_AC": "La riunione è stata avviata nell'app",
+		"STARTED_CLIENT_SETTINGS": "Controllo Audio/Video aperto nell’app",
+		"IF_SWC_NOT_STARTED": "Se la riunione non si è avviata automaticamente, fare clic su questo <a href=\"{{link}}\" target=\"_blank\">link</a>.",
+		"IF_AC_NOT_STARTED": "Se la riunione non si è avviata automaticamente, è possibile ",
+		"IF_CLIENT_SETTINGS_NOT_STARTED": "Se il controllo Audio/Video non si è aperto,",
+		"JOIN_WITH_YOUR_BROWSER": "partecipare tramite browser",
+		"OR": "o",
+		"DOWNLOAD_LATEST_EQUINOX_APP": "Scarica l'app più recente",
+		"JOIN_ANOTHER": "Indietro",
+		"CAPTION": "Partecipa a questa riunione.",
+		"WELCOME_USER": "Diamo il benvenuto a {{userName}}!",
+		"USER_NAME": "Inserire il proprio nome",
+		"MEETING_ID": "Inserire il proprio ID riunione",
+		"JOIN": "Partecipa",
+		"JOIN_A_MEETING": "Partecipa a una riunione",
+		"MY_MEETING": "Riunione",
+		"USE_BROWSER": "Utilizza browser per audio e video",
+		"IN_PROGRESS": "In corso",
+		"YOU": "Tu{{separator}}",
+		"AND_N_OTHERS": " e altri {{n}}",
+		"BROWSER_AUDIO_VIDEO": "Presentazione e audio/video browser",
+		"USE_BROWSER_FOR_AUDIO_AND_VIDEO": "Utilizza browser per audio e video",
+		"USE_BROWSER_FOR_PRESENTATION_ONLY": "Utilizzare il browser solo per le presentazioni",
+		"DOWNLOAD_CLIENT": "Scaricare il client",
+		"ADJUST_AUDIO_VIDEO_DEVICES": "Controllo audio e video",
+		"PRESENTATION_ONLY": "Solo presentazione",
+		"CALL_ME": "Chiama utente",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "Creare un pin unico. Sono consentite solo cifre numeriche.",
+			"ENTER_PIN": "Immetti PIN",
+			"OK": "OK",
+			"CANCEL": "Annulla"
+		},
+		"ENTER_YOUR_NAME": "Immettere il proprio nome per partecipare alla riunione",
+		"OPEN_MC": "Aprire il client Avaya Workplace Mobile?",
+		"OK": "OK",
+		"OPEN": "Apri",
+		"CANCEL": "Annulla",
+		"DONE": "Fine",
+		"WAITING_FOR_MODERATOR": "La riunione non è ancora iniziata",
+		"NEXT_CHECK_IN_SECS": "Prossimo controllo tra {{countDown}} secondi",
+		"CHECK_NOW": "Controlla ora",
+		"ERROR": {
+			"CAPTION": "Si è verificato un errore",
+			"NOT_VALID_USER_NAME": "Il nome utente è troppo lungo",
+			"NOT_VALID_MEETING_ID": "ID riunione non valido.",
+			"CONFERENCE_DOES_NOT_EXIST": "Impossibile trovare la sala riunioni. Controllare l'ID riunione e riprovare.",
+			"INVALID_MEETING_ID": "L'ID riunione immesso non esiste. Immettere un ID valido.",
+			"SERVICE_UNAVAILABLE": "Nessuna risposta dal server o errore del server. Riprovare più tardi.",
+			"SERVICE_INTERNAL_ERROR": "Si è verificato un errore interno o una configurazione errata e il server non ha potuto completare la richiesta. Contattare l'amministratore del server.",
+			"MISSING_REQUEST_PARAM": "Il parametro richiesto è assente. Verificare con l'amministratore.",
+			"MEETING_NOT_STARTED_YET": "La riunione non è ancora iniziata",
+			"FAIL_TO_JOIN_UNAUTHORIZED_PARTICIPANT_ID": "La riunione è riservata solo agli utenti autorizzati. Accedere prima di partecipare al riunione.",
+			"TOKEN_EXPIRED": "Token di autenticazione scaduto.",
+			"TOKEN_INVALID": "Token di autenticazione non valido.",
+			"ERROR": "Si è verificato un errore imprevisto. Contattare l'amministratore del server.",
+			"YOU_DONT_HAVE_VIRTUAL_ROOM": "Non si dispone della sala virtuale.",
+			"WRONG_CURRENT_CONFERENCE": "La conferenza corrente non esiste",
+			"DISALLOW_INITIATE_NON_VIRTUAL_ROOM_MEETING": "La riunione può essere avviata solo nella sala virtuale",
+			"FORBIDDEN_ONE_TIME_PIN_REQUIRED": "Non è consentito partecipare alla conferenza o la conferenza non è ancora iniziata",
+			"ERC_LOCKED_CONFERENCE": "La riunione è bloccata, impossibile partecipare. Chiedere al moderatore della riunione di sbloccarla e riprovare.",
+			"ERC_START_CONF_FAILED": "Si è verificato un problema sul server conferenza. Contattare il team dell'assistenza.",
+			"ERC_NO_DEFAULT_MCU_SERVICE_DEFINED_IN_VIRTUAL_ROOM": "Si è verificato un problema sul server conferenza. Contattare il team dell'assistenza.",
+			"ERC_WEB_COLLABORATION_DISABLED": "Funzionalità di collaborazione Web disattivate",
+			"ERC_VIRTUAL_ROOM_NOT_ALLOW_INSTANT_MEETING": "La sala virtuale non consente riunioni istantanee",
+			"ERC_AUTH_ACCESS_DENIED": "L'accesso come ospite non è consentito. Accedere."
+		},
+		"WARNING": {
+			"NO_NAME_OR_ID": "Immettere {{noName ? 'nome' : ''}}{{noName && noId ? ' e ' : ''}}{{noId ? 'l’ID riunione' : ''}}"
+		},
+		"GUEST": "Ospite",
+		"FIRST_TIME_DOWNLOAD_SUGGESTION": "Se non si dispone del client Avaya Workplace, eseguire il <a href=\"{{link}}\" target=\"_blank\">download</a>.",
+		"OPTIONAL_UPGRADE_DOWNLOAD": "Nuova versione dell'app disponibile. Per ottenere un'esperienza ottimale, aggiornare alla <a href=\"\" ng-click=\"showAppIsInstalled()\" translate-once=\"{{text}}\"></a>",
+		"OPTIONAL_UPGRADE_DOWNLOAD_LINK": "app più recente.",
+		"LEGAL_TEXT": {
+			"DEFAULT": "Facendo clic su <b>PARTECIPA</b> l'utente accetta di utilizzare il proprio nome come nome visualizzato tra i partecipanti alla riunione e consente l'utilizzo dei cookie del browser per una migliore esperienza.",
+			"QUICK_START": "Avvio rapido",
+			"APP_GUIDE": "Guida app",
+			"PORTAL_GUIDE": "Guida portale",
+			"CONTACT_SUPPORT": "Contatta il supporto",
+			"AGREEMENT": "Facendo clic su <small><b>PARTECIPA</b></small>, si accettano i ",
+			"TERMS": "termini e condizioni",
+			"PRIVACY": "Dichiarazione sulla privacy",
+			"DIAL_IN_NUMBER": "Numero da comporre"
+		},
+		"STARTED_MOBILE": "Se l'app Avaya Workplace necessaria non è stata installata, è necessario installarla per poter partecipare alla riunione."
+	},
 	"NAVIGATION": {
 		"JOIN": "Riunione immediata",
 		"RECORDING": "Registrazioni ed eventi",
 		"SCHEDULE": "Programmazione",
 		"SETTINGS": "Impostazioni",
 		"SIGN_OUT": "Esci"
+	},
+	"RECORDINGS": {
+		"PLAYBACK": {
+			"QA": "Domande e risposte",
+			"RELATED_VIDEOS": "Video correlati",
+			"BROWSE": "Sfoglia",
+			"VIDEO_DATE_AT": "{{date1}} alle {{date2}}",
+			"NOT_ACTIVE": "L'evento non è attivo."
+		},
+		"CHAT": {
+			"NEW_ONLY": "Mostra solo nuovi elementi",
+			"QUESTIONS_AND_ANSWERS": "Domande e risposte",
+			"ENTER_QUESTION": "Immetti una domanda per il moderatore",
+			"ENTER_RESPONSE": "Immetti una risposta a {{name}}",
+			"ME": "Io",
+			"GUEST": "Ospite",
+			"REPLY_TO": "Rispondere a {{name}}",
+			"NAME_REQUEST": {
+				"TITLE": "Immetti il proprio nome per partecipare alle domande e risposte",
+				"JOIN_QA": "Partecipa alle domande e risposte",
+				"PLACE_HOLDER": "Nome"
+			},
+			"PIN_REQUEST": {
+				"TITLE": "Immetti il PIN del moderatore per le domande e risposte",
+				"PLACE_HOLDER": "Immetti PIN",
+				"MODERATE": "Modera",
+				"CANCEL": "Annulla",
+				"ERROR": "Il PIN specificato non è valido"
+			}
+		},
+		"PIN_REQUEST": {
+			"TITLE": "Questo video è protetto da PIN",
+			"ENTER_PIN": "Immetti PIN",
+			"OK": "OK",
+			"CANCEL": "Annulla",
+			"ERROR": "Il PIN specificato non è valido"
+		},
+		"TAB": {
+			"RECOMMENDED": "Consigliato",
+			"EVENTS": "Eventi",
+			"ALL_RECORDINGS": "Tutte le registrazioni",
+			"MY_RECORDINGS": "Registrazioni",
+			"CATEGORY": "Categoria",
+			"TRASH": "Cestino"
+		},
+		"TABLE_HEADER": {
+			"DATE": "Data",
+			"EXPIRY": "Scadenza",
+			"DURATION": "Durata",
+			"IMAGE": "Immagine",
+			"TITLE": "Titolo",
+			"VIEWS": "Visualizzazioni",
+			"OWNER": "Proprietario",
+			"SIZE": "Dimensione"
+		},
+		"TRASH": {
+			"DELETE_ITEMS": "Eliminare {{n}} elementi?",
+			"DELETE_ITEM": "Eliminare 1 elemento?",
+			"CANNOT_UNDONE": "Impossibile annullare l'operazione",
+			"DELETE": "Elimina",
+			"CANCEL": "Annulla"
+		},
+		"SEARCH_RECORDINGS": "Cerca",
+		"RECORDING_DETAILS": {
+			"RECORDING_INFO": {
+				"MEETING_ID": "ID riunione:",
+				"OWNER": "Proprietario:",
+				"DATE": "Data:",
+				"EXPIRY": "Scadenza:",
+				"CHECKSUM": "Checksum:",
+				"DIRECT_URL": "URL diretto:",
+				"DURATION": "Durata:",
+				"SIZE": "Dimensione:",
+				"PROFILE": "Profilo:",
+				"SIZE_W_X_H": "{{width}}x{{height}}",
+				"SIZE_W_X_H_BITRATE": "{{width}}x{{height}}, {{bitrate}} Kb/s",
+				"VIEWS": "Visualizzazioni: {{number}}",
+				"VIEWERS": "Visualizzatori: {{number}}",
+				"ACCESS_LEVEL": "Questa registrazione è impostata su Privata. Modificare il livello di accesso utente a Pubblica per condividere questo video con il pubblico."
+			},
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "Possono accedere alla registrazione:",
+				"ACCESS_FOOTNOTE": "*Se è stato immesso un PIN di accesso in precedenza, verrà richiesto per l'accesso alla registrazione.",
+				"ONLY_ME": "Privata (solo io)",
+				"ONLY_FOLLOWING_USERS": "Privata - utenti selezionati",
+				"ALL_AUTH_USERS": "Tutti gli utenti autenticati",
+				"ALL_USERS": "Pubblica (tutti gli utenti)",
+				"ADD_ALL": "Aggiungi tutti i partecipanti conosciuti",
+				"NAME_OR_USER_ID": "Immetti nome o ID utente",
+				"N_SELECTED": "{{n}} selezionato/i",
+				"CHANGE_LEVEL": "Con la modifica del livello di accesso utente a Pubblica, chiunque potrà visualizzare questa registrazione",
+				"DOWNLOAD_RECORDING": "Scaricare la registrazione",
+				"SEE_RECORDING_IN_USER_PORTAL": "Visualizzare la registrazione nel portale utente",
+				"ALLOW_USER": "Consenti a questi utenti di"
+			},
+			"ERROR": {
+				"INVALID_TITLE": "Il nome utente non può essere vuoto!"
+			},
+			"UPLOAD": "Aggiungere un'immagine per aiutare gli utenti a identificare la registrazione",
+			"THUMBNAIL": "Anteprima video",
+			"RECORDING_INFO_TAB_NAME": "Informazioni sulla registrazione",
+			"USER_ACCESS_TAB_NAME": "Accesso utente",
+			"RECORDING_MAIN_TAB_NAME": "Principale",
+			"CLOSE": "Chiudi",
+			"VIEW_RECORDING_DETAILS": "Visualizza dettagli registrazione",
+			"EDIT_RECORDING_DETAILS": "Modifica dettagli registrazione",
+			"DESCRIPTION": "Descrizione:",
+			"CATEGORY": "Categoria:",
+			"ACCESS_PIN": "PIN accesso:",
+			"ADD_CATEGORY": "Aggiungi categoria",
+			"OPTIONAL": "Opzionale",
+			"REQUIRED": "Obbligatorio",
+			"ALLOW_RECORDING_TO_BE_DOWNLOADED": "Consenti scaricamento registrazione",
+			"SHOW_PUBLICLY": "Mostra pubblicamente nel portale",
+			"SAVE": "Salva",
+			"CANCEL": "Annulla",
+			"ENTER_DESCRIPTION": "Immetti una descrizione",
+			"RECORDING_TITLE": "Titolo"
+		},
+		"BROADCAST_DETAILS": {
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "Possono accedere alla trasmissione:",
+				"SEE_BROADCAST_IN_USER_PORTAL": "Visualizzare la trasmissione nel portale utente"
+			},
+			"BROADCAST_DETAILS": "Dettagli trasmissione",
+			"VIEW_BROADCAST_DETAILS": "Visualizza dettagli trasmissione",
+			"EDIT_BROADCAST_DETAILS": "Modifica dettagli trasmissione",
+			"BROADCAST_INFO_TAB_NAME": "Informazioni sulla trasmissione"
+		},
+		"NOW": "In corso",
+		"HAPPENING_TODAY": "In programma oggi",
+		"RECENTLY_ADDED": "Aggiunte di recente",
+		"MOST_VIEWED": "Più visualizzate",
+		"UPCOMING": "Riunioni imminenti",
+		"LATER_TODAY": "Più tardi oggi",
+		"TOMORROW": "Domani",
+		"VIEW_DETAILS": "Visualizza dettagli",
+		"EDIT_DETAILS": "Modifica dettagli",
+		"BROADCAST_MODERATE": "Modera",
+		"COPY_LINK": "Copia collegamento",
+		"SHARE_LINK": "Condividi via e-mail",
+		"DOWNLOAD": "Scarica",
+		"DELETE": "Elimina",
+		"RECOVER": "Recupera",
+		"TODAY": "Oggi",
+		"YESTERDAY": "Ieri",
+		"TRASH_NOTICE": "Gli elementi nel Cestino verranno eliminati automaticamente dopo {{n}} giorni",
+		"DELETE_ALL": "Elimina tutto",
+		"RECOVER_ALL": "Recupera tutto",
+		"PAGE": "Pagina",
+		"OF": "di {{n}}",
+		"SHOW": "Mostra:",
+		"ITEMS": "elementi",
+		"LOAD_MORE": "Carica altro",
+		"RESULTS": "{{n}} risultati",
+		"RESULT": "1 risultato",
+		"SHOWING": "(che mostrano {{first}}-{{second}})",
+		"TYPE_IN_SEARCH": "Immettere i termini di ricerca e premere Invio",
+		"SEARCHING": "Ricerca in corso...",
+		"NO_RECOMMENDED": "Nessuna registrazione consigliata",
+		"NO_BROADCASTS": "Non ci sono eventi dal vivo",
+		"NO_RECORDINGS": "Nessuna registrazione",
+		"NO_ACCESS": "<a class='sign-in'>Accedere</a> o utilizzare il collegamento fornito per visualizzare la registrazione o l'evento.",
+		"VIEWS": "{{n}} visualizzazioni",
+		"VIEWERS": "{{n}} visualizzatori",
+		"CANCEL": "Annulla",
+		"CONTINUE": "Continua",
+		"ERROR": {
+			"DOWNLOAD": "Errore di download",
+			"DOWNLOAD_LINK": "Il collegamento del download non è disponibile",
+			"RECORDING_DELETED": "La registrazione è stata eliminata. Per riprodurre la registrazione, è necessario ripristinarla.",
+			"RECORDING_NOT_ACTIVE": "L'evento non è attivo.",
+			"UPDATE_FAILED": "Impossibile aggiornare la registrazione"
+		},
+		"EXPIRY": {
+			"TITLE": "Scade in data:",
+			"IN": "tra",
+			"DAY": "giorno",
+			"DAYS": "giorni",
+			"HOUR": "ora",
+			"HOURS": "ore",
+			"EXPIRED": "Scaduto"
+		},
+		"SIZE": {
+			"KB": "KB",
+			"MB": "MB",
+			"GB": "GB",
+			"TB": "TB",
+			"PB": "PB"
+		}
 	},
 	"SETTINGS": {
 		"TITLE": "Impostazioni di Avaya",
