--- a/src/assets/i18n/ko-KR.json
+++ b/src/assets/i18n/ko-KR.json
@@ -55,12 +55,294 @@
 		"VERSION_EXCLUSION_FOR_DATE_ONLY": "웹 회의를 지원하지 않는 브라우저 버전입니다. 더 나은 협업 작업 환경을 위해<br>다른 버전 또는, 다른 <span class=\"underline\">지원되는 브라우저</span>를 사용하거나 클라이언트를 다운로드하십시오.",
 		"OLD_EDGE": "사용 중인 브라우저에서는 Avaya Meetings와 호환되지 않습니다. 최상의 경험을 위해 Google Chrome 또는 최신 Microsoft Edge 로 전환하십시오."
 	},
+	"JOIN": {
+		"MEETING_DID_NOT_START": "회의가 시작하지 않는 경우",
+		"OPEN_MANUALLY": "수동으로 열기",
+		"STARTED_SWC": "회의가 새 창에서 시작되었습니다.",
+		"AUDIO_VIDEO_CHECK": "앱에서 오디오/비디오 확인이 열립니다.",
+		"STARTED_AC": "앱에서 회의가 시작되었습니다.",
+		"STARTED_CLIENT_SETTINGS": "앱에서 오디오/비디오 확인이 열립니다.",
+		"IF_SWC_NOT_STARTED": "회의가 자동으로 시작하지 않는 경우 이 <a href=\"{{link}}\" target=\"_blank\">링크</a>를 클릭하십시오.",
+		"IF_AC_NOT_STARTED": "회의가 자동으로 시작하지 않는 경우,",
+		"IF_CLIENT_SETTINGS_NOT_STARTED": "오디오/비디오 확인이 열리지 않은 경우,",
+		"JOIN_WITH_YOUR_BROWSER": "브라우저로 참가",
+		"OR": "또는",
+		"DOWNLOAD_LATEST_EQUINOX_APP": "최신 앱 다운로드",
+		"JOIN_ANOTHER": "뒤로",
+		"CAPTION": "회의에 참석합니다!",
+		"WELCOME_USER": "{{userName}} 님, 환영합니다!",
+		"USER_NAME": "이름 입력",
+		"MEETING_ID": "회의 ID 입력",
+		"JOIN": "참가",
+		"JOIN_A_MEETING": "회의 참가",
+		"MY_MEETING": "내 회의",
+		"USE_BROWSER": "브라우저에서 오디오 + 비디오 사용",
+		"IN_PROGRESS": "진행 중",
+		"YOU": "나{{separator}}",
+		"AND_N_OTHERS": " 및 다른 참가자 {{n}}명",
+		"BROWSER_AUDIO_VIDEO": "브라우저 오디오/비디오 + 프레젠테이션",
+		"USE_BROWSER_FOR_AUDIO_AND_VIDEO": "브라우저에서 오디오 + 비디오 사용",
+		"USE_BROWSER_FOR_PRESENTATION_ONLY": "브라우저에서 프레젠테이션만 사용",
+		"DOWNLOAD_CLIENT": "클라이언트 다운로드",
+		"ADJUST_AUDIO_VIDEO_DEVICES": "오디오 및 비디오 확인",
+		"PRESENTATION_ONLY": "프레젠테이션 전용",
+		"CALL_ME": "나에게 전화하기",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "일회용 PIN을. 생성하십시오(숫자만 허용).",
+			"ENTER_PIN": "PIN 입력",
+			"OK": "확인",
+			"CANCEL": "취소"
+		},
+		"ENTER_YOUR_NAME": "회의에 참가하려면 이름을 입력하십시오.",
+		"OPEN_MC": "Avaya Workplace Mobile 클라이언트를 여시겠습니까?",
+		"OK": "확인",
+		"OPEN": "열기",
+		"CANCEL": "취소",
+		"DONE": "완료",
+		"WAITING_FOR_MODERATOR": "회의가 아직 시작되지 않았습니다.",
+		"NEXT_CHECK_IN_SECS": "{{countDown}}초 후 다음 확인",
+		"CHECK_NOW": "지금 확인하기",
+		"ERROR": {
+			"CAPTION": "오류가 발생했습니다.",
+			"NOT_VALID_USER_NAME": "사용자 이름이 너무 깁니다.",
+			"NOT_VALID_MEETING_ID": "유효한 회의 ID가 아닙니다.",
+			"CONFERENCE_DOES_NOT_EXIST": "회의실을 찾을 수 없습니다. 회의 ID를 확인한 후 다시 시도하십시오.",
+			"INVALID_MEETING_ID": "입력한 회의 ID가 존재하지 않습니다. 유효한 ID를 입력해야 합니다.",
+			"SERVICE_UNAVAILABLE": "서버 또는 서버 오류로부터 응답이 없습니다. 나중에 다시 시도하십시오.",
+			"SERVICE_INTERNAL_ERROR": "서버에서 내부 오류가 발생했거나 구성이 잘못되어 요청을 완료할 수 없습니다. 서버 관리자에게 문의하십시오.",
+			"MISSING_REQUEST_PARAM": "요청 매개변수가 누락되었습니다. 관리자에게 문의하십시오.",
+			"MEETING_NOT_STARTED_YET": "회의가 아직 시작되지 않았습니다.",
+			"FAIL_TO_JOIN_UNAUTHORIZED_PARTICIPANT_ID": "회의는 인증된 사용자만 참여할 수 있습니다. 회의에 참가하기 전에 먼저 로그인해야 합니다.",
+			"TOKEN_EXPIRED": "인증 토큰이 만료되었습니다.",
+			"TOKEN_INVALID": "인증 토큰이 잘못되었습니다.",
+			"ERROR": "예기치 않은 오류가 발생했습니다. 서버 관리자에게 문의하십시오.",
+			"YOU_DONT_HAVE_VIRTUAL_ROOM": "가상 회의실이 없습니다.",
+			"WRONG_CURRENT_CONFERENCE": "현재 다자간 통화가 없습니다.",
+			"DISALLOW_INITIATE_NON_VIRTUAL_ROOM_MEETING": "비가상 회의실 회의를 시작할 수 없습니다.",
+			"FORBIDDEN_ONE_TIME_PIN_REQUIRED": "참가하도록 허용되지 않았거나 다자간 통화가 아직 시작되지 않았습니다.",
+			"ERC_LOCKED_CONFERENCE": "회의가 잠겨 있어 참가할 수 없습니다. 회의 호스트에게 잠금 해제를 요청한 뒤 다시 시도하십시오.",
+			"ERC_START_CONF_FAILED": "다자간 통화 서버에 문제가 발생했습니다. 지원 팀에 문의하십시오.",
+			"ERC_NO_DEFAULT_MCU_SERVICE_DEFINED_IN_VIRTUAL_ROOM": "다자간 통화 서버에 문제가 발생했습니다. 지원 팀에 문의하십시오.",
+			"ERC_WEB_COLLABORATION_DISABLED": "웹 협업 기능이 비활성화되어 있습니다.",
+			"ERC_VIRTUAL_ROOM_NOT_ALLOW_INSTANT_MEETING": "가상 회의실에서 바로 진행되는 회의를 허용하지 않습니다.",
+			"ERC_AUTH_ACCESS_DENIED": "게스트 액세스가 허용되지 않습니다. 로그인해 주십시오."
+		},
+		"WARNING": {
+			"NO_NAME_OR_ID": "{{noName ? '이름' : ''}}{{noName && noId ? ' 및 ' : ''}}{{noId ? '회의 ID' : ''}}을(를) 입력하십시오."
+		},
+		"GUEST": "게스트",
+		"FIRST_TIME_DOWNLOAD_SUGGESTION": "Avaya Workplace 클라이언트가 없는 경우 Avaya Workplace 클라이언트를 <a href=\"{{link}}\" target=\"_blank\">다운로드</a>하십시오.",
+		"OPTIONAL_UPGRADE_DOWNLOAD": "최신 버전의 앱을 사용할 수 있습니다. 최상의 환경을 위해서 <a href=\"\" ng-click=\"showAppIsInstalled()\" translate-once=\"{{text}}\"></a> 버전으로 업그레이드하십시오.",
+		"OPTIONAL_UPGRADE_DOWNLOAD_LINK": "최신 앱",
+		"LEGAL_TEXT": {
+			"DEFAULT": "<b>참가</b>를 클릭함으로써 이름을 회의 참가자 표시 이름으로 사용하고 더 나은 사용자 경험을 위한 브라우저 쿠키를 사용하는 데 동의하게 됩니다.",
+			"QUICK_START": "빠른 시작",
+			"APP_GUIDE": "앱 안내서",
+			"PORTAL_GUIDE": "포털 안내서",
+			"CONTACT_SUPPORT": "지원 센터 문의",
+			"AGREEMENT": "<small><b>참가</b></small>를 클릭하여 다음에 동의합니다.",
+			"TERMS": "이용 약관",
+			"PRIVACY": "개인 정보 보호 정책",
+			"DIAL_IN_NUMBER": "다이얼 번호"
+		},
+		"STARTED_MOBILE": "필요한 Avaya Workplace 앱을 설치하지 않았다면 회의에 참가하기 위해 앱을 설치해야 합니다."
+	},
 	"NAVIGATION": {
 		"JOIN": "지금 회의하기",
 		"RECORDING": "레코딩 + 이벤트",
 		"SCHEDULE": "일정",
 		"SETTINGS": "설정",
 		"SIGN_OUT": "로그아웃"
+	},
+	"RECORDINGS": {
+		"PLAYBACK": {
+			"QA": "Q & A",
+			"RELATED_VIDEOS": "관련 비디오",
+			"BROWSE": "찾아보기",
+			"VIDEO_DATE_AT": "{{date1}} {{date2}}",
+			"NOT_ACTIVE": "이벤트가 활성화 되어있지 않습니다."
+		},
+		"CHAT": {
+			"NEW_ONLY": "새 항목만 표시",
+			"QUESTIONS_AND_ANSWERS": "질문과 답변",
+			"ENTER_QUESTION": "호스트에게 질문 입력",
+			"ENTER_RESPONSE": "{{name}}님에게 회신 입력",
+			"ME": "나",
+			"GUEST": "게스트",
+			"REPLY_TO": "{{name}}님에 회신",
+			"NAME_REQUEST": {
+				"TITLE": "이름을 입력하여 Q & A에 참가",
+				"JOIN_QA": "Q & A에 참가",
+				"PLACE_HOLDER": "이름"
+			},
+			"PIN_REQUEST": {
+				"TITLE": "Q&A 호스트 PIN 입력",
+				"PLACE_HOLDER": "PIN 입력",
+				"MODERATE": "호스트",
+				"CANCEL": "취소",
+				"ERROR": "입력한 PIN이 잘못되었습니다."
+			}
+		},
+		"PIN_REQUEST": {
+			"TITLE": "이 비디오는 PIN으로 보호되어 있습니다.",
+			"ENTER_PIN": "PIN 입력",
+			"OK": "확인",
+			"CANCEL": "취소",
+			"ERROR": "입력한 PIN이 잘못되었습니다."
+		},
+		"TAB": {
+			"RECOMMENDED": "추천",
+			"EVENTS": "이벤트",
+			"ALL_RECORDINGS": "모든 레코딩",
+			"MY_RECORDINGS": "내 레코딩",
+			"CATEGORY": "카테고리",
+			"TRASH": "삭제 항목"
+		},
+		"TABLE_HEADER": {
+			"DATE": "날짜",
+			"EXPIRY": "만료",
+			"DURATION": "길이",
+			"IMAGE": "이미지",
+			"TITLE": "제목",
+			"VIEWS": "조회 수",
+			"OWNER": "소유자",
+			"SIZE": "크기"
+		},
+		"TRASH": {
+			"DELETE_ITEMS": "{{n}} 항목을 삭제하시겠습니까?",
+			"DELETE_ITEM": "1개 항목을 삭제하시겠습니까?",
+			"CANNOT_UNDONE": "실행을 취소할 수 없습니다.",
+			"DELETE": "삭제",
+			"CANCEL": "취소"
+		},
+		"SEARCH_RECORDINGS": "검색",
+		"RECORDING_DETAILS": {
+			"RECORDING_INFO": {
+				"MEETING_ID": "회의 ID:",
+				"OWNER": "소유자:",
+				"DATE": "날짜:",
+				"EXPIRY": "만료:",
+				"CHECKSUM": "체크섬:",
+				"DIRECT_URL": "다이렉트 URL",
+				"DURATION": "길이:",
+				"SIZE": "크기:",
+				"PROFILE": "프로파일:",
+				"SIZE_W_X_H": "{{width}}x{{height}}",
+				"SIZE_W_X_H_BITRATE": "{{width}}x{{height}}, {{bitrate}} Kb/s",
+				"VIEWS": "조회 수: {{number}}",
+				"VIEWERS": "조회 수: {{number}}",
+				"ACCESS_LEVEL": "이 레코딩은 비공개로 설정되어 있습니다. 사용자 액세스 수준을 공개로 변경하여 이 비디오를 공개적으로 공유하십시오."
+			},
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "레코딩 액세스 허용:",
+				"ACCESS_FOOTNOTE": "*위에 액세스 PIN을 입력한 경우 레코딩에 액세스하는 데 해당 PIN이 필요합니다.",
+				"ONLY_ME": "비공개(개인)",
+				"ONLY_FOLLOWING_USERS": "비공개 - 선택된 사용자",
+				"ALL_AUTH_USERS": "모든 인증된 사용자",
+				"ALL_USERS": "공개(모든 사용자)",
+				"ADD_ALL": "알려진 모든 참가자 추가",
+				"NAME_OR_USER_ID": "이름 또는 사용자 ID 입력",
+				"N_SELECTED": "{{n}}명 선택됨",
+				"CHANGE_LEVEL": "사용자 액세스 수준을 공개로 변경하면 누구나 이 레코딩을 볼 수 있게 됩니다.",
+				"DOWNLOAD_RECORDING": "레코딩 다운로드",
+				"SEE_RECORDING_IN_USER_PORTAL": "사용자 포털에서 레코팅 보기",
+				"ALLOW_USER": "이 사용자들에게 다음 작업 허용:"
+			},
+			"ERROR": {
+				"INVALID_TITLE": "사용자 이름은 비워둘 수 없습니다."
+			},
+			"UPLOAD": "이 레코딩을 식별하는 데 도움이 되는 이미지 추가",
+			"THUMBNAIL": "비디오 축소판",
+			"RECORDING_INFO_TAB_NAME": "레코딩 정보",
+			"USER_ACCESS_TAB_NAME": "사용자 액세스",
+			"RECORDING_MAIN_TAB_NAME": "기본 전화",
+			"CLOSE": "닫기",
+			"VIEW_RECORDING_DETAILS": "레코딩 상세정보 보기",
+			"EDIT_RECORDING_DETAILS": "레코딩 상세정보 편집",
+			"DESCRIPTION": "설명:",
+			"CATEGORY": "카테고리:",
+			"ACCESS_PIN": "액세스 PIN",
+			"ADD_CATEGORY": "카테고리 추가",
+			"OPTIONAL": "옵션",
+			"REQUIRED": "필수",
+			"ALLOW_RECORDING_TO_BE_DOWNLOADED": "레코딩 다운로드 허용",
+			"SHOW_PUBLICLY": "포털에 공개적으로 표시",
+			"SAVE": "저장",
+			"CANCEL": "취소",
+			"ENTER_DESCRIPTION": "설명 입력",
+			"RECORDING_TITLE": "제목"
+		},
+		"BROADCAST_DETAILS": {
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "브로드캐스트 액세스 허용:",
+				"SEE_BROADCAST_IN_USER_PORTAL": "사용자 포털에서 브로드캐스트 보기"
+			},
+			"BROADCAST_DETAILS": "브로드캐스트 상세정보",
+			"VIEW_BROADCAST_DETAILS": "브로드캐스트 상세정보 보기",
+			"EDIT_BROADCAST_DETAILS": "브로드캐스트 상세정보 편집",
+			"BROADCAST_INFO_TAB_NAME": "브로드캐스트 정보"
+		},
+		"NOW": "지금 진행되고 있는 이벤트",
+		"HAPPENING_TODAY": "오늘 일정",
+		"RECENTLY_ADDED": "최근에 추가된 항목",
+		"MOST_VIEWED": "조회 수가 가장 많은 항목",
+		"UPCOMING": "향후 회의",
+		"LATER_TODAY": "오늘 중 이후 시간",
+		"TOMORROW": "내일",
+		"VIEW_DETAILS": "상세정보 보기",
+		"EDIT_DETAILS": "상세정보 편집",
+		"BROADCAST_MODERATE": "호스트",
+		"COPY_LINK": "링크 복사",
+		"SHARE_LINK": "이메일로 공유",
+		"DOWNLOAD": "다운로드",
+		"DELETE": "삭제",
+		"RECOVER": "복구",
+		"TODAY": "오늘",
+		"YESTERDAY": "어제",
+		"TRASH_NOTICE": "삭제 항목에 있는 항목은 {{n}}일 후 자동으로 삭제됩니다.",
+		"DELETE_ALL": "모두 삭제",
+		"RECOVER_ALL": "모두 복원",
+		"PAGE": "페이지",
+		"OF": "/ {{n}}",
+		"SHOW": "표시:",
+		"ITEMS": "개 항목",
+		"LOAD_MORE": "추가 로드",
+		"RESULTS": "{{n}}개 결과",
+		"RESULT": "1개 결과",
+		"SHOWING": "({{first}}~{{second}} 표시)",
+		"TYPE_IN_SEARCH": "검색을 입력한 후 Enter 키를 누르십시오.",
+		"SEARCHING": "검색 중...",
+		"NO_RECOMMENDED": "추천 레코딩이 없습니다.",
+		"NO_BROADCASTS": "실시간 이벤트가 없습니다",
+		"NO_RECORDINGS": "레코딩이 없습니다",
+		"NO_ACCESS": "레코딩 또는 이벤트를 보려면 <a class='sign-in'>로그인</a>하거나 제공된 링크를 이용하십시오.",
+		"VIEWS": "조회 수 {{n}}",
+		"VIEWERS": "{{n}} 뷰어",
+		"CANCEL": "취소",
+		"CONTINUE": "계속",
+		"ERROR": {
+			"DOWNLOAD": "다운로드 에러",
+			"DOWNLOAD_LINK": "다운로드 링크가 사용 불가합니다.",
+			"RECORDING_DELETED": "레코딩이 삭제되었습니다. 재생하려면 레코딩을 복원해야 합니다.",
+			"RECORDING_NOT_ACTIVE": "이벤트가 활성화되어 있지 않습니다.",
+			"UPDATE_FAILED": "레코딩을 업데이트하지 못했습니다."
+		},
+		"EXPIRY": {
+			"TITLE": "만료 날짜:",
+			"IN": "기한 -",
+			"DAY": "일",
+			"DAYS": "일",
+			"HOUR": "시간",
+			"HOURS": "시간",
+			"EXPIRED": "만료됨"
+		},
+		"SIZE": {
+			"KB": "KB",
+			"MB": "MB",
+			"GB": "GB",
+			"TB": "TB",
+			"PB": "PB"
+		}
 	},
 	"SETTINGS": {
 		"TITLE": "Avaya 설정",
