--- a/src/assets/i18n/pl-PL.json
+++ b/src/assets/i18n/pl-PL.json
@@ -55,12 +55,294 @@
 		"VERSION_EXCLUSION_FOR_DATE_ONLY": "Twoja wersja przeglądarki nie obsługuje konferencji internetowych. Aby poprawić jakość współpracy,<br>wypróbuj inną wersję, inne <span class=\"underline\">obsługiwane przeglądarki</span> lub pobierz klienta.",
 		"OLD_EDGE": "Twoja przeglądarka nie jest kompatybilna z Avaya Meetings. Najlepszą jakość zapewnia Google Chrome lub najnowsza wersja Microsoft Edge."
 	},
+	"JOIN": {
+		"MEETING_DID_NOT_START": "Jeśli Twoje spotkanie nie rozpocznie się,",
+		"OPEN_MANUALLY": "otwórz je ręcznie",
+		"STARTED_SWC": "Twoje spotkanie rozpocznie się w nowym oknie",
+		"AUDIO_VIDEO_CHECK": "Kontrola audio/wideo otwarta w aplikacji",
+		"STARTED_AC": "Twoje spotkanie rozpoczęło się w aplikacji",
+		"STARTED_CLIENT_SETTINGS": "Kontrola audio/wideo otwarta w aplikacji",
+		"IF_SWC_NOT_STARTED": "Jeśli spotkanie nie rozpocznie się automatycznie, kliknij na <a href=\"{{link}}\" target=\"_blank\">łącze</a>.",
+		"IF_AC_NOT_STARTED": "Jeśli spotkanie nie rozpoczęło się automatycznie, możesz ",
+		"IF_CLIENT_SETTINGS_NOT_STARTED": "Jeśli kontrola audio/wideo nie otworzyła się,",
+		"JOIN_WITH_YOUR_BROWSER": "dołącz przez przeglądarkę internetową",
+		"OR": "lub",
+		"DOWNLOAD_LATEST_EQUINOX_APP": "Pobierz najnowszą wersję aplikacji",
+		"JOIN_ANOTHER": "Powrót",
+		"CAPTION": "Przejdźmy do spotkania!",
+		"WELCOME_USER": "Witaj {{userName}}!",
+		"USER_NAME": "Wprowadź swoją nazwę",
+		"MEETING_ID": "Wprowadź ID spotkania",
+		"JOIN": "Dołącz",
+		"JOIN_A_MEETING": "Dołącz do spotkania",
+		"MY_MEETING": "Moje spotkanie",
+		"USE_BROWSER": "Używaj przeglądarki dla audio i wideo",
+		"IN_PROGRESS": "W trakcie",
+		"YOU": "Ty{{separator}}",
+		"AND_N_OTHERS": " + {{n}} innych",
+		"BROWSER_AUDIO_VIDEO": "Przeglądarka audio/wideo + prezentacja",
+		"USE_BROWSER_FOR_AUDIO_AND_VIDEO": "Używaj przeglądarki dla audio i wideo",
+		"USE_BROWSER_FOR_PRESENTATION_ONLY": "Użyj przeglądarki tylko na potrzeby prezentacji",
+		"DOWNLOAD_CLIENT": "Pobierz klienta",
+		"ADJUST_AUDIO_VIDEO_DEVICES": "Kontrola dźwięku/obrazu wideo",
+		"PRESENTATION_ONLY": "Tylko prezentacja",
+		"CALL_ME": "Zadzwoń do mnie",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "Utwórz jednorazowy PIN. Dozwolone są tylko znaki numeryczne.",
+			"ENTER_PIN": "Wprowadź PIN",
+			"OK": "OK",
+			"CANCEL": "Anuluj"
+		},
+		"ENTER_YOUR_NAME": "Wprowadź swoją nazwę, aby dołączyć do spotkania",
+		"OPEN_MC": "Otworzyć aplikację Avaya Workplace Mobile Client?",
+		"OK": "OK",
+		"OPEN": "Otwórz",
+		"CANCEL": "Anuluj",
+		"DONE": "Gotowe",
+		"WAITING_FOR_MODERATOR": "Spotkanie jeszcze się nie rozpoczęło",
+		"NEXT_CHECK_IN_SECS": "Następne spotkanie za {{countDown}} sek.",
+		"CHECK_NOW": "Sprawdź teraz",
+		"ERROR": {
+			"CAPTION": "Wystąpił błąd",
+			"NOT_VALID_USER_NAME": "Nazwa użytkownika jest za długa",
+			"NOT_VALID_MEETING_ID": "Nieprawidłowy ID spotkania!",
+			"CONFERENCE_DOES_NOT_EXIST": "Nie znaleziono pokoju tego spotkania. Sprawdź ID spotkania i spróbuj ponownie.",
+			"INVALID_MEETING_ID": "Wprowadzony ID spotkania nie istnieje. Wprowadź prawidłowy ID.",
+			"SERVICE_UNAVAILABLE": "Brak odpowiedzi ze strony serwera lub błąd serwera. Spróbuj ponownie później.",
+			"SERVICE_INTERNAL_ERROR": "Serwer napotkał wewnętrzny błąd lub błędną konfigurację i nie był w stanie zrealizować żądania użytkownika. Skontaktuj się z administratorem serwera.",
+			"MISSING_REQUEST_PARAM": "Brak parametru żądania. Sprawdź u swojego administratora.",
+			"MEETING_NOT_STARTED_YET": "Spotkanie jeszcze się nie rozpoczęło",
+			"FAIL_TO_JOIN_UNAUTHORIZED_PARTICIPANT_ID": "Spotkanie dostępne tylko dla upoważnionych użytkowników. Przed dołączeniem do spotkania musisz się zalogować.",
+			"TOKEN_EXPIRED": "Wygasł token uwierzytelniania.",
+			"TOKEN_INVALID": "Token uwierzytelniania jest nieprawidłowy.",
+			"ERROR": "Wystąpił nieoczekiwany błąd. Skontaktuj się z administratorem serwera.",
+			"YOU_DONT_HAVE_VIRTUAL_ROOM": "Nie masz wirtualnego pokoju.",
+			"WRONG_CURRENT_CONFERENCE": "Bieżąca konferencja nie istnieje",
+			"DISALLOW_INITIATE_NON_VIRTUAL_ROOM_MEETING": "Nie można uruchomić spotkania w pokoju, który nie jest wirtualny",
+			"FORBIDDEN_ONE_TIME_PIN_REQUIRED": "Nie możesz dołączyć do spotkania lub konferencja jeszcze się nie rozpoczęła",
+			"ERC_LOCKED_CONFERENCE": "Nie możesz dołączyć do spotkania, ponieważ jest zablokowane. Poproś moderatora, aby odblokował spotkanie i połącz się ponownie.",
+			"ERC_START_CONF_FAILED": "Wystąpił problem związany z serwerem konferencji. Skontaktuj się z zespołem wsparcia.",
+			"ERC_NO_DEFAULT_MCU_SERVICE_DEFINED_IN_VIRTUAL_ROOM": "Wystąpił problem związany z serwerem konferencji. Skontaktuj się z zespołem wsparcia.",
+			"ERC_WEB_COLLABORATION_DISABLED": "Współpraca sieciowa jest wyłączona",
+			"ERC_VIRTUAL_ROOM_NOT_ALLOW_INSTANT_MEETING": "Wirtualny pokój nie umożliwia natychmiastowych spotkań",
+			"ERC_AUTH_ACCESS_DENIED": "Dostęp gości nie jest dozwolony. Zaloguj się."
+		},
+		"WARNING": {
+			"NO_NAME_OR_ID": "Wprowadź {{noName ? 'swoją nazwę' : ''}}{{noName && noId ? ' i ' : ''}}{{noId ? 'ID spotkania' : ''}}"
+		},
+		"GUEST": "Gość",
+		"FIRST_TIME_DOWNLOAD_SUGGESTION": "Jeśli nie masz klienta Avaya Workplace, <a href=\"{{link}}\" target=\"_blank\">pobierz</a> go.",
+		"OPTIONAL_UPGRADE_DOWNLOAD": "Dostępna jest nowa wersja aplikacji. Aby poprawić jakość, zaktualizuj do <a href=\"\" ng-click=\"showAppIsInstalled()\" translate-once=\"{{text}}\"></a>",
+		"OPTIONAL_UPGRADE_DOWNLOAD_LINK": "najnowszej wersji aplikacji.",
+		"LEGAL_TEXT": {
+			"DEFAULT": "Klikając <b>DOŁĄCZ</b>, użytkownik zgadza się używać swojego imienia jako nazwy uczestnika spotkania i korzystać z plików cookie.",
+			"QUICK_START": "Szybki start",
+			"APP_GUIDE": "Podręcznik aplikacji",
+			"PORTAL_GUIDE": "Podręcznik portalu",
+			"CONTACT_SUPPORT": "Skontaktuj się z zespołem wsparcia",
+			"AGREEMENT": "Klikając <small><b>DOŁĄCZ</b></small>, zgadzasz się na te ",
+			"TERMS": "warunki.",
+			"PRIVACY": "Oświadczenie o ochronie prywatności",
+			"DIAL_IN_NUMBER": "Numer połączenia telefonicznego"
+		},
+		"STARTED_MOBILE": "Jeśli nie masz zainstalowanej aplikacji Avaya Workplace, musisz ją zainstalować, aby dołączyć do spotkania."
+	},
 	"NAVIGATION": {
 		"JOIN": "Spotkaj się teraz",
 		"RECORDING": "Nagrania i zdarzenia",
 		"SCHEDULE": "Zaplanuj",
 		"SETTINGS": "Ustawienia",
 		"SIGN_OUT": "Wyloguj się"
+	},
+	"RECORDINGS": {
+		"PLAYBACK": {
+			"QA": "Pytania i odpowiedzi",
+			"RELATED_VIDEOS": "Powiązane wideo",
+			"BROWSE": "Przeglądaj",
+			"VIDEO_DATE_AT": "{{date1}} w {{date2}}",
+			"NOT_ACTIVE": "Zdarzenie nie jest aktywne"
+		},
+		"CHAT": {
+			"NEW_ONLY": "Pokaż tylko nowe elementy",
+			"QUESTIONS_AND_ANSWERS": "Pytania i odpowiedzi",
+			"ENTER_QUESTION": "Wpisz pytanie do moderatora",
+			"ENTER_RESPONSE": "Wpisz odpowiedź dla",
+			"ME": "Ja",
+			"GUEST": "Gość",
+			"REPLY_TO": "Odpowiedz uczestnikowi {{name}}",
+			"NAME_REQUEST": {
+				"TITLE": "Wpisz swoją nazwę, aby dołączyć do sesji pytań i odpowiedzi",
+				"JOIN_QA": "Dołącz do sesji pytań i odpowiedzi",
+				"PLACE_HOLDER": "Nazwa"
+			},
+			"PIN_REQUEST": {
+				"TITLE": "Wprowadź kod PIN moderatora dla sesji pytań i odpowiedzi",
+				"PLACE_HOLDER": "Wprowadź PIN",
+				"MODERATE": "Moderuj",
+				"CANCEL": "Anuluj",
+				"ERROR": "Wprowadzony PIN jest nieprawidłowy"
+			}
+		},
+		"PIN_REQUEST": {
+			"TITLE": "To wideo jest chronione kodem PIN",
+			"ENTER_PIN": "Wprowadź PIN",
+			"OK": "OK",
+			"CANCEL": "Anuluj",
+			"ERROR": "Wprowadzony PIN jest nieprawidłowy"
+		},
+		"TAB": {
+			"RECOMMENDED": "Zalecane",
+			"EVENTS": "Zdarzenia",
+			"ALL_RECORDINGS": "Wszystkie nagrania",
+			"MY_RECORDINGS": "Moje nagrania",
+			"CATEGORY": "Kategoria",
+			"TRASH": "Kosz"
+		},
+		"TABLE_HEADER": {
+			"DATE": "Data",
+			"EXPIRY": "Wygasanie",
+			"DURATION": "Czas trwania",
+			"IMAGE": "Obraz",
+			"TITLE": "Tytuł",
+			"VIEWS": "Wyświetlenia",
+			"OWNER": "Właściciel",
+			"SIZE": "Rozmiar"
+		},
+		"TRASH": {
+			"DELETE_ITEMS": "Czy usunąć elementy: {{n}}?",
+			"DELETE_ITEM": "Czy usunąć 1 element?",
+			"CANNOT_UNDONE": "Nie można cofnąć",
+			"DELETE": "Usuń",
+			"CANCEL": "Anuluj"
+		},
+		"SEARCH_RECORDINGS": "Szukaj",
+		"RECORDING_DETAILS": {
+			"RECORDING_INFO": {
+				"MEETING_ID": "ID spotkania:",
+				"OWNER": "Właściciel:",
+				"DATE": "Data:",
+				"EXPIRY": "Wygaśnie:",
+				"CHECKSUM": "Suma kontrolna:",
+				"DIRECT_URL": "Bezpośredni adres URL:",
+				"DURATION": "Czas trwania:",
+				"SIZE": "Rozmiar:",
+				"PROFILE": "Profil:",
+				"SIZE_W_X_H": "{{width}}x{{height}}",
+				"SIZE_W_X_H_BITRATE": "{{width}}x{{height}}, {{bitrate}} kb/s",
+				"VIEWS": "Wyświetlenia: {{number}}",
+				"VIEWERS": "Oglądających: {{number}}",
+				"ACCESS_LEVEL": "To nagranie jest ustawione jako prywatne. Zmień poziom dostępu na publiczne, aby udostępnić to wideo publicznie."
+			},
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "Do tego nagrania mają dostęp:",
+				"ACCESS_FOOTNOTE": "*Jeśli został wprowadzony powyżej PIN dostępu, będzie konieczny do uzyskania dostępu do nagrania.",
+				"ONLY_ME": "Prywatny (tylko ja)",
+				"ONLY_FOLLOWING_USERS": "Prywatny – wybrani użytkownicy",
+				"ALL_AUTH_USERS": "Wszyscy uwierzytelnieni użytkownicy",
+				"ALL_USERS": "Publiczny (wszyscy użytkownicy)",
+				"ADD_ALL": "Dodaj wszystkich znanych uczestników",
+				"NAME_OR_USER_ID": "Wprowadź nazwę lub ID użytkownika",
+				"N_SELECTED": "Wybrano: {{n}}",
+				"CHANGE_LEVEL": "Zmiana poziomu dostępu użytkownika na publiczny pozwoli wszystkim na oglądanie tego nagrania",
+				"DOWNLOAD_RECORDING": "Pobierz nagranie",
+				"SEE_RECORDING_IN_USER_PORTAL": "Zobacz nagranie w portalu użytkownika",
+				"ALLOW_USER": "Zezwól tym użytkownikom na"
+			},
+			"ERROR": {
+				"INVALID_TITLE": "Nazwa nagrania nie może być pusta"
+			},
+			"UPLOAD": "Dodaj obraz, aby pomóc oglądającym w identyfikacji tego nagrania",
+			"THUMBNAIL": "Miniatura obrazu wideo",
+			"RECORDING_INFO_TAB_NAME": "Informacje o nagraniu",
+			"USER_ACCESS_TAB_NAME": "Dostęp użytkownika",
+			"RECORDING_MAIN_TAB_NAME": "Główny",
+			"CLOSE": "Zamknij",
+			"VIEW_RECORDING_DETAILS": "Pokaż szczegóły nagrania",
+			"EDIT_RECORDING_DETAILS": "Edytuj szczegóły nagrania",
+			"DESCRIPTION": "Opis:",
+			"CATEGORY": "Kategoria:",
+			"ACCESS_PIN": "Kod PIN dostępu:",
+			"ADD_CATEGORY": "Dodaj kategorię",
+			"OPTIONAL": "Opcjonalne",
+			"REQUIRED": "Wymagane",
+			"ALLOW_RECORDING_TO_BE_DOWNLOADED": "Zezwól na pobieranie nagrania",
+			"SHOW_PUBLICLY": "Pokaż publicznie w portalu",
+			"SAVE": "Zapisz",
+			"CANCEL": "Anuluj",
+			"ENTER_DESCRIPTION": "Wprowadź opis",
+			"RECORDING_TITLE": "Tytuł"
+		},
+		"BROADCAST_DETAILS": {
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "Do tej transmisji mają dostęp:",
+				"SEE_BROADCAST_IN_USER_PORTAL": "Zobacz transmisję w portalu użytkownika"
+			},
+			"BROADCAST_DETAILS": "Szczegóły transmisji",
+			"VIEW_BROADCAST_DETAILS": "Pokaż szczegóły transmisji",
+			"EDIT_BROADCAST_DETAILS": "Edytuj szczegóły transmisji",
+			"BROADCAST_INFO_TAB_NAME": "Informacje o transmisji"
+		},
+		"NOW": "Odbywające się teraz",
+		"HAPPENING_TODAY": "Dzisiejsze zdarzenia",
+		"RECENTLY_ADDED": "Dodane niedawno",
+		"MOST_VIEWED": "Najczęściej wyświetlane",
+		"UPCOMING": "Najbliższe spotkania",
+		"LATER_TODAY": "Najnowsze dziś",
+		"TOMORROW": "Jutro",
+		"VIEW_DETAILS": "Pokaż szczegóły",
+		"EDIT_DETAILS": "Edytuj szczegóły",
+		"BROADCAST_MODERATE": "Moderuj",
+		"COPY_LINK": "Kopiuj łącze",
+		"SHARE_LINK": "Udostępnij pocztą e-mail",
+		"DOWNLOAD": "Pobierz",
+		"DELETE": "Usuń",
+		"RECOVER": "Odzyskaj",
+		"TODAY": "Dzisiaj",
+		"YESTERDAY": "Wczoraj",
+		"TRASH_NOTICE": "Pozycje w koszu zostaną automatycznie usunięte po upływie {{n}} dni",
+		"DELETE_ALL": "Usuń wszystko",
+		"RECOVER_ALL": "Odzyskaj wszystkie",
+		"PAGE": "Strona",
+		"OF": "z {{n}}",
+		"SHOW": "Pokaż:",
+		"ITEMS": "elementy",
+		"LOAD_MORE": "Załaduj więcej",
+		"RESULTS": "wyników: {{n}}",
+		"RESULT": "1 wynik",
+		"SHOWING": "(wyświetlanie {{first}}-{{second}})",
+		"TYPE_IN_SEARCH": "Wpisz wyszukiwanie i naciśnij Enter",
+		"SEARCHING": "Trwa wyszukiwanie...",
+		"NO_RECOMMENDED": "Nie ma polecanych nagrań",
+		"NO_BROADCASTS": "Nie ma wydarzeń na żywo",
+		"NO_RECORDINGS": "Brak nagrań",
+		"NO_ACCESS": "<a class='sign-in'>Zaloguj się</a> lub kliknij poniższy link by zobaczyć nagranie lub wydarzenie.",
+		"VIEWS": "wyświetleń: {{n}}",
+		"VIEWERS": "{{n}} oglądający(ch)",
+		"CANCEL": "Anuluj",
+		"CONTINUE": "Kontynuuj",
+		"ERROR": {
+			"DOWNLOAD": "Błąd pobierania",
+			"DOWNLOAD_LINK": "Łącze pobierania nie jest dostępne.",
+			"RECORDING_DELETED": "Nagranie zostało usunięte. Aby je odtworzyć, należy je najpierw przywrócić.",
+			"RECORDING_NOT_ACTIVE": "Wydarzenie jest nieaktywne.",
+			"UPDATE_FAILED": "Zaktualizowanie nagrania nie powiodło się"
+		},
+		"EXPIRY": {
+			"TITLE": "Czas wygaśnięcia:",
+			"IN": " ",
+			"DAY": "dzień",
+			"DAYS": "dni",
+			"HOUR": "godz.",
+			"HOURS": "godz.",
+			"EXPIRED": "Wygasło"
+		},
+		"SIZE": {
+			"KB": "kb",
+			"MB": "MB",
+			"GB": "GB",
+			"TB": "TB",
+			"PB": "PB"
+		}
 	},
 	"SETTINGS": {
 		"TITLE": "Ustawienia Avaya",
