--- a/src/assets/i18n/ru-RU.json
+++ b/src/assets/i18n/ru-RU.json
@@ -55,12 +55,294 @@
 		"VERSION_EXCLUSION_FOR_DATE_ONLY": "Ваша версия браузера не поддерживает веб-конференции. Для оптимальной совместной работы<br>попробуйте другую версию, другой <span class=\"underline\">поддерживаемый браузер</span>, или загрузите клиент.",
 		"OLD_EDGE": "Ваш браузер несовместим с Avaya Meetings. Для оптимальной работы переключитесь на Google Chrome или последнюю версию Microsoft Edge."
 	},
+	"JOIN": {
+		"MEETING_DID_NOT_START": "Если ваше собрание не началось,",
+		"OPEN_MANUALLY": "откройте его вручную",
+		"STARTED_SWC": "Ваше собрание началось в новом окне",
+		"AUDIO_VIDEO_CHECK": "Проверка аудио/видео открылась в приложении",
+		"STARTED_AC": "Ваше собрание началось в приложении",
+		"STARTED_CLIENT_SETTINGS": "Проверка аудио/видео открылась в приложении",
+		"IF_SWC_NOT_STARTED": "Если собрание не началось автоматически, перейдите по этой <a href=\"{{link}}\" target=\"_blank\">ссылке</a>.",
+		"IF_AC_NOT_STARTED": "Если собрание не началось автоматически, вы можете ",
+		"IF_CLIENT_SETTINGS_NOT_STARTED": "Если проверка аудио/видео не открылась,",
+		"JOIN_WITH_YOUR_BROWSER": "присоединиться через браузер",
+		"OR": "или",
+		"DOWNLOAD_LATEST_EQUINOX_APP": "Загрузите последнюю версию приложения",
+		"JOIN_ANOTHER": "Назад",
+		"CAPTION": "Присоединиться к этому собранию.",
+		"WELCOME_USER": "Добро пожаловать, {{userName}}!",
+		"USER_NAME": "Введите имя",
+		"MEETING_ID": "Введите идентификатор собрания",
+		"JOIN": "Присоединиться",
+		"JOIN_A_MEETING": "Присоединиться к собранию",
+		"MY_MEETING": "Мое собрание",
+		"USE_BROWSER": "Использовать браузер для аудио и видео",
+		"IN_PROGRESS": "Выполняется",
+		"YOU": "Вы {{separator}}",
+		"AND_N_OTHERS": " и {{n}} других",
+		"BROWSER_AUDIO_VIDEO": "Аудио/видео и презентация в браузере",
+		"USE_BROWSER_FOR_AUDIO_AND_VIDEO": "Использовать браузер для аудио и видео",
+		"USE_BROWSER_FOR_PRESENTATION_ONLY": "Использовать браузер только для презентации",
+		"DOWNLOAD_CLIENT": "Загрузить клиент",
+		"ADJUST_AUDIO_VIDEO_DEVICES": "Проверка аудио и видео",
+		"PRESENTATION_ONLY": "Только презентацию",
+		"CALL_ME": "Уведомляющий вызов",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "Создайте одноразовый пин-код. Используйте только числовые значения.",
+			"ENTER_PIN": "Введите PIN-код",
+			"OK": "ОК",
+			"CANCEL": "Отмена"
+		},
+		"ENTER_YOUR_NAME": "Введите ваше имя, чтобы присоединиться к собранию",
+		"OPEN_MC": "Открыть мобильный клиент Avaya Workplace Mobile Client?",
+		"OK": "ОК",
+		"OPEN": "Открыть",
+		"CANCEL": "Отмена",
+		"DONE": "Готово",
+		"WAITING_FOR_MODERATOR": "Собрание еще не началось",
+		"NEXT_CHECK_IN_SECS": "Следующая попытка через {{countDown}} сек.",
+		"CHECK_NOW": "Повторить попытку сейчас",
+		"ERROR": {
+			"CAPTION": "Произошла ошибка",
+			"NOT_VALID_USER_NAME": "Имя пользователя слишком длинное",
+			"NOT_VALID_MEETING_ID": "Недопустимый идентификатор собрания.",
+			"CONFERENCE_DOES_NOT_EXIST": "Комната для собрания не найдена. Проверьте идентификатор собрания и повторите попытку.",
+			"INVALID_MEETING_ID": "Введенный вами идентификатор собрания не существует. Введите допустимый идентификатор.",
+			"SERVICE_UNAVAILABLE": "Сервер не отвечает, или на сервере произошла ошибка. Повторите попытку.",
+			"SERVICE_INTERNAL_ERROR": "На сервере произошла внутренняя ошибка или ошибка конфигурации, в результате чего серверу не удалось выполнить ваш запрос. Обратитесь к администратору сервера.",
+			"MISSING_REQUEST_PARAM": "Отсутствует параметр запроса. Обратитесь к вашему администратору.",
+			"MEETING_NOT_STARTED_YET": "Собрание еще не началось.",
+			"FAIL_TO_JOIN_UNAUTHORIZED_PARTICIPANT_ID": "Это собрание только для авторизованных участников. Прежде чем присоединиться к собранию, вам необходимо выполнить вход.",
+			"TOKEN_EXPIRED": "Срок действия маркера аутентификации истек.",
+			"TOKEN_INVALID": "Недопустимый маркер аутентификации.",
+			"ERROR": "Произошла непредвиденная ошибка. Обратитесь к администратору сервера.",
+			"YOU_DONT_HAVE_VIRTUAL_ROOM": "У вас нет виртуальной комнаты.",
+			"WRONG_CURRENT_CONFERENCE": "Текущая конференция не существует.",
+			"DISALLOW_INITIATE_NON_VIRTUAL_ROOM_MEETING": "Не удалось начать собрание в невиртуальной комнате.",
+			"FORBIDDEN_ONE_TIME_PIN_REQUIRED": "Вам запрещено присоединяться к конференции, или она еще не началась",
+			"ERC_LOCKED_CONFERENCE": "Вы не можете подключиться к собранию, т.к. оно было заблокировано. Попросите модератора разблокировать собрание и повторите попытку подключения.",
+			"ERC_START_CONF_FAILED": "На сервере конференций возникла проблема. Обратитесь в службу поддержки.",
+			"ERC_NO_DEFAULT_MCU_SERVICE_DEFINED_IN_VIRTUAL_ROOM": "На сервере конференций возникла проблема. Обратитесь в службу поддержки.",
+			"ERC_WEB_COLLABORATION_DISABLED": "Функции совместной работы в Интернете отключены",
+			"ERC_VIRTUAL_ROOM_NOT_ALLOW_INSTANT_MEETING": "Виртуальная комната не позволяет проводить мгновенные собрания",
+			"ERC_AUTH_ACCESS_DENIED": "Гостевой доступ не разрешен. Войдите в систему."
+		},
+		"WARNING": {
+			"NO_NAME_OR_ID": "Введите {{noName ? 'ваше имя' : ''}}{{noName && noId ? ' и ' : ''}}{{noId ? 'идентификатор собрания' : ''}}"
+		},
+		"GUEST": "Гость",
+		"FIRST_TIME_DOWNLOAD_SUGGESTION": "Если у вас нет клиента Avaya Workplace, <a href=\"{{link}}\" target=\"_blank\">загрузите</a> его.",
+		"OPTIONAL_UPGRADE_DOWNLOAD": "Доступна новая версия приложения. Для оптимальной работы обновите версию до <a href=\"\" ng-click=\"showAppIsInstalled()\" translate-once=\"{{text}}\"></a>",
+		"OPTIONAL_UPGRADE_DOWNLOAD_LINK": "последней версии приложения.",
+		"LEGAL_TEXT": {
+			"DEFAULT": "Нажимая <b>ПРИСОЕДИНИТЬСЯ</b>, вы соглашаетесь на использование вашего имени в качестве отображаемого имени участника собрания и на использование файлов cookie браузера для оптимизации работы.",
+			"QUICK_START": "Краткое руководство",
+			"APP_GUIDE": "Руководство к приложению",
+			"PORTAL_GUIDE": "Руководство к порталу",
+			"CONTACT_SUPPORT": "Связаться со службой поддержки",
+			"AGREEMENT": "Нажимая <small><b>ПРИСОЕДИНИТЬСЯ</b></small>, вы принимаете ",
+			"TERMS": "Условия использования",
+			"PRIVACY": "Положение о конфиденциальности",
+			"DIAL_IN_NUMBER": "Номер дозвона"
+		},
+		"STARTED_MOBILE": "Если у вас не установлено необходимое приложение Avaya Workplace, установите его, чтобы вы могли присоединиться к собранию."
+	},
 	"NAVIGATION": {
 		"JOIN": "Начать собрание сейчас",
 		"RECORDING": "Записи и события",
 		"SCHEDULE": "Расписание",
 		"SETTINGS": "Настройки",
 		"SIGN_OUT": "Выход"
+	},
+	"RECORDINGS": {
+		"PLAYBACK": {
+			"QA": "Вопросы и ответы",
+			"RELATED_VIDEOS": "Похожие видео",
+			"BROWSE": "Обзор",
+			"VIDEO_DATE_AT": "{{date1}} в {{date2}}",
+			"NOT_ACTIVE": "Событие не активно"
+		},
+		"CHAT": {
+			"NEW_ONLY": "Показать только новые элементы",
+			"QUESTIONS_AND_ANSWERS": "Вопросы и ответы",
+			"ENTER_QUESTION": "Введите вопрос для модератора.",
+			"ENTER_RESPONSE": "Введите ответ для {{name}}",
+			"ME": "Я",
+			"GUEST": "Гость",
+			"REPLY_TO": "Ответить {{name}}",
+			"NAME_REQUEST": {
+				"TITLE": "Введите ваше имя, чтобы присоединиться к сеансу вопросов и ответов",
+				"JOIN_QA": "Присоединиться к сеансу вопросов и ответов",
+				"PLACE_HOLDER": "Имя"
+			},
+			"PIN_REQUEST": {
+				"TITLE": "Введите PIN-код модератора вопросов и ответов",
+				"PLACE_HOLDER": "Введите PIN-код",
+				"MODERATE": "Модерировать",
+				"CANCEL": "Отмена",
+				"ERROR": "Введен недопустимый PIN-код"
+			}
+		},
+		"PIN_REQUEST": {
+			"TITLE": "Это видео защищено PIN-кодом",
+			"ENTER_PIN": "Введите PIN-код",
+			"OK": "OK",
+			"CANCEL": "Отмена",
+			"ERROR": "Введен недопустимый PIN-код"
+		},
+		"TAB": {
+			"RECOMMENDED": "Рекомендуется",
+			"EVENTS": "События",
+			"ALL_RECORDINGS": "Все записи",
+			"MY_RECORDINGS": "Мои записи",
+			"CATEGORY": "Категория",
+			"TRASH": "Корзина"
+		},
+		"TABLE_HEADER": {
+			"DATE": "Дата",
+			"EXPIRY": "Срок действия",
+			"DURATION": "Длительность",
+			"IMAGE": "Изображение",
+			"TITLE": "Заголовок",
+			"VIEWS": "просмотров",
+			"OWNER": "Владелец",
+			"SIZE": "Размер"
+		},
+		"TRASH": {
+			"DELETE_ITEMS": "Удалить элементы: {{n}}?",
+			"DELETE_ITEM": "Удалить 1 элемент?",
+			"CANNOT_UNDONE": "Действие не может быть отменено.",
+			"DELETE": "Удалить",
+			"CANCEL": "Отмена"
+		},
+		"SEARCH_RECORDINGS": "Поиск",
+		"RECORDING_DETAILS": {
+			"RECORDING_INFO": {
+				"MEETING_ID": "Идентификатор собрания:",
+				"OWNER": "Владелец:",
+				"DATE": "Дата:",
+				"EXPIRY": "Срок действия истекает:",
+				"CHECKSUM": "Контрольная сумма:",
+				"DIRECT_URL": "Ссылка:",
+				"DURATION": "Продолжительность:",
+				"SIZE": "Размер:",
+				"PROFILE": "Профиль:",
+				"SIZE_W_X_H": "{{width}}x{{height}}",
+				"SIZE_W_X_H_BITRATE": "{{width}}x{{height}}, {{bitrate}} кбит/c",
+				"VIEWS": "Просмотров: {{number}}",
+				"VIEWERS": "Зрителей: {{number}}",
+				"ACCESS_LEVEL": "Запись указана как частная. Чтобы поделиться этим видео, выберите публичный уровень доступа пользователей."
+			},
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "Доступ к этой записи имеют:",
+				"ACCESS_FOOTNOTE": "*Если выше указан PIN-код доступа, его потребуется ввести для доступа к записи.",
+				"ONLY_ME": "Частная (только я)",
+				"ONLY_FOLLOWING_USERS": "Частная (выбранные пользователи)",
+				"ALL_AUTH_USERS": "Все аутентифицированные пользователи",
+				"ALL_USERS": "Публичная (все пользователи)",
+				"ADD_ALL": "Добавить всех известных участников",
+				"NAME_OR_USER_ID": "Введите имя или идентификатор пользователя",
+				"N_SELECTED": "Выбрано: {{n}}",
+				"CHANGE_LEVEL": "Если вы измените уровень доступа пользователей на публичный, кто угодно сможет просмотреть эту запись",
+				"DOWNLOAD_RECORDING": "Загрузить запись",
+				"SEE_RECORDING_IN_USER_PORTAL": "Просмотреть запись на пользовательском портале",
+				"ALLOW_USER": "Разрешить этим пользователям"
+			},
+			"ERROR": {
+				"INVALID_TITLE": "Поле имени пользователя не может быть пустым."
+			},
+			"UPLOAD": "Добавьте изображение, чтобы помочь пользователям узнать эту запись",
+			"THUMBNAIL": "Эскиз видео",
+			"RECORDING_INFO_TAB_NAME": "Сведения о записи",
+			"USER_ACCESS_TAB_NAME": "Доступ пользователей",
+			"RECORDING_MAIN_TAB_NAME": "Основной",
+			"CLOSE": "Закрыть",
+			"VIEW_RECORDING_DETAILS": "Просмотр сведений о записи",
+			"EDIT_RECORDING_DETAILS": "Редактировать сведения о записи",
+			"DESCRIPTION": "Описание:",
+			"CATEGORY": "Категория:",
+			"ACCESS_PIN": "PIN-код доступа:",
+			"ADD_CATEGORY": "Добавить категорию",
+			"OPTIONAL": "Необязательное",
+			"REQUIRED": "Обязательное поле.",
+			"ALLOW_RECORDING_TO_BE_DOWNLOADED": "Разрешить загрузку записи",
+			"SHOW_PUBLICLY": "Показывать на общедоступном портале",
+			"SAVE": "Сохранить",
+			"CANCEL": "Отмена",
+			"ENTER_DESCRIPTION": "Введите описание",
+			"RECORDING_TITLE": "Заголовок"
+		},
+		"BROADCAST_DETAILS": {
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "Доступ к этой трансляции имеют:",
+				"SEE_BROADCAST_IN_USER_PORTAL": "Просмотреть трансляцию на пользовательском портале"
+			},
+			"BROADCAST_DETAILS": "Сведения о трансляции",
+			"VIEW_BROADCAST_DETAILS": "Просмотр сведений о трансляции",
+			"EDIT_BROADCAST_DETAILS": "Редактировать сведения о трансляции",
+			"BROADCAST_INFO_TAB_NAME": "Сведения о трансляции"
+		},
+		"NOW": "Происходящие сейчас",
+		"HAPPENING_TODAY": "Происходит сегодня",
+		"RECENTLY_ADDED": "Недавно добавленные",
+		"MOST_VIEWED": "Самые популярные",
+		"UPCOMING": "Предстоящие собрания",
+		"LATER_TODAY": "Еще сегодня",
+		"TOMORROW": "Завтра",
+		"VIEW_DETAILS": "Просмотреть сведения",
+		"EDIT_DETAILS": "Редактировать сведения",
+		"BROADCAST_MODERATE": "Модерировать",
+		"COPY_LINK": "Копировать ссылку",
+		"SHARE_LINK": "Поделиться по эл. почте",
+		"DOWNLOAD": "Загрузить",
+		"DELETE": "Удалить",
+		"RECOVER": "Восстановить",
+		"TODAY": "Сегодня",
+		"YESTERDAY": "Вчера",
+		"TRASH_NOTICE": "Ваша корзина будет автоматически очищена через {{n}} дн.",
+		"DELETE_ALL": "Удалить все",
+		"RECOVER_ALL": "Восстановить все",
+		"PAGE": "Страница",
+		"OF": "из {{n}}",
+		"SHOW": "Показать:",
+		"ITEMS": "элем.",
+		"LOAD_MORE": "Загрузить еще",
+		"RESULTS": "Результатов: {{n}}",
+		"RESULT": "1 результат",
+		"SHOWING": "(отображено {{first}}-{{second}})",
+		"TYPE_IN_SEARCH": "Введите поисковый запрос и нажмите «Ввод»",
+		"SEARCHING": "Поиск...",
+		"NO_RECOMMENDED": "Нет рекомендованных записей.",
+		"NO_BROADCASTS": "Текущие интерактивные события отсутствуют.",
+		"NO_RECORDINGS": "Записи отсутствуют.",
+		"NO_ACCESS": "<a class='sign-in'>Войдите</a> или воспользуйтесь ссылкой для просмотра записи или события.",
+		"VIEWS": "Просмотров: {{n}}",
+		"VIEWERS": "{{n}} зрителей",
+		"CANCEL": "Отмена",
+		"CONTINUE": "Продолжить",
+		"ERROR": {
+			"DOWNLOAD": "Ошибка загрузки",
+			"DOWNLOAD_LINK": "Ссылка для загрузки недоступна.",
+			"RECORDING_DELETED": "Запись удалена.  Восстановите ее, чтобы воспроизвести.",
+			"RECORDING_NOT_ACTIVE": "Событие не активно.",
+			"UPDATE_FAILED": "Не удалось обновить запись"
+		},
+		"EXPIRY": {
+			"TITLE": "Дата истечения срока действия:",
+			"IN": "через",
+			"DAY": "день",
+			"DAYS": "дн.",
+			"HOUR": "час",
+			"HOURS": "ч.",
+			"EXPIRED": "Срок действия истек"
+		},
+		"SIZE": {
+			"KB": "КБ",
+			"MB": "МБ",
+			"GB": "ГБ",
+			"TB": "TБ",
+			"PB": "ПБ"
+		}
 	},
 	"SETTINGS": {
 		"TITLE": "Настройки Avaya",
