--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -55,12 +55,294 @@
 		"VERSION_EXCLUSION_FOR_DATE_ONLY": "您的浏览器版本不支持网络会议。为了更佳的协作体验，<br>请使用其他版本，<span class=\"underline\">其他支持的浏览器</span>，或下载客户端。",
 		"OLD_EDGE": "您的浏览器与 Avaya Meetings 不兼容。请切换到 Google Chrome 或最新的 Microsoft Edge，以获得最佳体验。"
 	},
+	"JOIN": {
+		"MEETING_DID_NOT_START": "如果会议尚未开始,",
+		"OPEN_MANUALLY": "请手动启动",
+		"STARTED_SWC": "您的会议已在新窗口开始",
+		"AUDIO_VIDEO_CHECK": "已在应用程序中开启音频/视频检查",
+		"STARTED_AC": "您的会议已在应用程序中开始",
+		"STARTED_CLIENT_SETTINGS": "已在应用程序中开启音频/视频检查",
+		"IF_SWC_NOT_STARTED": "如果会议未自动开始，请点击此<a href=\"{{link}}\" target=\"_blank\">链接</a>。",
+		"IF_AC_NOT_STARTED": "如果会议未自动开始，您可以 ",
+		"IF_CLIENT_SETTINGS_NOT_STARTED": "如果您的音频/视频检查没有开启，",
+		"JOIN_WITH_YOUR_BROWSER": "使用浏览器加入",
+		"OR": "或",
+		"DOWNLOAD_LATEST_EQUINOX_APP": "下载最新版应用程序",
+		"JOIN_ANOTHER": "返回",
+		"CAPTION": "一起加入这个会议吧！",
+		"WELCOME_USER": "{{userName}}，欢迎！",
+		"USER_NAME": "输入您的姓名",
+		"MEETING_ID": "输入会议 ID",
+		"JOIN": "加入",
+		"JOIN_A_MEETING": "加入会议",
+		"MY_MEETING": "我的会议",
+		"USE_BROWSER": "使用浏览器查看音频 + 视频",
+		"IN_PROGRESS": "正在进行",
+		"YOU": "您{{separator}}",
+		"AND_N_OTHERS": " 及其他 {{n}} 位",
+		"BROWSER_AUDIO_VIDEO": "浏览音频/视频 + 演示",
+		"USE_BROWSER_FOR_AUDIO_AND_VIDEO": "使用浏览器查看音频 + 视频",
+		"USE_BROWSER_FOR_PRESENTATION_ONLY": "仅使用浏览器进行演示",
+		"DOWNLOAD_CLIENT": "下载客户端",
+		"ADJUST_AUDIO_VIDEO_DEVICES": "音频和视频检查",
+		"PRESENTATION_ONLY": "仅演示文稿模式",
+		"CALL_ME": "呼叫本人",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "请输入一次性PIN码，仅限数字。",
+			"ENTER_PIN": "输入 PIN",
+			"OK": "确定",
+			"CANCEL": "取消"
+		},
+		"ENTER_YOUR_NAME": "请输入您的名字以加入会议",
+		"OPEN_MC": "打开 Avaya Workplace Mobile Client？",
+		"OK": "确定",
+		"OPEN": "打开",
+		"CANCEL": "取消",
+		"DONE": "完成",
+		"WAITING_FOR_MODERATOR": "会议尚未开始",
+		"NEXT_CHECK_IN_SECS": "下一次检查将于 {{countDown}} 秒后开始",
+		"CHECK_NOW": "立即检查",
+		"ERROR": {
+			"CAPTION": "发生错误",
+			"NOT_VALID_USER_NAME": "用户名太长",
+			"NOT_VALID_MEETING_ID": "会议 ID 无效！",
+			"CONFERENCE_DOES_NOT_EXIST": "找不到会议室。请检查会议 ID 并重试。",
+			"INVALID_MEETING_ID": "您输入的会议 ID 不存在。请输入有效的会议 ID。",
+			"SERVICE_UNAVAILABLE": "服务器无响应或服务器出错。请稍后重试。",
+			"SERVICE_INTERNAL_ERROR": "服务器出现内部错误或配置错误，无法完成您的请求。请联系服务器管理员。",
+			"MISSING_REQUEST_PARAM": "请求参数缺失。请与您的管理员确认。",
+			"MEETING_NOT_STARTED_YET": "会议尚未开始",
+			"FAIL_TO_JOIN_UNAUTHORIZED_PARTICIPANT_ID": "此会议只允许经授权用户加入。您必须先登录，然后才能加入会议。",
+			"TOKEN_EXPIRED": "身份验证令牌已过期。",
+			"TOKEN_INVALID": "身份验证令牌无效。",
+			"ERROR": "发生意外错误。请联系服务器管理员。",
+			"YOU_DONT_HAVE_VIRTUAL_ROOM": "您没有虚拟会议室。",
+			"WRONG_CURRENT_CONFERENCE": "当前会议不存在",
+			"DISALLOW_INITIATE_NON_VIRTUAL_ROOM_MEETING": "无法发起非虚拟会议室会议",
+			"FORBIDDEN_ONE_TIME_PIN_REQUIRED": "您现在不可以加入，或会议尚未开始",
+			"ERC_LOCKED_CONFERENCE": "会议已锁定，无法加入。请联系主持人解锁后重试。",
+			"ERC_START_CONF_FAILED": "会议服务器出现问题。请联系您的支持团队。",
+			"ERC_NO_DEFAULT_MCU_SERVICE_DEFINED_IN_VIRTUAL_ROOM": "会议服务器出现问题。请联系您的支持团队。",
+			"ERC_WEB_COLLABORATION_DISABLED": "已禁用 Web 协作功能",
+			"ERC_VIRTUAL_ROOM_NOT_ALLOW_INSTANT_MEETING": "虚拟会议室不允许即时会议",
+			"ERC_AUTH_ACCESS_DENIED": "禁止访客访问。请登录。"
+		},
+		"WARNING": {
+			"NO_NAME_OR_ID": "请输入{{noName ? '您的姓名' ： ''}}{{noName && noId ? ' 和' ： ''}}{{noId ? '会议 ID' ： ''}}"
+		},
+		"GUEST": "来宾",
+		"FIRST_TIME_DOWNLOAD_SUGGESTION": "如果您尚未安装 Avaya Workplace 客户端，请<a href=\"{{link}}\" target=\"_blank\">下载</a>。",
+		"OPTIONAL_UPGRADE_DOWNLOAD": "有新版本的应用程序可用。为了获得最佳体验，请更新至 <a href=\"\" ng-click=\"showAppIsInstalled()\" translate-once=\"{{text}}\"></a>",
+		"OPTIONAL_UPGRADE_DOWNLOAD_LINK": "最新版应用程序。",
+		"LEGAL_TEXT": {
+			"DEFAULT": "点击<b>加入</b>即表示您同意您的名字用作会议参与者显示名，并同意使用浏览器 Cookie 来提供更好的用户体验。",
+			"QUICK_START": "快速入门",
+			"APP_GUIDE": "应用指南",
+			"PORTAL_GUIDE": "门户指南",
+			"CONTACT_SUPPORT": "联系支持",
+			"AGREEMENT": "点击<small><b>加入</b></small>即表示您同意 ",
+			"TERMS": "使用条款",
+			"PRIVACY": "隐私声明",
+			"DIAL_IN_NUMBER": "拨号号码"
+		},
+		"STARTED_MOBILE": "如果您尚未安装所需的 Avaya Workplace 应用程序，那么您需要先安装此应用程序才能加入会议。"
+	},
 	"NAVIGATION": {
 		"JOIN": "立即开始会议",
 		"RECORDING": "录制 + 事件",
 		"SCHEDULE": "日程安排",
 		"SETTINGS": "设置",
 		"SIGN_OUT": "注销"
+	},
+	"RECORDINGS": {
+		"PLAYBACK": {
+			"QA": "问答",
+			"RELATED_VIDEOS": "相关视频",
+			"BROWSE": "浏览",
+			"VIDEO_DATE_AT": "于{{date1}}{{date2}}",
+			"NOT_ACTIVE": "会议未激活。"
+		},
+		"CHAT": {
+			"NEW_ONLY": "仅显示新项目",
+			"QUESTIONS_AND_ANSWERS": "问题和解答",
+			"ENTER_QUESTION": "向会议主持人提问",
+			"ENTER_RESPONSE": "输入给 {{name}} 的回复",
+			"ME": "我",
+			"GUEST": "来宾",
+			"REPLY_TO": "回复给 {{name}}",
+			"NAME_REQUEST": {
+				"TITLE": "输入您的姓名以加入“问答”",
+				"JOIN_QA": "加入“问答”",
+				"PLACE_HOLDER": "姓名"
+			},
+			"PIN_REQUEST": {
+				"TITLE": "输入问答会议主持人 PIN 码",
+				"PLACE_HOLDER": "输入 PIN",
+				"MODERATE": "主持",
+				"CANCEL": "取消",
+				"ERROR": "您提供的 PIN 码无效"
+			}
+		},
+		"PIN_REQUEST": {
+			"TITLE": "此视频受 PIN 码保护",
+			"ENTER_PIN": "输入 PIN",
+			"OK": "确定",
+			"CANCEL": "取消",
+			"ERROR": "您提供的 PIN 码无效"
+		},
+		"TAB": {
+			"RECOMMENDED": "推荐",
+			"EVENTS": "事件",
+			"ALL_RECORDINGS": "所有录制",
+			"MY_RECORDINGS": "我的录制",
+			"CATEGORY": "类别",
+			"TRASH": "回收站"
+		},
+		"TABLE_HEADER": {
+			"DATE": "日期",
+			"EXPIRY": "到期日期",
+			"DURATION": "持续时间",
+			"IMAGE": "图像",
+			"TITLE": "标题",
+			"VIEWS": "浏览量",
+			"OWNER": "所有者",
+			"SIZE": "大小"
+		},
+		"TRASH": {
+			"DELETE_ITEMS": "删除 {{n}} 个项目？",
+			"DELETE_ITEM": "删除 1 个项目？",
+			"CANNOT_UNDONE": "此操作无法撤消",
+			"DELETE": "删除",
+			"CANCEL": "取消"
+		},
+		"SEARCH_RECORDINGS": "搜索",
+		"RECORDING_DETAILS": {
+			"RECORDING_INFO": {
+				"MEETING_ID": "会议 ID：",
+				"OWNER": "所有者：",
+				"DATE": "日期：",
+				"EXPIRY": "到期日期：",
+				"CHECKSUM": "校验：",
+				"DIRECT_URL": "直接 URL：",
+				"DURATION": "持续时间：",
+				"SIZE": "大小：",
+				"PROFILE": "配置文件：",
+				"SIZE_W_X_H": "{{width}}x{{height}}",
+				"SIZE_W_X_H_BITRATE": "{{width}}x{{height}}, {{bitrate}} Kb/s",
+				"VIEWS": "查看数：{{number}}",
+				"VIEWERS": "观看人数：{{number}}",
+				"ACCESS_LEVEL": "此录制的访问权限已设置为“私人”。如需共享此视频，请将访问权限更改为“公共”。"
+			},
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "具备以下权限可访问此录制：",
+				"ACCESS_FOOTNOTE": "*如果您在上面已输入了访问 PIN 码，则需要提供该访问 PIN 码才能访问此录制。",
+				"ONLY_ME": "私人(仅限我自己)",
+				"ONLY_FOLLOWING_USERS": "私人 - 选定的用户",
+				"ALL_AUTH_USERS": "所有已验证身份的用户",
+				"ALL_USERS": "公共(所有用户)",
+				"ADD_ALL": "添加所有已知的与会者",
+				"NAME_OR_USER_ID": "输入姓名或用户 ID",
+				"N_SELECTED": "已选择 {{n}} 个",
+				"CHANGE_LEVEL": "将用户访问权限级别更改为“公共”将允许任何人查看此录制",
+				"DOWNLOAD_RECORDING": "下载录制",
+				"SEE_RECORDING_IN_USER_PORTAL": "在用户门户中查看录制",
+				"ALLOW_USER": "允许这些用户"
+			},
+			"ERROR": {
+				"INVALID_TITLE": "录制名不能为空!"
+			},
+			"UPLOAD": "添加图像以帮助相关人员识别此录制",
+			"THUMBNAIL": "视频缩略图",
+			"RECORDING_INFO_TAB_NAME": "录制信息",
+			"USER_ACCESS_TAB_NAME": "用户访问权限",
+			"RECORDING_MAIN_TAB_NAME": "主要",
+			"CLOSE": "关闭",
+			"VIEW_RECORDING_DETAILS": "查看录制细节",
+			"EDIT_RECORDING_DETAILS": "编辑录制细节",
+			"DESCRIPTION": "说明：",
+			"CATEGORY": "类别：",
+			"ACCESS_PIN": "访问 PIN 码：",
+			"ADD_CATEGORY": "添加类别",
+			"OPTIONAL": "可选",
+			"REQUIRED": "必填项",
+			"ALLOW_RECORDING_TO_BE_DOWNLOADED": "允许下载录制",
+			"SHOW_PUBLICLY": "在门户中公开显示",
+			"SAVE": "保存",
+			"CANCEL": "取消",
+			"ENTER_DESCRIPTION": "输入说明",
+			"RECORDING_TITLE": "标题"
+		},
+		"BROADCAST_DETAILS": {
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "该广播可由以下访问：",
+				"SEE_BROADCAST_IN_USER_PORTAL": "在用户门户中查看广播"
+			},
+			"BROADCAST_DETAILS": "广播详细信息",
+			"VIEW_BROADCAST_DETAILS": "查看广播详细信息",
+			"EDIT_BROADCAST_DETAILS": "编辑广播详细信息",
+			"BROADCAST_INFO_TAB_NAME": "广播信息"
+		},
+		"NOW": "正在发生",
+		"HAPPENING_TODAY": "今日会议",
+		"RECENTLY_ADDED": "最近添加",
+		"MOST_VIEWED": "播放最多",
+		"UPCOMING": "即将召开的会议",
+		"LATER_TODAY": "今天晚些时候",
+		"TOMORROW": "明天",
+		"VIEW_DETAILS": "查看细节",
+		"EDIT_DETAILS": "编辑细节",
+		"BROADCAST_MODERATE": "主持",
+		"COPY_LINK": "复制链接",
+		"SHARE_LINK": "通过e-mail分享",
+		"DOWNLOAD": "下载",
+		"DELETE": "删除",
+		"RECOVER": "恢复",
+		"TODAY": "今天",
+		"YESTERDAY": "昨天",
+		"TRASH_NOTICE": "您的回收站中的项目将在 {{n}} 天后自动删除",
+		"DELETE_ALL": "全部删除",
+		"RECOVER_ALL": "全部恢复",
+		"PAGE": "页",
+		"OF": "／{{n}}",
+		"SHOW": "显示：",
+		"ITEMS": "项目",
+		"LOAD_MORE": "加载更多",
+		"RESULTS": "{{n}} 个结果",
+		"RESULT": "1 个结果",
+		"SHOWING": "（显示{{first}}-{{second}}）",
+		"TYPE_IN_SEARCH": "输入您的搜索内容，然后按 Enter",
+		"SEARCHING": "正在搜索...",
+		"NO_RECOMMENDED": "无推荐的录制",
+		"NO_BROADCASTS": "无事件",
+		"NO_RECORDINGS": "无项目",
+		"NO_ACCESS": "请<a class='sign-in'>登录</a>或使用提供的链接来查看录音或事件。",
+		"VIEWS": "{{n}} 次浏览",
+		"VIEWERS": "{{n}} 名观看者",
+		"CANCEL": "取消",
+		"CONTINUE": "继续",
+		"ERROR": {
+			"DOWNLOAD": "下载错误",
+			"DOWNLOAD_LINK": "下载链接不可用",
+			"RECORDING_DELETED": "已删除录音。需要还原录音才能播放。",
+			"RECORDING_NOT_ACTIVE": "事件处于非活动状态。",
+			"UPDATE_FAILED": "无法更新录音"
+		},
+		"EXPIRY": {
+			"TITLE": "到期日：",
+			"IN": "在",
+			"DAY": "天",
+			"DAYS": "天",
+			"HOUR": "小时",
+			"HOURS": "小时",
+			"EXPIRED": "已过期"
+		},
+		"SIZE": {
+			"KB": "KB",
+			"MB": "MB",
+			"GB": "GB",
+			"TB": "TB",
+			"PB": "PB"
+		}
 	},
 	"SETTINGS": {
 		"TITLE": "Avaya 设置",
