--- a/src/assets/i18n/cs-CZ.json
+++ b/src/assets/i18n/cs-CZ.json
@@ -55,12 +55,294 @@
 		"VERSION_EXCLUSION_FOR_DATE_ONLY": "Verze vašeho prohlížeče nepodporuje webové konference. Chcete-li používat všechny funkce<br>zkuste jinou verzi prohlížeče,<span class=\"underline\">jiný podporovaný prohlížeč</span>nebo si stáhněte aplikaci Workplace.",
 		"OLD_EDGE": "Váš prohlížeč není kompatibilní s Avaya Meetings. Chcete-li používat všechny funkce použijte nejnovější verzi prohlížeče Google Chrome nebo Microsoft Edge."
 	},
+	"JOIN": {
+		"MEETING_DID_NOT_START": "Pokud vaše schůzka nezačala,",
+		"OPEN_MANUALLY": "otevřete ji ručně",
+		"STARTED_SWC": "Vaše schůzka začala v novém okně",
+		"AUDIO_VIDEO_CHECK": "Kontrola audia/videa je již otevřena v aplikaci Workplace",
+		"STARTED_AC": "Vaše schůzka byla právě zahájena v aplikaci Workplace",
+		"STARTED_CLIENT_SETTINGS": "Kontrola audia/videa je již otevřena v aplikaci Workplace",
+		"IF_SWC_NOT_STARTED": "Pokud schůzka nebyla zahájena automaticky, klikněte na tento <a href=\"{{link}}\" target=\"_blank\">odkaz</a>.",
+		"IF_AC_NOT_STARTED": "Pokud schůzka nebyla zahájena automaticky, můžete ",
+		"IF_CLIENT_SETTINGS_NOT_STARTED": "Pokud se vaše audio/video kontrola neotevřela,",
+		"JOIN_WITH_YOUR_BROWSER": "Připojit pomocí prohlížeče",
+		"OR": "nebo",
+		"DOWNLOAD_LATEST_EQUINOX_APP": "Stáhnout nejnovější verzi aplikace Workplace",
+		"JOIN_ANOTHER": "Zpět",
+		"CAPTION": "Schůzka může nyní začít.",
+		"WELCOME_USER": "Vítejte {{userName}}",
+		"USER_NAME": "Zadejte své jméno",
+		"MEETING_ID": "Zadejte ID schůzky",
+		"JOIN": "Připojit",
+		"JOIN_A_MEETING": "Připojte se ke schůzce",
+		"MY_MEETING": "Moje schůzka",
+		"USE_BROWSER": "Použít prohlížeč pro audio a video",
+		"IN_PROGRESS": "Probíhá",
+		"YOU": "Vy{{separator}}",
+		"AND_N_OTHERS": " a dalších {{n}}",
+		"BROWSER_AUDIO_VIDEO": "Prohlížeč Audio/video + prezentace",
+		"USE_BROWSER_FOR_AUDIO_AND_VIDEO": "Použít prohlížeč pro audio a video",
+		"USE_BROWSER_FOR_PRESENTATION_ONLY": "Použít prohlížeč pouze pro prezentaci",
+		"DOWNLOAD_CLIENT": "Stáhnout aplikaci Workplace",
+		"ADJUST_AUDIO_VIDEO_DEVICES": "Kontrola audia a videa",
+		"PRESENTATION_ONLY": "Pouze prezentace",
+		"CALL_ME": "Zavolat mi zpět",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "Vytvořte si jednorázový PIN. Povoleny jsou pouze číslice.",
+			"ENTER_PIN": "Zadat PIN",
+			"OK": "OK",
+			"CANCEL": "Zrušit"
+		},
+		"ENTER_YOUR_NAME": "Chcete-li se připojit ke schůzce, zadejte své jméno.",
+		"OPEN_MC": "Otevřít mobilní aplikaci Avaya Workplace?",
+		"OK": "OK",
+		"OPEN": "Otevřít",
+		"CANCEL": "Zrušit",
+		"DONE": "Hotovo",
+		"WAITING_FOR_MODERATOR": "Schůzka ještě nezačala",
+		"NEXT_CHECK_IN_SECS": "Příští kontrola za {{countDown}} s",
+		"CHECK_NOW": "Zkontrolovat nyní",
+		"ERROR": {
+			"CAPTION": "Vyskytla se chyba",
+			"NOT_VALID_USER_NAME": "Uživatelské jméno je příliš dlouhé",
+			"NOT_VALID_MEETING_ID": "ID schůzky není platné.",
+			"CONFERENCE_DOES_NOT_EXIST": "Konferenční místnost nebyla nalezena. Zkontrolujte ID schůzky a zkuste to znovu.",
+			"INVALID_MEETING_ID": "Zadané ID schůzky neexistuje. Musíte zadat existující ID schůzky.",
+			"SERVICE_UNAVAILABLE": "Žádná odpověď ze serveru nebo chyba serveru. Zkuste to později.",
+			"SERVICE_INTERNAL_ERROR": "Na serveru došlo k interní chybě nebo nesprávné konfiguraci a server nemohl dokončit váš požadavek. Obraťte se na svého správce systému.",
+			"MISSING_REQUEST_PARAM": "Chybí parametr požadavku. Obraťte se na svého správce systému.",
+			"MEETING_NOT_STARTED_YET": "Schůzka ještě nezačala.",
+			"FAIL_TO_JOIN_UNAUTHORIZED_PARTICIPANT_ID": "Schůzka je pouze pro oprávněné uživatele. Před připojením ke schůzce se musíte nejprve přihlásit.",
+			"TOKEN_EXPIRED": "Platnost ověřovacího tokenu vypršela.",
+			"TOKEN_INVALID": "Ověřovací token je neplatný.",
+			"ERROR": "Vyskytla se neočekávaná chyba. Obraťte se na svého správce systému.",
+			"YOU_DONT_HAVE_VIRTUAL_ROOM": "Nemáte žádnou virtuální místnost.",
+			"WRONG_CURRENT_CONFERENCE": "Aktuální konference neexistuje.",
+			"DISALLOW_INITIATE_NON_VIRTUAL_ROOM_MEETING": "Nelze zahájit schůzku mimo virtuální místnost.",
+			"FORBIDDEN_ONE_TIME_PIN_REQUIRED": "Nemáte oprávnění se připojit nebo schůzka ještě nezačala.",
+			"ERC_LOCKED_CONFERENCE": "K této schůzce se nemůžete připojit, protože je uzamčena. Požádejte moderátora schůzky, aby ji odemkl, a zkuste to znovu",
+			"ERC_START_CONF_FAILED": "Došlo k problému se serverem konference. Obraťte se na svého správce systému.",
+			"ERC_NO_DEFAULT_MCU_SERVICE_DEFINED_IN_VIRTUAL_ROOM": "Došlo k problému se serverem konference. Obraťte se na svého správce systému.",
+			"ERC_WEB_COLLABORATION_DISABLED": "Funkce webové spolupráce jsou zakázány",
+			"ERC_VIRTUAL_ROOM_NOT_ALLOW_INSTANT_MEETING": "Virtuální místnost neumožňuje okamžité schůzky",
+			"ERC_AUTH_ACCESS_DENIED": "Přístup hostů není povolen. Přihlašte se prosím."
+		},
+		"WARNING": {
+			"NO_NAME_OR_ID": "Zadejte {{noName ? 'své jméno' : ''}}{{noName && noId ? ' a ' : ''}}{{noId ? 'ID schůzky' : ''}}"
+		},
+		"GUEST": "Host",
+		"FIRST_TIME_DOWNLOAD_SUGGESTION": "Pokud nemáte aplikaci Avaya Workplace, <a href=\"{{link}}\" target=\"_blank\">stáhněte</a> si ji.",
+		"OPTIONAL_UPGRADE_DOWNLOAD": "Je dostupná nová verze aplikace Workplace. Chcete-li používat všechny funkce aktualizujete na <a href=\"\" ng-click=\"showAppIsInstalled()\" translate-once=\"{{text}}\"></a>",
+		"OPTIONAL_UPGRADE_DOWNLOAD_LINK": "nejnovější aplikaci.",
+		"LEGAL_TEXT": {
+			"DEFAULT": "Kliknutím na tlačítko <b>PŘIPOJIT</b> souhlasíte s tím, že ostatní uživatelé uvidí vámi zadané jméno a s přijetím cookies v prohlížeči.",
+			"QUICK_START": "Rychlý průvodce",
+			"APP_GUIDE": "Průvodce aplikací",
+			"PORTAL_GUIDE": "Průvodce portálem",
+			"CONTACT_SUPPORT": "Kontaktovat podporu",
+			"AGREEMENT": "Kliknutím na <small><b>PŘIPOJIT</b></small> souhlasíte s: ",
+			"TERMS": "Podmínky použití",
+			"PRIVACY": "Prohlášení o ochraně soukromí",
+			"DIAL_IN_NUMBER": "Telefonické číslo"
+		},
+		"STARTED_MOBILE": "Pokud jste nenainstalovali požadovanou aplikaci Avaya Workplace, budete si ji muset nainstalovat, abyste se mohli ke schůzce připojit."
+	},
 	"NAVIGATION": {
 		"JOIN": "Zahájit schůzku",
 		"RECORDING": "Nahrávky a akce",
 		"SCHEDULE": "Plánování",
 		"SETTINGS": "Nastavení",
 		"SIGN_OUT": "Odhlásit"
+	},
+	"RECORDINGS": {
+		"PLAYBACK": {
+			"QA": "Otázky a odpovědi",
+			"RELATED_VIDEOS": "Související videa",
+			"BROWSE": "Procházet",
+			"VIDEO_DATE_AT": "{{date1}} v {{date2}}",
+			"NOT_ACTIVE": "Konferenční akce není aktivní."
+		},
+		"CHAT": {
+			"NEW_ONLY": "Zobrazit pouze nové položky",
+			"QUESTIONS_AND_ANSWERS": "Otázky a odpovědi",
+			"ENTER_QUESTION": "Zadejte otázku pro moderátora",
+			"ENTER_RESPONSE": "Zadejte odpověď pro {{name}}",
+			"ME": "Já",
+			"GUEST": "Host",
+			"REPLY_TO": "Odpovědět uživateli {{name}}",
+			"NAME_REQUEST": {
+				"TITLE": "Chcete-li se připojit k Otázkám a odpovím, zadejte své jméno.",
+				"JOIN_QA": "Připojit k Otázkám a odpovědím",
+				"PLACE_HOLDER": "Jméno"
+			},
+			"PIN_REQUEST": {
+				"TITLE": "Zadat PIN moderátora pro Otázky a odpovědi:",
+				"PLACE_HOLDER": "Zadat PIN",
+				"MODERATE": "Moderovat",
+				"CANCEL": "Zrušit",
+				"ERROR": "Zadaný PIN je neplatný."
+			}
+		},
+		"PIN_REQUEST": {
+			"TITLE": "Video je chráněné kódem PIN",
+			"ENTER_PIN": "Zadat PIN",
+			"OK": "OK",
+			"CANCEL": "Zrušit",
+			"ERROR": "Zadaný PIN je neplatný."
+		},
+		"TAB": {
+			"RECOMMENDED": "Doporučeno",
+			"EVENTS": "Konferenční akce",
+			"ALL_RECORDINGS": "Všechny nahrávky",
+			"MY_RECORDINGS": "Moje nahrávky",
+			"CATEGORY": "Kategorie",
+			"TRASH": "Koš"
+		},
+		"TABLE_HEADER": {
+			"DATE": "Datum",
+			"EXPIRY": "Platnost",
+			"DURATION": "Doba trvání",
+			"IMAGE": "Obrázek",
+			"TITLE": "Název",
+			"VIEWS": "Zhlédnutí",
+			"OWNER": "Vlastník",
+			"SIZE": "Velikost"
+		},
+		"TRASH": {
+			"DELETE_ITEMS": "Odstranit {{n}} položek?",
+			"DELETE_ITEM": "Odstranit 1 položku?",
+			"CANNOT_UNDONE": "Tuto akci nebude možné vrátit zpět.",
+			"DELETE": "Odstranit",
+			"CANCEL": "Zrušit"
+		},
+		"SEARCH_RECORDINGS": "Hledat",
+		"RECORDING_DETAILS": {
+			"RECORDING_INFO": {
+				"MEETING_ID": "ID schůzky:",
+				"OWNER": "Vlastník:",
+				"DATE": "Datum:",
+				"EXPIRY": "Platnost:",
+				"CHECKSUM": "Kontrolní součet:",
+				"DIRECT_URL": "Přímá adresa URL:",
+				"DURATION": "Doba trvání:",
+				"SIZE": "Velikost",
+				"PROFILE": "Profil:",
+				"SIZE_W_X_H": "{{width}} x {{height}}",
+				"SIZE_W_X_H_BITRATE": "{{width}} x {{height}}, {{bitrate}} Kb/s",
+				"VIEWS": "Zhlédnutí: {{number}}",
+				"VIEWERS": "Prohlížející: {{number}}",
+				"ACCESS_LEVEL": "Tato nahrávka je nastavena jako soukromá. Chcete-li toto video sdílet s veřejností, změňte úroveň přístupu na veřejnou."
+			},
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "K této nahrávce mají přístup tito:",
+				"ACCESS_FOOTNOTE": "* Pokud byl výše zadán přístupový PIN, bude vyžadován pro přístup k nahrávce.",
+				"ONLY_ME": "Pouze já (soukromé)",
+				"ONLY_FOLLOWING_USERS": "Vybraní uživatelé (soukromé)",
+				"ALL_AUTH_USERS": "Všichni ověření uživatelé",
+				"ALL_USERS": "Všichni uživatelé (veřejné)",
+				"ADD_ALL": "Přidejte všechny známé účastníky",
+				"NAME_OR_USER_ID": "Zadejte jméno nebo ID uživatele",
+				"N_SELECTED": "Vybráno: {{n}}",
+				"CHANGE_LEVEL": "Změna úrovně přístupu na veřejnou umožní komukoli tuto nahrávku přehrát.",
+				"DOWNLOAD_RECORDING": "Stáhnout nahrávku",
+				"SEE_RECORDING_IN_USER_PORTAL": "Přehrát nahrávku přímo v portálu",
+				"ALLOW_USER": "Umožnit těmto uživatelům"
+			},
+			"ERROR": {
+				"INVALID_TITLE": "Název nahrávky nesmí být prázdný."
+			},
+			"UPLOAD": "Přidejte obrázek, který pomůže lidem tuto nahrávku snáze rozpoznat.",
+			"THUMBNAIL": "Miniatura videa",
+			"RECORDING_INFO_TAB_NAME": "Informace o nahrávce",
+			"USER_ACCESS_TAB_NAME": "Uživatelský přístup",
+			"RECORDING_MAIN_TAB_NAME": "Hlavní",
+			"CLOSE": "Zavřít",
+			"VIEW_RECORDING_DETAILS": "Zobrazení podrobností nahrávky",
+			"EDIT_RECORDING_DETAILS": "Úprava podrobností nahrávky",
+			"DESCRIPTION": "Popis:",
+			"CATEGORY": "Kategorie:",
+			"ACCESS_PIN": "Přístupový PIN:",
+			"ADD_CATEGORY": "Přidat kategorii",
+			"OPTIONAL": "Volitelné",
+			"REQUIRED": "Vyžadováno",
+			"ALLOW_RECORDING_TO_BE_DOWNLOADED": "Povolit stažení nahrávky",
+			"SHOW_PUBLICLY": "Zobrazit veřejně v portálu",
+			"SAVE": "Uložit",
+			"CANCEL": "Zrušit",
+			"ENTER_DESCRIPTION": "Zadat popis",
+			"RECORDING_TITLE": "Název"
+		},
+		"BROADCAST_DETAILS": {
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "K tomuto vysílání mají přístup tito:",
+				"SEE_BROADCAST_IN_USER_PORTAL": "Přehrát vysílání přímo v portálu"
+			},
+			"BROADCAST_DETAILS": "Podrobnosti vysílání",
+			"VIEW_BROADCAST_DETAILS": "Zobrazení podrobností vysílání",
+			"EDIT_BROADCAST_DETAILS": "Úprava podrobností vysílání",
+			"BROADCAST_INFO_TAB_NAME": "Informace o vysílání"
+		},
+		"NOW": "Právě probíhá",
+		"HAPPENING_TODAY": "Konané dnes",
+		"RECENTLY_ADDED": "Naposledy přidané",
+		"MOST_VIEWED": "Nejsledovanější",
+		"UPCOMING": "Připravované schůzky",
+		"LATER_TODAY": "Dnes později",
+		"TOMORROW": "Zítra",
+		"VIEW_DETAILS": "Zobrazit podrobnosti",
+		"EDIT_DETAILS": "Upravit podrobnosti",
+		"BROADCAST_MODERATE": "Moderovat",
+		"COPY_LINK": "Kopírovat odkaz",
+		"SHARE_LINK": "Sdílet e-mailem",
+		"DOWNLOAD": "Stahování",
+		"DELETE": "Odstranit",
+		"RECOVER": "Obnovit",
+		"TODAY": "Dnes",
+		"YESTERDAY": "Včera",
+		"TRASH_NOTICE": "Položky v koši budou automaticky smazány po {{n}} dnech.",
+		"DELETE_ALL": "Odstranit vše",
+		"RECOVER_ALL": "Obnovit vše",
+		"PAGE": "Stránka",
+		"OF": "z {{n}}",
+		"SHOW": "Zobrazit",
+		"ITEMS": "položek",
+		"LOAD_MORE": "Načíst další",
+		"RESULTS": "{{n}} výsledků",
+		"RESULT": "1 výsledek",
+		"SHOWING": "(zobrazeno {{first}} - {{second}})",
+		"TYPE_IN_SEARCH": "Zadejte text pro vyhledávání a stiskněte klávesu Enter",
+		"SEARCHING": "Probíhá hledání…",
+		"NO_RECOMMENDED": "Nejsou žádné doporučené nahrávky",
+		"NO_BROADCASTS": "Nejsou žádné živé konferenční akce",
+		"NO_RECORDINGS": "Žádná nahrávky",
+		"NO_ACCESS": "<a class='sign-in'>Přihlašte se</a> nebo použijte odkaz, který jste obdrželi pro přehrání nahrávky nebo konferenční akce.",
+		"VIEWS": "Zhlédnutí: {{n}}",
+		"VIEWERS": "Prohlížející: {{n}}",
+		"CANCEL": "Zrušit",
+		"CONTINUE": "Pokračovat",
+		"ERROR": {
+			"DOWNLOAD": "Chyba stahování",
+			"DOWNLOAD_LINK": "Odkaz na stažení není k dispozici",
+			"RECORDING_DELETED": "Nahrávka byla odstraněna. Chcete-li nahrávku přehrát, je třeba ji obnovit.",
+			"RECORDING_NOT_ACTIVE": "Konferenční akce není aktivní.",
+			"UPDATE_FAILED": "Aktualizace nahrávky se nezdařila."
+		},
+		"EXPIRY": {
+			"TITLE": "Vyprší",
+			"IN": "za",
+			"DAY": "d.",
+			"DAYS": "d.",
+			"HOUR": "hod.",
+			"HOURS": "hod.",
+			"EXPIRED": "Vypršelo"
+		},
+		"SIZE": {
+			"KB": "KB",
+			"MB": "MB",
+			"GB": "GB",
+			"TB": "TB",
+			"PB": "PB"
+		}
 	},
 	"SETTINGS": {
 		"TITLE": "Nastavení",
