--- a/src/assets/i18n/es-XL.json
+++ b/src/assets/i18n/es-XL.json
@@ -55,12 +55,294 @@
 		"VERSION_EXCLUSION_FOR_DATE_ONLY": "Esta versión de navegador no es compatible con las conferencias web. Para lograr una mejor experiencia de colaboración,<br>pruebe con otra versión, otros <span class=\"underline\">navegadores compatibles</span> o descargue el cliente.",
 		"OLD_EDGE": "Su navegador no es compatible con Avaya Meetings. Cambie a Google Chrome o al último Microsoft Edge para obtener la mejor experiencia."
 	},
+	"JOIN": {
+		"MEETING_DID_NOT_START": "Si su reunión no comenzó, puede",
+		"OPEN_MANUALLY": "ábrala manualmente",
+		"STARTED_SWC": "Su reunión comenzó en otra ventana",
+		"AUDIO_VIDEO_CHECK": "Se abrió la comprobación de audio/video en la aplicación",
+		"STARTED_AC": "Su reunión comenzó en la aplicación",
+		"STARTED_CLIENT_SETTINGS": "Se abrió la comprobación de audio/video en la aplicación",
+		"IF_SWC_NOT_STARTED": "Si la reunión no comenzó automáticamente, haga clic en este <a href=\"{{link}}\" target=\"_blank\">enlace</a>.",
+		"IF_AC_NOT_STARTED": "Si la reunión no comenzó automáticamente, puede ",
+		"IF_CLIENT_SETTINGS_NOT_STARTED": "Si la comprobación de audio/video no se abrió,",
+		"JOIN_WITH_YOUR_BROWSER": "unirse con su navegador",
+		"OR": "o bien",
+		"DOWNLOAD_LATEST_EQUINOX_APP": "descargue la aplicación más reciente",
+		"JOIN_ANOTHER": "Atrás",
+		"CAPTION": "¡Entremos a esta reunión!",
+		"WELCOME_USER": "¡Bienvenido {{userName}}!",
+		"USER_NAME": "Introduzca su nombre",
+		"MEETING_ID": "Introduzca su ID de reunión",
+		"JOIN": "Unirse",
+		"JOIN_A_MEETING": "Unirse a una reunión",
+		"MY_MEETING": "Mi reunión",
+		"USE_BROWSER": "Usar navegador para audio y video",
+		"IN_PROGRESS": "En curso",
+		"YOU": "Usted{{separator}}",
+		"AND_N_OTHERS": " y {{n}} más",
+		"BROWSER_AUDIO_VIDEO": "Audio/Video del navegador + Presentación",
+		"USE_BROWSER_FOR_AUDIO_AND_VIDEO": "Usar navegador para audio y video",
+		"USE_BROWSER_FOR_PRESENTATION_ONLY": "Usar navegador sólo para presentación",
+		"DOWNLOAD_CLIENT": "Descargar cliente",
+		"ADJUST_AUDIO_VIDEO_DEVICES": "Comprobación de audio y video",
+		"PRESENTATION_ONLY": "Sólo presentación",
+		"CALL_ME": "Llámame",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "Cree un PIN de uso único. Sólo pueden usarse dígitos numéricos.",
+			"ENTER_PIN": "Introducir PIN",
+			"OK": "OK",
+			"CANCEL": "Cancelar"
+		},
+		"ENTER_YOUR_NAME": "Introduzca su nombre para unirse a la reunión",
+		"OPEN_MC": "¿Desea abrir el cliente de Avaya Workplace Mobile?",
+		"OK": "OK",
+		"OPEN": "Abrir",
+		"CANCEL": "Cancelar",
+		"DONE": "OK",
+		"WAITING_FOR_MODERATOR": "La reunión aún no comenzó",
+		"NEXT_CHECK_IN_SECS": "Próxima reunión en {{countDown}} segundos",
+		"CHECK_NOW": "Comprobar ahora",
+		"ERROR": {
+			"CAPTION": "Se produjo un error",
+			"NOT_VALID_USER_NAME": "El nombre de usuario es demasiado largo",
+			"NOT_VALID_MEETING_ID": "ID de reunión no válida",
+			"CONFERENCE_DOES_NOT_EXIST": "No se encontró la sala de reuniones. Verifique la ID de la reunión e intente nuevamente.",
+			"INVALID_MEETING_ID": "La ID de reunión que introdujo no existe. Debe introducir una ID válida.",
+			"SERVICE_UNAVAILABLE": "No hay respuesta del servidor o se produjo un error en el servidor. Vuelva a intentarlo más tarde.",
+			"SERVICE_INTERNAL_ERROR": "El servidor se encontró con un error interno o una configuración incorrecta, por lo que no se pudo completar su solicitud. Póngase en contacto con el administrador del servidor.",
+			"MISSING_REQUEST_PARAM": "Falta el parámetro de solicitud. Póngase en contacto con el administrador.",
+			"MEETING_NOT_STARTED_YET": "La reunión aún no comenzó",
+			"FAIL_TO_JOIN_UNAUTHORIZED_PARTICIPANT_ID": "La reunión es solamente para usuarios autorizados. Debe iniciar sesión primero para poder unirse a la reunión.",
+			"TOKEN_EXPIRED": "Token de autenticación caducado.",
+			"TOKEN_INVALID": "El token de autenticación no es válido.",
+			"ERROR": "Se produjo un error inesperado. Póngase en contacto con el administrador del servidor.",
+			"YOU_DONT_HAVE_VIRTUAL_ROOM": "No tiene una sala virtual.",
+			"WRONG_CURRENT_CONFERENCE": "La conferencia actual no existe",
+			"DISALLOW_INITIATE_NON_VIRTUAL_ROOM_MEETING": "No se puede comenzar la reunión sin una sala virtual",
+			"FORBIDDEN_ONE_TIME_PIN_REQUIRED": "No tiene permiso para unirse o la conferencia no ha comenzado aún",
+			"ERC_LOCKED_CONFERENCE": "No puede unirse a la reunión porque está bloqueada. Pídale al moderador de la reunión que la desbloquee y reinténtelo.",
+			"ERC_START_CONF_FAILED": "Hay un problema con el servidor de conferencias. Contacte a su equipo de soporte técnico.",
+			"ERC_NO_DEFAULT_MCU_SERVICE_DEFINED_IN_VIRTUAL_ROOM": "Hay un problema con el servidor de conferencias. Contacte a su equipo de soporte técnico.",
+			"ERC_WEB_COLLABORATION_DISABLED": "Se deshabilitaron las funcionalidades de colaboración web",
+			"ERC_VIRTUAL_ROOM_NOT_ALLOW_INSTANT_MEETING": "La sala virtual no permite las reuniones instantáneas",
+			"ERC_AUTH_ACCESS_DENIED": "No se permite el acceso como invitado. Inicie sesión."
+		},
+		"WARNING": {
+			"NO_NAME_OR_ID": "Introduzca {{noName ? 'su nombre' : ''}}{{noName && noId ? ' y ' : ''}}{{noId ? 'el ID de su reunión' : ''}}"
+		},
+		"GUEST": "Invitado",
+		"FIRST_TIME_DOWNLOAD_SUGGESTION": "Si no tiene un cliente Avaya Workplace, <a href=\"{{link}}\" target=\"_blank\">descárguelo</a>.",
+		"OPTIONAL_UPGRADE_DOWNLOAD": "Hay una nueva aplicación disponible. Para obtener la mejor experiencia, actualice a <a href=\"\" ng-click=\"showAppIsInstalled()\" translate-once=\"{{text}}\"></a>",
+		"OPTIONAL_UPGRADE_DOWNLOAD_LINK": "la aplicación más reciente.",
+		"LEGAL_TEXT": {
+			"DEFAULT": "Al hacer clic en <b>UNIRSE</b>, acepta usar su nombre como nombre de visualización de participante de la reunión y el uso de la cookie del navegador para obtener una mejor experiencia de usuario.",
+			"QUICK_START": "Inicio rápido",
+			"APP_GUIDE": "Guía de la aplicación",
+			"PORTAL_GUIDE": "Guía del portal",
+			"CONTACT_SUPPORT": "Comunicarse con Soporte",
+			"AGREEMENT": "Al hacer clic en <small><b>UNIRSE</b></small> acepta los ",
+			"TERMS": "Términos de uso",
+			"PRIVACY": "Declaración sobre la privacidad",
+			"DIAL_IN_NUMBER": "Número de marcación"
+		},
+		"STARTED_MOBILE": "Si no ha instalado la aplicación requerida de Avaya Workplace, deberá hacerlo para poder unirse a la reunión."
+	},
 	"NAVIGATION": {
 		"JOIN": "Reunirse ahora",
 		"RECORDING": "Grabaciones + Eventos",
 		"SCHEDULE": "Agenda",
 		"SETTINGS": "Configuración",
 		"SIGN_OUT": "Cerrar sesión"
+	},
+	"RECORDINGS": {
+		"PLAYBACK": {
+			"QA": "Preguntas y respuestas",
+			"RELATED_VIDEOS": "Videos relacionados",
+			"BROWSE": "Examinar",
+			"VIDEO_DATE_AT": "{{date1}} a las {{date2}}",
+			"NOT_ACTIVE": "El evento no está activo"
+		},
+		"CHAT": {
+			"NEW_ONLY": "Mostrar sólo elementos nuevos",
+			"QUESTIONS_AND_ANSWERS": "Preguntas y respuestas",
+			"ENTER_QUESTION": "Introducir una pregunta para el moderador",
+			"ENTER_RESPONSE": "Introducir una respuesta para {{name}}",
+			"ME": "Yo",
+			"GUEST": "Invitado",
+			"REPLY_TO": "Responder a {{name}}",
+			"NAME_REQUEST": {
+				"TITLE": "Introduzca su nombre en el cuadro P y R.",
+				"JOIN_QA": "Unirse a P y R.",
+				"PLACE_HOLDER": "Nombre"
+			},
+			"PIN_REQUEST": {
+				"TITLE": "Introducir PIN de moderador de preguntas y respuestas",
+				"PLACE_HOLDER": "Introducir PIN",
+				"MODERATE": "Moderar",
+				"CANCEL": "Cancelar",
+				"ERROR": "El PIN especificado no es válido"
+			}
+		},
+		"PIN_REQUEST": {
+			"TITLE": "Este video se encuentra protegido por un PIN",
+			"ENTER_PIN": "Introducir PIN",
+			"OK": "Aceptar",
+			"CANCEL": "Cancelar",
+			"ERROR": "El PIN especificado no es válido"
+		},
+		"TAB": {
+			"RECOMMENDED": "Recomendado",
+			"EVENTS": "Eventos",
+			"ALL_RECORDINGS": "Todas las grabaciones",
+			"MY_RECORDINGS": "Mis grabaciones",
+			"CATEGORY": "Categoría",
+			"TRASH": "Papelera"
+		},
+		"TABLE_HEADER": {
+			"DATE": "Fecha",
+			"EXPIRY": "Vencimiento",
+			"DURATION": "Duración",
+			"IMAGE": "Imagen",
+			"TITLE": "Título",
+			"VIEWS": "Vistas",
+			"OWNER": "Propietario",
+			"SIZE": "Tamaño"
+		},
+		"TRASH": {
+			"DELETE_ITEMS": "¿Eliminar {{n}} elementos?",
+			"DELETE_ITEM": "¿Eliminar 1 elemento?",
+			"CANNOT_UNDONE": "No se puede deshacer",
+			"DELETE": "Eliminar",
+			"CANCEL": "Cancelar"
+		},
+		"SEARCH_RECORDINGS": "Buscar",
+		"RECORDING_DETAILS": {
+			"RECORDING_INFO": {
+				"MEETING_ID": "ID de reunión:",
+				"OWNER": "Propietario:",
+				"DATE": "Fecha:",
+				"EXPIRY": "Vencimiento:",
+				"CHECKSUM": "Suma de verificación:",
+				"DIRECT_URL": "URL directa:",
+				"DURATION": "Duración:",
+				"SIZE": "Tamaño:",
+				"PROFILE": "Perfil:",
+				"SIZE_W_X_H": "{{width}}x{{height}}",
+				"SIZE_W_X_H_BITRATE": "{{width}}x{{height}}, {{bitrate}} Kb/s",
+				"VIEWS": "Vistas: {{number}}",
+				"VIEWERS": "Expectadores: {{number}}",
+				"ACCESS_LEVEL": "Esta grabación está configurada como Privada. Cambie el Nivel de acceso de usuarios a Pública para compartir el video con otras personas."
+			},
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "Las siguientes personas pueden acceder a esta grabación:",
+				"ACCESS_FOOTNOTE": "*Si se introdujo un PIN de acceso anteriormente, éste se requerirá para acceder a la grabación.",
+				"ONLY_ME": "Privada (sólo yo)",
+				"ONLY_FOLLOWING_USERS": "Privada (ciertos usuarios)",
+				"ALL_AUTH_USERS": "Todos los usuarios autenticados",
+				"ALL_USERS": "Pública (todos los usuarios)",
+				"ADD_ALL": "Agregar todos los asistentes conocidos",
+				"NAME_OR_USER_ID": "Introducir nombre o ID de usuario",
+				"N_SELECTED": "Seleccionados: {{n}}",
+				"CHANGE_LEVEL": "Si cambia el Nivel de acceso de usuarios a Pública, cualquier persona podrá ver esta grabación.",
+				"DOWNLOAD_RECORDING": "Descargar la grabación",
+				"SEE_RECORDING_IN_USER_PORTAL": "Ver la grabación en el portal del usuario",
+				"ALLOW_USER": "Permitir a estos usuarios"
+			},
+			"ERROR": {
+				"INVALID_TITLE": "El nombre de usuario no puede estar vacío."
+			},
+			"UPLOAD": "Agregar una imagen para ayudar a las personas a identificar esta grabación",
+			"THUMBNAIL": "Miniatura del video",
+			"RECORDING_INFO_TAB_NAME": "Información de la grabación",
+			"USER_ACCESS_TAB_NAME": "Acceso de usuarios",
+			"RECORDING_MAIN_TAB_NAME": "Principal",
+			"CLOSE": "Cerrar",
+			"VIEW_RECORDING_DETAILS": "Ver detalles de grabación",
+			"EDIT_RECORDING_DETAILS": "Editar detalles de grabación",
+			"DESCRIPTION": "Descripción:",
+			"CATEGORY": "Categoría:",
+			"ACCESS_PIN": "PIN de acceso:",
+			"ADD_CATEGORY": "Agregar categoría",
+			"OPTIONAL": "Opcional",
+			"REQUIRED": "Requeridas",
+			"ALLOW_RECORDING_TO_BE_DOWNLOADED": "Permitir la descarga de la grabación",
+			"SHOW_PUBLICLY": "Mostrar públicamente en el portal",
+			"SAVE": "Guardar",
+			"CANCEL": "Cancelar",
+			"ENTER_DESCRIPTION": "Introducir una descripción",
+			"RECORDING_TITLE": "Título"
+		},
+		"BROADCAST_DETAILS": {
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "Nivel de privacidad:",
+				"SEE_BROADCAST_IN_USER_PORTAL": "Ver la transmisión en el portal del usuario"
+			},
+			"BROADCAST_DETAILS": "Detalles de la transmisión",
+			"VIEW_BROADCAST_DETAILS": "Ver los detalles de la transmisión",
+			"EDIT_BROADCAST_DETAILS": "Editar los detalles de la transmisión",
+			"BROADCAST_INFO_TAB_NAME": "Información de transmisión"
+		},
+		"NOW": "En curso",
+		"HAPPENING_TODAY": "En curso hoy",
+		"RECENTLY_ADDED": "Agregados recientemente",
+		"MOST_VIEWED": "Más vistos",
+		"UPCOMING": "Próximas reuniones",
+		"LATER_TODAY": "Hoy más tarde",
+		"TOMORROW": "Mañana",
+		"VIEW_DETAILS": "Ver detalles",
+		"EDIT_DETAILS": "Editar detalles",
+		"BROADCAST_MODERATE": "Moderar",
+		"COPY_LINK": "Copiar enlace",
+		"SHARE_LINK": "Compartir por correo",
+		"DOWNLOAD": "Descargar",
+		"DELETE": "Eliminar",
+		"RECOVER": "Recuperar",
+		"TODAY": "Hoy",
+		"YESTERDAY": "Ayer",
+		"TRASH_NOTICE": "Los elementos en su papelera se borrarán automáticamente luego de {{n}} días",
+		"DELETE_ALL": "Eliminar todo",
+		"RECOVER_ALL": "Recuperar todo",
+		"PAGE": "Página",
+		"OF": "de {{n}}",
+		"SHOW": "Mostrar:",
+		"ITEMS": "elementos",
+		"LOAD_MORE": "Cargar más",
+		"RESULTS": "Resultados: {{n}}",
+		"RESULT": "1 resultado",
+		"SHOWING": "(mostrando {{first}}-{{second}})",
+		"TYPE_IN_SEARCH": "Ingrese su búsqueda y presione Intro",
+		"SEARCHING": "Buscando...",
+		"NO_RECOMMENDED": "No hay grabaciones recomendadas",
+		"NO_BROADCASTS": "No hay eventos en vivo",
+		"NO_RECORDINGS": "No hay grabaciones",
+		"NO_ACCESS": "<a class='sign-in'>Inicie sesión</a> o use el enlace proporcionado para ver una grabación o evento.",
+		"VIEWS": "{{n}} vistas",
+		"VIEWERS": "{{n}} expectadores",
+		"CANCEL": "Cancelar",
+		"CONTINUE": "Continuar",
+		"ERROR": {
+			"DOWNLOAD": "Error de descarga",
+			"DOWNLOAD_LINK": "Enlace de descarga no disponible",
+			"RECORDING_DELETED": "Se eliminó la grabación. Se debe restaurar la grabación para reproducirla.",
+			"RECORDING_NOT_ACTIVE": "El evento no está activo.",
+			"UPDATE_FAILED": "Error al actualizar la grabación"
+		},
+		"EXPIRY": {
+			"TITLE": "Expiración:",
+			"IN": "En",
+			"DAY": "día",
+			"DAYS": "días",
+			"HOUR": "hora",
+			"HOURS": "horas",
+			"EXPIRED": "Vencido"
+		},
+		"SIZE": {
+			"KB": "KB",
+			"MB": "MB",
+			"GB": "GB",
+			"TB": "TB",
+			"PB": "PB"
+		}
 	},
 	"SETTINGS": {
 		"TITLE": "Configuración de Avaya",
