--- a/src/assets/i18n/fr-FR.json
+++ b/src/assets/i18n/fr-FR.json
@@ -55,12 +55,294 @@
 		"VERSION_EXCLUSION_FOR_DATE_ONLY": "La version de votre navigateur ne prend pas en charge les conférences Web. Pour une expérience de collaboration optimale,<br>essayez une autre version, d'autres <span class=\"underline\">navigateurs pris en charge</span> ou téléchargez le client.",
 		"OLD_EDGE": "Votre navigateur n'est pas compatible avec Avaya Meetings. Pour une expérience optimale, veuillez passer sur Google Chrome ou sur la dernière version de Microsoft Edge."
 	},
+	"JOIN": {
+		"MEETING_DID_NOT_START": "Si votre réunion n'a pas commencé,",
+		"OPEN_MANUALLY": "ouvrez-la manuellement",
+		"STARTED_SWC": "Votre réunion a commencé dans une nouvelle fenêtre",
+		"AUDIO_VIDEO_CHECK": "Contrôle audio / vidéo ouvert dans l'application",
+		"STARTED_AC": "Votre réunion a commencé dans l'application",
+		"STARTED_CLIENT_SETTINGS": "Contrôle audio / vidéo ouvert dans l'application",
+		"IF_SWC_NOT_STARTED": "Si la réunion n'a pas commencé automatiquement, veuillez cliquer sur ce <a href=\"{{link}}\" target=\"_blank\">lien</a>.",
+		"IF_AC_NOT_STARTED": "Si la réunion n'a pas commencé automatiquement, vous pouvez ",
+		"IF_CLIENT_SETTINGS_NOT_STARTED": "Si votre contrôle audio / vidéo ne s'est pas ouvert,",
+		"JOIN_WITH_YOUR_BROWSER": "rejoignez avec votre navigateur",
+		"OR": "ou",
+		"DOWNLOAD_LATEST_EQUINOX_APP": "téléchargez la dernière version de l'application.",
+		"JOIN_ANOTHER": "Précédent",
+		"CAPTION": "Rejoindre cette réunion !",
+		"WELCOME_USER": "Bienvenue, {{userName}} !",
+		"USER_NAME": "Saisissez votre nom",
+		"MEETING_ID": "Saisissez l'ID de réunion",
+		"JOIN": "Rejoindre",
+		"JOIN_A_MEETING": "Rejoindre une réunion",
+		"MY_MEETING": "Ma réunion",
+		"USE_BROWSER": "Utiliser le navigateur pour l'audio et la vidéo",
+		"IN_PROGRESS": "En cours",
+		"YOU": "Vous{{separator}}",
+		"AND_N_OTHERS": " et {{n}} autres",
+		"BROWSER_AUDIO_VIDEO": "Audio/Vidéo dans le navigateur + Présentation",
+		"USE_BROWSER_FOR_AUDIO_AND_VIDEO": "Utiliser le navigateur pour l'audio et la vidéo",
+		"USE_BROWSER_FOR_PRESENTATION_ONLY": "Utiliser le navigateur pour les présentations uniquement",
+		"DOWNLOAD_CLIENT": "Télécharger le client",
+		"ADJUST_AUDIO_VIDEO_DEVICES": "Vérifier l'audio et la vidéo",
+		"PRESENTATION_ONLY": "Présentation uniquement",
+		"CALL_ME": "Appelez-moi",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "Veuillez créer un code PIN à usage unique. Seuls les caractères numériques sont autorisés.",
+			"ENTER_PIN": "Entrez le code PIN.",
+			"OK": "OK",
+			"CANCEL": "Annuler"
+		},
+		"ENTER_YOUR_NAME": "Veuillez entrer votre nom pour rejoindre la réunion",
+		"OPEN_MC": "Ouvrir le client mobile Avaya Workplace?",
+		"OK": "OK",
+		"OPEN": "Ouvrir",
+		"CANCEL": "Annuler",
+		"DONE": "Terminé",
+		"WAITING_FOR_MODERATOR": "La réunion n’a pas encore commencé",
+		"NEXT_CHECK_IN_SECS": "Prochaine vérification dans {{countDown}} secondes",
+		"CHECK_NOW": "Vérifier maintenant",
+		"ERROR": {
+			"CAPTION": "Une erreur s'est produite",
+			"NOT_VALID_USER_NAME": "Le nom d'utilisateur est trop long",
+			"NOT_VALID_MEETING_ID": "ID de réunion non valide !",
+			"CONFERENCE_DOES_NOT_EXIST": "La salle de réunion est introuvable. Vérifiez l'ID de la réunion et réessayez.",
+			"INVALID_MEETING_ID": "L'ID de réunion saisi n'existe pas. Saisissez un ID valide.",
+			"SERVICE_UNAVAILABLE": "Absence de réponse ou erreur du serveur. Réessayez ultérieurement.",
+			"SERVICE_INTERNAL_ERROR": "Le serveur a rencontré une erreur interne ou un problème de configuration et n'a pas pu exécuter votre demande. Veuillez contacter l'administrateur du serveur.",
+			"MISSING_REQUEST_PARAM": "Le paramètre de demande est manquant. Veuillez contacter votre administrateur.",
+			"MEETING_NOT_STARTED_YET": "La réunion n'a pas encore commencé",
+			"FAIL_TO_JOIN_UNAUTHORIZED_PARTICIPANT_ID": "La réunion est réservée aux utilisateurs autorisés. Vous devez d'abord vous connecter avant de la rejoindre.",
+			"TOKEN_EXPIRED": "Le jeton d'authentification a expiré.",
+			"TOKEN_INVALID": "Le jeton d'authentification n'est pas valide.",
+			"ERROR": "Une erreur inattendue s'est produite. Veuillez contacter l'administrateur du serveur.",
+			"YOU_DONT_HAVE_VIRTUAL_ROOM": "Vous n'avez pas de salle virtuelle.",
+			"WRONG_CURRENT_CONFERENCE": "La conférence n'existe pas.",
+			"DISALLOW_INITIATE_NON_VIRTUAL_ROOM_MEETING": "Impossible de démarrer une réunion en salle non virtuelle",
+			"FORBIDDEN_ONE_TIME_PIN_REQUIRED": "Vous n'êtes pas autorisé à rejoindre cette conférence ou la conférence n'a pas encore commencé",
+			"ERC_LOCKED_CONFERENCE": "Vous ne pouvez pas rejoindre cette réunion car elle est verrouillée. Veuillez demander au modérateur de la déverrouiller et réessayez ultérieurement.",
+			"ERC_START_CONF_FAILED": "Il y a un problème au niveau du serveur de conférence. Veuillez contacter votre équipe d'assistance.",
+			"ERC_NO_DEFAULT_MCU_SERVICE_DEFINED_IN_VIRTUAL_ROOM": "Il y a un problème au niveau du serveur de conférence. Veuillez contacter votre équipe d'assistance.",
+			"ERC_WEB_COLLABORATION_DISABLED": "Les capacités de collaboration Web Collaboration sont désactivées.",
+			"ERC_VIRTUAL_ROOM_NOT_ALLOW_INSTANT_MEETING": "La salle virtuelle ne permet pas les réunions instantanées.",
+			"ERC_AUTH_ACCESS_DENIED": "L'accès invité n'est pas autorisé. Veuillez vous connecter."
+		},
+		"WARNING": {
+			"NO_NAME_OR_ID": "Veuillez saisir {{noName ? 'votre nom' : ''}}{{noName && noId ? ' et ' : ''}}{{noId ? 'ID de réunion' : ''}}"
+		},
+		"GUEST": "Invité",
+		"FIRST_TIME_DOWNLOAD_SUGGESTION": "Si vous n'avez pas de client Avaya Workplace, veuillez le <a href=\"{{link}}\" target=\"_blank\">télécharger</a>.",
+		"OPTIONAL_UPGRADE_DOWNLOAD": "Une nouvelle version de l'application est disponible. Pour une expérience optimale, veuillez installer <a href=\"\" ng-click=\"showAppIsInstalled()\" translate-once=\"{{text}}\"></a>",
+		"OPTIONAL_UPGRADE_DOWNLOAD_LINK": "la dernière version de l'application.",
+		"LEGAL_TEXT": {
+			"DEFAULT": "En cliquant sur <b>REJOINDRE</b>, vous acceptez l'utilisation de votre nom comme nom d'affichage de participant à la réunion et l'utilisation du cookie du navigateur pour améliorer l'expérience utilisateur.",
+			"QUICK_START": "Démarrage rapide",
+			"APP_GUIDE": "Guide de l'application",
+			"PORTAL_GUIDE": "Guide du portail",
+			"CONTACT_SUPPORT": "Contacter le support technique",
+			"AGREEMENT": "En cliquant sur <small><b>REJOINDRE</b></small>, vous acceptez les ",
+			"TERMS": "Conditions d'utilisation",
+			"PRIVACY": "Déclaration de confidentialité",
+			"DIAL_IN_NUMBER": "Composer un numéro"
+		},
+		"STARTED_MOBILE": "Si vous n'avez pas déjà installé l'application Avaya Workplace, vous devrez le faire pour rejoindre la réunion."
+	},
 	"NAVIGATION": {
 		"JOIN": "Lancer la réunion maintenant",
 		"RECORDING": "Enregistrements + Événements",
 		"SCHEDULE": "Agenda",
 		"SETTINGS": "Paramètres",
 		"SIGN_OUT": "Déconnexion"
+	},
+	"RECORDINGS": {
+		"PLAYBACK": {
+			"QA": "Q & R",
+			"RELATED_VIDEOS": "Vidéos associées",
+			"BROWSE": "Parcourir",
+			"VIDEO_DATE_AT": "{{date1}} à {{date2}}",
+			"NOT_ACTIVE": "L'événement n’est pas actif."
+		},
+		"CHAT": {
+			"NEW_ONLY": "Afficher uniquement les nouveaux éléments",
+			"QUESTIONS_AND_ANSWERS": "Questions/Réponses",
+			"ENTER_QUESTION": "Entrez une question à l'intention du modérateur.",
+			"ENTER_RESPONSE": "Entrer une réponse à {{name}}",
+			"ME": "Moi",
+			"GUEST": "Invité",
+			"REPLY_TO": "Répondre à {{name}}",
+			"NAME_REQUEST": {
+				"TITLE": "Saisissez votre nom pour rejoindre les Questions/Réponses.",
+				"JOIN_QA": "Rejoindre les Questions/Réponses",
+				"PLACE_HOLDER": "Nom"
+			},
+			"PIN_REQUEST": {
+				"TITLE": "Entrez le code PIN des Questions/Réponses :",
+				"PLACE_HOLDER": "Entrer le code PIN",
+				"MODERATE": "Modérer",
+				"CANCEL": "Annuler",
+				"ERROR": "Le code PIN fourni n'est pas valide."
+			}
+		},
+		"PIN_REQUEST": {
+			"TITLE": "Cette vidéo est protégée par un code PIN.",
+			"ENTER_PIN": "Entrer le code PIN",
+			"OK": "OK",
+			"CANCEL": "Annuler",
+			"ERROR": "Le code PIN fourni n'est pas valide."
+		},
+		"TAB": {
+			"RECOMMENDED": "Recommandés",
+			"EVENTS": "Événements",
+			"ALL_RECORDINGS": "Tous les enregistrements",
+			"MY_RECORDINGS": "Mes enregistrements",
+			"CATEGORY": "Catégorie",
+			"TRASH": "Corbeille"
+		},
+		"TABLE_HEADER": {
+			"DATE": "Date",
+			"EXPIRY": "Expiration",
+			"DURATION": "Durée",
+			"IMAGE": "Image",
+			"TITLE": "Titre",
+			"VIEWS": "Vues",
+			"OWNER": "Propriétaire",
+			"SIZE": "Taille"
+		},
+		"TRASH": {
+			"DELETE_ITEMS": "Supprimer {{n}} éléments ?",
+			"DELETE_ITEM": "Supprimer 1 élément ?",
+			"CANNOT_UNDONE": "Cette action sera irréversible.",
+			"DELETE": "Supprimer",
+			"CANCEL": "Annuler"
+		},
+		"SEARCH_RECORDINGS": "Rechercher",
+		"RECORDING_DETAILS": {
+			"RECORDING_INFO": {
+				"MEETING_ID": "ID de la réunion :",
+				"OWNER": "Propriétaire :",
+				"DATE": "Date :",
+				"EXPIRY": "Expiration :",
+				"CHECKSUM": "Somme de contrôle :",
+				"DIRECT_URL": "URL directe :",
+				"DURATION": "Durée :",
+				"SIZE": "Taille :",
+				"PROFILE": "Profil :",
+				"SIZE_W_X_H": "{{width}}x{{height}}",
+				"SIZE_W_X_H_BITRATE": "{{width}}x{{height}}, {{bitrate}} Ko/s",
+				"VIEWS": "Vues : {{number}}",
+				"VIEWERS": "Visionneurs : {{number}}",
+				"ACCESS_LEVEL": "Cet enregistrement est défini comme privé. Veuillez définir le niveau d'accès utilisateur comme public pour partager cette vidéo avec d'autres personnes."
+			},
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "Cet enregistrement est accessible :",
+				"ACCESS_FOOTNOTE": "*Si un code PIN d'accès a été entré ci-dessus, il devra être fourni par les utilisateurs pour accéder à l'enregistrement.",
+				"ONLY_ME": "seulement à moi (privé)",
+				"ONLY_FOLLOWING_USERS": "aux utilisateurs sélectionnés (privé)",
+				"ALL_AUTH_USERS": "à tous les utilisateurs authentifiés",
+				"ALL_USERS": "à tous les utilisateurs (public)",
+				"ADD_ALL": "Ajouter tous les participants connus",
+				"NAME_OR_USER_ID": "Entrez un nom ou un ID utilisateur.",
+				"N_SELECTED": "{{n}} sélectionné",
+				"CHANGE_LEVEL": "La définition du niveau d'accès utilisateur comme public permettra à tous les utilisateurs de voir cet enregistrement.",
+				"DOWNLOAD_RECORDING": "télécharger l'enregistrement",
+				"SEE_RECORDING_IN_USER_PORTAL": "voir l'enregistrement dans le portail d'utilisateur",
+				"ALLOW_USER": "Permettre à ces utilisateurs de"
+			},
+			"ERROR": {
+				"INVALID_TITLE": "Le nom de l'enregistrement ne peut pas être vide !"
+			},
+			"UPLOAD": "Ajouter une image pour aider les gens à identifier cet enregistrement",
+			"THUMBNAIL": "Miniature de la vidéo",
+			"RECORDING_INFO_TAB_NAME": "Informations sur l'enregistrement",
+			"USER_ACCESS_TAB_NAME": "Accès utilisateur",
+			"RECORDING_MAIN_TAB_NAME": "Principal",
+			"CLOSE": "Fermer",
+			"VIEW_RECORDING_DETAILS": "Affichage des informations sur l'enregistrement",
+			"EDIT_RECORDING_DETAILS": "Modification des informations sur l'enregistrement",
+			"DESCRIPTION": "Description :",
+			"CATEGORY": "Catégorie :",
+			"ACCESS_PIN": "Code PIN d'accès :",
+			"ADD_CATEGORY": "Ajouter une catégorie",
+			"OPTIONAL": "Facultatif",
+			"REQUIRED": "Requise(s)",
+			"ALLOW_RECORDING_TO_BE_DOWNLOADED": "Autoriser le téléchargement de l'enregistrement",
+			"SHOW_PUBLICLY": "Afficher publiquement sur le portail",
+			"SAVE": "Enregistrer",
+			"CANCEL": "Annuler",
+			"ENTER_DESCRIPTION": "Entrez une description.",
+			"RECORDING_TITLE": "Titre"
+		},
+		"BROADCAST_DETAILS": {
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "Cette diffusion est accessible :",
+				"SEE_BROADCAST_IN_USER_PORTAL": "voir la diffusion sur le portail utilisateur"
+			},
+			"BROADCAST_DETAILS": "Détails de la diffusion",
+			"VIEW_BROADCAST_DETAILS": "Affichage des détails de la diffusion",
+			"EDIT_BROADCAST_DETAILS": "Modification des détails de la diffusion",
+			"BROADCAST_INFO_TAB_NAME": "Détails de la diffusion"
+		},
+		"NOW": "Ce qui se passe en ce moment",
+		"HAPPENING_TODAY": "Activités du jour",
+		"RECENTLY_ADDED": "Ajoutés récemment",
+		"MOST_VIEWED": "Les plus visionnés",
+		"UPCOMING": "Réunions à venir",
+		"LATER_TODAY": "Plus tard aujourd’hui",
+		"TOMORROW": "Demain",
+		"VIEW_DETAILS": "Afficher les détails",
+		"EDIT_DETAILS": "Modifier les détails",
+		"BROADCAST_MODERATE": "Modérer",
+		"COPY_LINK": "Copier le lien",
+		"SHARE_LINK": "Partager par e-mail",
+		"DOWNLOAD": "Télécharger",
+		"DELETE": "Supprimer",
+		"RECOVER": "Récupérer",
+		"TODAY": "Aujourd'hui",
+		"YESTERDAY": "Hier",
+		"TRASH_NOTICE": "Les éléments placés dans la corbeille seront automatiquement supprimés après {{n}} jours.",
+		"DELETE_ALL": "Supprimer tout",
+		"RECOVER_ALL": "Récupérer tout",
+		"PAGE": "Page",
+		"OF": "de {{n}}",
+		"SHOW": "Afficher :",
+		"ITEMS": "éléments",
+		"LOAD_MORE": "Charger plus",
+		"RESULTS": "{{n}} résultats",
+		"RESULT": "1 résultat",
+		"SHOWING": "(affichage {{first}}-{{second}})",
+		"TYPE_IN_SEARCH": "Tapez votre recherche puis cliquez sur Entrée.",
+		"SEARCHING": "Recherche en cours...",
+		"NO_RECOMMENDED": "Aucun enregistrement recommandé",
+		"NO_BROADCASTS": "Pas d’événement en direct",
+		"NO_RECORDINGS": "Pas d'enregistrement",
+		"NO_ACCESS": "Veuillez <a class='sign-in'>vous connecter</a> ou utiliser un lien fourni pour afficher un enregistrement ou un événement.",
+		"VIEWS": "{{n}} vues",
+		"VIEWERS": "{{n}} visionneur(s)",
+		"CANCEL": "Annuler",
+		"CONTINUE": "Continuer",
+		"ERROR": {
+			"DOWNLOAD": "Erreur de téléchargement",
+			"DOWNLOAD_LINK": "Le lien de téléchargement n'est pas disponible",
+			"RECORDING_DELETED": "L’enregistrement a été supprimé. Il faut le restaurer pour pouvoir le lire.",
+			"RECORDING_NOT_ACTIVE": "L’événement n’est pas actif.",
+			"UPDATE_FAILED": "Échec de la mise à jour de lʼenregistrement"
+		},
+		"EXPIRY": {
+			"TITLE": "Expire :",
+			"IN": "Dans",
+			"DAY": "jour",
+			"DAYS": "jours",
+			"HOUR": "heure",
+			"HOURS": "heures",
+			"EXPIRED": "Expiré"
+		},
+		"SIZE": {
+			"KB": "Ko",
+			"MB": "Mo",
+			"GB": "Go",
+			"TB": "To",
+			"PB": "Po"
+		}
 	},
 	"SETTINGS": {
 		"TITLE": "Paramètres Avaya",
