--- a/src/assets/i18n/pt-BR.json
+++ b/src/assets/i18n/pt-BR.json
@@ -55,12 +55,294 @@
 		"VERSION_EXCLUSION_FOR_DATE_ONLY": "A versão do seu navegador não oferece suporte ao web conferencing. Para uma experiência de colaboração ainda melhor,<br>tente utilizar uma nova versão, outro <span class=\"underline\">navegador compatível</span> ou faça o download do aplicativo.",
 		"OLD_EDGE": "Seu navegador não é compatível com o Avaya Meetings. Use a versão mais recente do Google Chrome ou do Microsoft Edge para ter a melhor experiência."
 	},
+	"JOIN": {
+		"MEETING_DID_NOT_START": "Caso sua reunião não tenha começado,",
+		"OPEN_MANUALLY": "Abrir manualmente",
+		"STARTED_SWC": "Sua reunião começou em uma nova janela",
+		"AUDIO_VIDEO_CHECK": "Verificação de áudio/vídeo aberta no aplicativo",
+		"STARTED_AC": "Sua reunião começou no aplicativo",
+		"STARTED_CLIENT_SETTINGS": "Verificação de áudio/vídeo aberta no aplicativo",
+		"IF_SWC_NOT_STARTED": "Caso a reunião não tenha sido iniciada automaticamente, clique em <a href=\"{{link}}\" target=\"_blank\">link</a>.",
+		"IF_AC_NOT_STARTED": "Caso a reunião não tenha sido iniciada automaticamente, você pode ",
+		"IF_CLIENT_SETTINGS_NOT_STARTED": "Caso sua verificação de áudio/vídeo não tenha sido iniciada,",
+		"JOIN_WITH_YOUR_BROWSER": "Ingressar usando seu navegador",
+		"OR": "ou",
+		"DOWNLOAD_LATEST_EQUINOX_APP": "Faça o download do aplicativo mais recente",
+		"JOIN_ANOTHER": "Voltar",
+		"CAPTION": "Vamos ingressar nesta reunião!",
+		"WELCOME_USER": "Bem-vindo, {{userName}}!",
+		"USER_NAME": "Insira seu nome",
+		"MEETING_ID": "Digite sua ID da reunião",
+		"JOIN": "Participar",
+		"JOIN_A_MEETING": "Ingressar em uma reunião",
+		"MY_MEETING": "Minha reunião",
+		"USE_BROWSER": "Use o navegador para áudio + vídeo",
+		"IN_PROGRESS": "Em andamento",
+		"YOU": "Você{{separator}}",
+		"AND_N_OTHERS": " e {{n}} outros",
+		"BROWSER_AUDIO_VIDEO": "Áudio/vídeo + apresentação no navegador",
+		"USE_BROWSER_FOR_AUDIO_AND_VIDEO": "Use o navegador para áudio + vídeo",
+		"USE_BROWSER_FOR_PRESENTATION_ONLY": "Usar o navegador apenas para apresentação",
+		"DOWNLOAD_CLIENT": "Fazer download do aplicativo",
+		"ADJUST_AUDIO_VIDEO_DEVICES": "Verificar áudio e vídeo",
+		"PRESENTATION_ONLY": "Apenas apresentação",
+		"CALL_ME": "Chamar meu número",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "Crie um PIN não recorrente. Use apenas dígitos numéricos.",
+			"ENTER_PIN": "Insira o PIN",
+			"OK": "OK",
+			"CANCEL": "Cancelar"
+		},
+		"ENTER_YOUR_NAME": "Insira seu nome para ingressar na reunião.",
+		"OPEN_MC": "Abrir o Avaya Workplace Mobile Client?",
+		"OK": "OK",
+		"OPEN": "Abrir",
+		"CANCEL": "Cancelar",
+		"DONE": "Concluído",
+		"WAITING_FOR_MODERATOR": "A reunião ainda não começou.",
+		"NEXT_CHECK_IN_SECS": "Próxima verificação em {{countDown}} segundos",
+		"CHECK_NOW": "Verificar agora",
+		"ERROR": {
+			"CAPTION": "Ocorreu um erro",
+			"NOT_VALID_USER_NAME": "O nome de usuário é muito extenso",
+			"NOT_VALID_MEETING_ID": "ID da reunião inválida!",
+			"CONFERENCE_DOES_NOT_EXIST": "Não foi possível encontrar a sala de reunião. Verifique a ID da reunião e tente novamente.",
+			"INVALID_MEETING_ID": "A ID da reunião fornecida não existe. Insira uma ID válida.",
+			"SERVICE_UNAVAILABLE": "Não há resposta do servidor ou há um erro do servidor. Tente novamente depois.",
+			"SERVICE_INTERNAL_ERROR": "O servidor encontrou um erro interno ou problema na configuração e não conseguiu concluir sua solicitação. Entre em contato com o administrador do servidor.",
+			"MISSING_REQUEST_PARAM": "Falta um parâmetro para a solicitação. Verifique junto ao seu administrador.",
+			"MEETING_NOT_STARTED_YET": "A reunião ainda não começou",
+			"FAIL_TO_JOIN_UNAUTHORIZED_PARTICIPANT_ID": "A reunião é apenas para usuários autorizados. Antes de ingressar na reunião, é necessário entrar usando sua conta.",
+			"TOKEN_EXPIRED": "O token de autenticação expirou.",
+			"TOKEN_INVALID": "O token de autenticação não é válido.",
+			"ERROR": "Ocorreu um erro inesperado. Entre em contato com o administrador do servidor.",
+			"YOU_DONT_HAVE_VIRTUAL_ROOM": "Você não tem uma sala virtual.",
+			"WRONG_CURRENT_CONFERENCE": "A conferência atual não existe",
+			"DISALLOW_INITIATE_NON_VIRTUAL_ROOM_MEETING": "Não é possível iniciar uma reunião fora da sala virtual",
+			"FORBIDDEN_ONE_TIME_PIN_REQUIRED": "Você não tem permissão para participar ou a conferência ainda não começou",
+			"ERC_LOCKED_CONFERENCE": "Você não pode participar da reunião porque está bloqueada. Solicite ao moderador da reunião que a desbloqueie e tente novamente.",
+			"ERC_START_CONF_FAILED": "Há um problema com o servidor de conferência. Entre em contato com a equipe de suporte.",
+			"ERC_NO_DEFAULT_MCU_SERVICE_DEFINED_IN_VIRTUAL_ROOM": "Há um problema com o servidor de conferência. Entre em contato com a equipe de suporte.",
+			"ERC_WEB_COLLABORATION_DISABLED": "As capacidades de colaboração na Web estão desativadas",
+			"ERC_VIRTUAL_ROOM_NOT_ALLOW_INSTANT_MEETING": "A sala virtual não permite reuniões instantâneas",
+			"ERC_AUTH_ACCESS_DENIED": "O acesso para convidados não é permitido. Por gentileza, faça o logon."
+		},
+		"WARNING": {
+			"NO_NAME_OR_ID": "Digite {{noName ? 'seu nome' : ''}}{{noName && noId ? ' e ' : ''}}{{noId ? 'a ID da reunião' : ''}}"
+		},
+		"GUEST": "Convidado",
+		"FIRST_TIME_DOWNLOAD_SUGGESTION": "Caso não tenha o aplicativo Avaya Workplace, faça <a href=\"{{link}}\" target=\"_blank\">download</a>.",
+		"OPTIONAL_UPGRADE_DOWNLOAD": "Uma nova versão do aplicativo está disponível. Para uma experiência ainda melhor, faça o upgrade para <a href=\"\" ng-click=\"showAppIsInstalled()\" translate-once=\"{{text}}\"></a>",
+		"OPTIONAL_UPGRADE_DOWNLOAD_LINK": "aplicativo mais recente.",
+		"LEGAL_TEXT": {
+			"DEFAULT": "Ao clicar em <b>INGRESSAR</b> você concorda com o uso de seu nome como nome de exibição de participante da reunião e com o uso de cookies do navegador para uma melhor experiência de usuário.",
+			"QUICK_START": "Guia de início rápido",
+			"APP_GUIDE": "Guia do aplicativo",
+			"PORTAL_GUIDE": "Guia do portal",
+			"CONTACT_SUPPORT": "Entrar em contato com suporte",
+			"AGREEMENT": "Ao clicar em <small><b>INGRESSAR</b></small>, você concorda com ",
+			"TERMS": "Termos de uso",
+			"PRIVACY": "Declaração de privacidade",
+			"DIAL_IN_NUMBER": "Número para discagem"
+		},
+		"STARTED_MOBILE": "Caso não tenha instalado o aplicativo Avaya Workplace, será necessário instalá-lo para ingressar na reunião."
+	},
 	"NAVIGATION": {
 		"JOIN": "Reunir agora",
 		"RECORDING": "Gravações + Eventos",
 		"SCHEDULE": "Agendamento",
 		"SETTINGS": "Configurações",
 		"SIGN_OUT": "Sair"
+	},
+	"RECORDINGS": {
+		"PLAYBACK": {
+			"QA": "Perguntas e respostas",
+			"RELATED_VIDEOS": "Vídeos relacionados",
+			"BROWSE": "Procurar",
+			"VIDEO_DATE_AT": "{{date1}} às {{date2}}",
+			"NOT_ACTIVE": "O evento está inativo."
+		},
+		"CHAT": {
+			"NEW_ONLY": "Exibir apenas novos itens",
+			"QUESTIONS_AND_ANSWERS": "Perguntas e respostas",
+			"ENTER_QUESTION": "Digite uma pergunta para o moderador",
+			"ENTER_RESPONSE": "Digite uma resposta para {{name}}",
+			"ME": "Eu",
+			"GUEST": "Convidado",
+			"REPLY_TO": "Responder para {{name}}",
+			"NAME_REQUEST": {
+				"TITLE": "Insira seu nome para ingressar na sessão de perguntas e respostas",
+				"JOIN_QA": "Participar da sessão de perguntas e respostas",
+				"PLACE_HOLDER": "Nome"
+			},
+			"PIN_REQUEST": {
+				"TITLE": "Inserir o PIN de moderador de perguntas e resposta",
+				"PLACE_HOLDER": "Insira o PIN",
+				"MODERATE": "Moderar",
+				"CANCEL": "Cancelar",
+				"ERROR": "O PIN fornecido é inválido"
+			}
+		},
+		"PIN_REQUEST": {
+			"TITLE": "Este vídeo está protegido por PIN",
+			"ENTER_PIN": "Insira o PIN",
+			"OK": "OK",
+			"CANCEL": "Cancelar",
+			"ERROR": "O PIN fornecido é inválido"
+		},
+		"TAB": {
+			"RECOMMENDED": "Recomendados",
+			"EVENTS": "Eventos",
+			"ALL_RECORDINGS": "Todas as gravações",
+			"MY_RECORDINGS": "Minhas gravações",
+			"CATEGORY": "Categoria",
+			"TRASH": "Lixeira"
+		},
+		"TABLE_HEADER": {
+			"DATE": "Data",
+			"EXPIRY": "Expiração",
+			"DURATION": "Duração",
+			"IMAGE": "Imagem",
+			"TITLE": "Título",
+			"VIEWS": "Visualizações",
+			"OWNER": "Proprietário",
+			"SIZE": "Tamanho"
+		},
+		"TRASH": {
+			"DELETE_ITEMS": "Excluir {{n}} itens?",
+			"DELETE_ITEM": "Excluir 1 item?",
+			"CANNOT_UNDONE": "Não é possível ser desfeito.",
+			"DELETE": "Excluir",
+			"CANCEL": "Cancelar"
+		},
+		"SEARCH_RECORDINGS": "Pesquisar",
+		"RECORDING_DETAILS": {
+			"RECORDING_INFO": {
+				"MEETING_ID": "ID da reunião:",
+				"OWNER": "Proprietário:",
+				"DATE": "Data:",
+				"EXPIRY": "Expiração:",
+				"CHECKSUM": "Soma de verificação:",
+				"DIRECT_URL": "URL direto:",
+				"DURATION": "Duração:",
+				"SIZE": "Tamanho:",
+				"PROFILE": "Perfil:",
+				"SIZE_W_X_H": "{{width}}x{{height}}",
+				"SIZE_W_X_H_BITRATE": "{{width}}x{{height}}, {{bitrate}} Kb/s",
+				"VIEWS": "Visualizações: {{number}}",
+				"VIEWERS": "Visualizadores: {{number}}",
+				"ACCESS_LEVEL": "Essa gravação está definida como Privada. Altere o Nível de acesso do usuário para Público se quiser compartilhar esse vídeo com o público."
+			},
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "Essa gravação pode ser acessada por:",
+				"ACCESS_FOOTNOTE": "*Caso um PIN de acesso tenha sido inserido acima, ele será necessário para acessar a gravação.",
+				"ONLY_ME": "Privado (apenas eu)",
+				"ONLY_FOLLOWING_USERS": "Privado (usuários selecionados)",
+				"ALL_AUTH_USERS": "Todos os usuários autenticados",
+				"ALL_USERS": "Público (todos os usuários)",
+				"ADD_ALL": "Adicionar todos os participantes conhecidos",
+				"NAME_OR_USER_ID": "Insira um nome ou ID de usuário",
+				"N_SELECTED": "{{n}} selecionado(s)",
+				"CHANGE_LEVEL": "Alterar o nível de acesso do usuário para Público permitirá que qualquer pessoa visualize essa gravação",
+				"DOWNLOAD_RECORDING": "Fazer o download da gravação",
+				"SEE_RECORDING_IN_USER_PORTAL": "Visualizar a gravação no portal do usuário",
+				"ALLOW_USER": "Permitir que esses usuários"
+			},
+			"ERROR": {
+				"INVALID_TITLE": "O nome de usuário não pode ficar em branco."
+			},
+			"UPLOAD": "Adicionar uma imagem para ajudar na identificação dessa gravação",
+			"THUMBNAIL": "Miniatura do vídeo",
+			"RECORDING_INFO_TAB_NAME": "Informações da gravação",
+			"USER_ACCESS_TAB_NAME": "Acesso do usuário",
+			"RECORDING_MAIN_TAB_NAME": "Principal",
+			"CLOSE": "Fechar",
+			"VIEW_RECORDING_DETAILS": "Vsualizar detalhes da gravação",
+			"EDIT_RECORDING_DETAILS": "Editar detalhes da gravação",
+			"DESCRIPTION": "Descrição:",
+			"CATEGORY": "Categoria:",
+			"ACCESS_PIN": "PIN de acesso:",
+			"ADD_CATEGORY": "Adicionar categoria",
+			"OPTIONAL": "Opcional",
+			"REQUIRED": "Necessária(s)",
+			"ALLOW_RECORDING_TO_BE_DOWNLOADED": "Permitir o download da gravação",
+			"SHOW_PUBLICLY": "Exibir publicamente no portal",
+			"SAVE": "Salvar",
+			"CANCEL": "Cancelar",
+			"ENTER_DESCRIPTION": "Inserir uma descrição",
+			"RECORDING_TITLE": "Título"
+		},
+		"BROADCAST_DETAILS": {
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "Essa transmissão pode ser acessada por:",
+				"SEE_BROADCAST_IN_USER_PORTAL": "Visualizar a transmissão no portal do usuário"
+			},
+			"BROADCAST_DETAILS": "Detalhes da transmissão",
+			"VIEW_BROADCAST_DETAILS": "Visualizar detalhes da transmissão",
+			"EDIT_BROADCAST_DETAILS": "Editar detalhes da transmissão",
+			"BROADCAST_INFO_TAB_NAME": "Informações da transmissão"
+		},
+		"NOW": "Acontecendo agora",
+		"HAPPENING_TODAY": "Acontecendo hoje",
+		"RECENTLY_ADDED": "Adicionados recentemente",
+		"MOST_VIEWED": "Mais assistidos",
+		"UPCOMING": "Futuras reuniões",
+		"LATER_TODAY": "Ainda hoje",
+		"TOMORROW": "Amanhã",
+		"VIEW_DETAILS": "Visualizar detalhes",
+		"EDIT_DETAILS": "Editar detalhes",
+		"BROADCAST_MODERATE": "Moderar",
+		"COPY_LINK": "Copiar link",
+		"SHARE_LINK": "Compartilhar por e-mail",
+		"DOWNLOAD": "Fazer o download",
+		"DELETE": "Excluir",
+		"RECOVER": "Recuperar",
+		"TODAY": "Hoje",
+		"YESTERDAY": "Ontem",
+		"TRASH_NOTICE": "Os itens em sua lixeira serão excluídos automaticamente após {{n}} dias",
+		"DELETE_ALL": "Excluir tudo",
+		"RECOVER_ALL": "Recuperar tudo",
+		"PAGE": "Página",
+		"OF": "de {{n}}",
+		"SHOW": "Mostrar:",
+		"ITEMS": "itens",
+		"LOAD_MORE": "Carregar mais",
+		"RESULTS": "{{n}} resultados",
+		"RESULT": "1 resultado",
+		"SHOWING": "(exibindo {{first}}-{{second}})",
+		"TYPE_IN_SEARCH": "Digite sua pesquisa e pressione Enter",
+		"SEARCHING": "Pesquisando...",
+		"NO_RECOMMENDED": "Não há gravações recomendadas",
+		"NO_BROADCASTS": "Não há eventos ao vivo",
+		"NO_RECORDINGS": "Não há gravações",
+		"NO_ACCESS": "<a class='sign-in'>Entre</a> ou use o link fornecido para exibir uma gravação ou evento.",
+		"VIEWS": "{{n}} visualizações",
+		"VIEWERS": "{{n}} visualizadores",
+		"CANCEL": "Cancelar",
+		"CONTINUE": "Continuar",
+		"ERROR": {
+			"DOWNLOAD": "Erro no download",
+			"DOWNLOAD_LINK": "O link do download não está disponível",
+			"RECORDING_DELETED": "A gravação foi excluída. Necessário restaurar a gravação para reproduzí-la.",
+			"RECORDING_NOT_ACTIVE": "O evento está inativo.",
+			"UPDATE_FAILED": "Falha ao atualizar uma gravação"
+		},
+		"EXPIRY": {
+			"TITLE": "Expiração:",
+			"IN": "Em",
+			"DAY": "dia",
+			"DAYS": "dias",
+			"HOUR": "hora",
+			"HOURS": "horas",
+			"EXPIRED": "Expirado"
+		},
+		"SIZE": {
+			"KB": "KB",
+			"MB": "MB",
+			"GB": "GB",
+			"TB": "TB",
+			"PB": "PB"
+		}
 	},
 	"SETTINGS": {
 		"TITLE": "Configurações Avaya",
