--- a/src/assets/i18n/zh-TW.json
+++ b/src/assets/i18n/zh-TW.json
@@ -55,12 +55,294 @@
 		"VERSION_EXCLUSION_FOR_DATE_ONLY": "您的瀏覽器版本不支援網路會議。如要獲得更佳的協同作業體驗，請試試另一個版本、<br>其他<span class=\"underline\">支援的瀏覽器</span>或下載該用戶端。",
 		"OLD_EDGE": "您的瀏覽器與 Avaya Meetings 不相容。請切換到 Google Chrome 或最新的 Microsoft Edge，以獲得最佳體驗。"
 	},
+	"JOIN": {
+		"MEETING_DID_NOT_START": "如果您的會議未啟動，",
+		"OPEN_MANUALLY": "請手動開啟",
+		"STARTED_SWC": "您的會議已在新視窗中啟動",
+		"AUDIO_VIDEO_CHECK": "音訊／視訊檢查已在應用程式中開啟",
+		"STARTED_AC": "您的會議已在應用程式中啟動",
+		"STARTED_CLIENT_SETTINGS": "音訊／視訊檢查已在應用程式中開啟",
+		"IF_SWC_NOT_STARTED": "如果會議未自動啟動，請按一下此<a href=\"{{link}}\" target=\"_blank\">連結</a>。",
+		"IF_AC_NOT_STARTED": "如果會議未自動啟動，您可以 ",
+		"IF_CLIENT_SETTINGS_NOT_STARTED": "如果您的音訊／視訊檢查未開啟，",
+		"JOIN_WITH_YOUR_BROWSER": "透過瀏覽器加入",
+		"OR": "或",
+		"DOWNLOAD_LATEST_EQUINOX_APP": "下載最新應用程式",
+		"JOIN_ANOTHER": "返回",
+		"CAPTION": "讓我們開始會議吧！",
+		"WELCOME_USER": "{{userName}}，歡迎您！",
+		"USER_NAME": "輸入您的名稱",
+		"MEETING_ID": "輸入會議 ID",
+		"JOIN": "加入",
+		"JOIN_A_MEETING": "加入會議",
+		"MY_MEETING": "我的會議",
+		"USE_BROWSER": "使用瀏覽器播放音訊和視訊",
+		"IN_PROGRESS": "進行中",
+		"YOU": "您{{separator}}",
+		"AND_N_OTHERS": " 及其他 {{n}} 位參與者",
+		"BROWSER_AUDIO_VIDEO": "瀏覽器音訊／視訊 + 簡報",
+		"USE_BROWSER_FOR_AUDIO_AND_VIDEO": "使用瀏覽器播放音訊和視訊",
+		"USE_BROWSER_FOR_PRESENTATION_ONLY": "僅將瀏覽器用於執行簡報",
+		"DOWNLOAD_CLIENT": "下載用戶端",
+		"ADJUST_AUDIO_VIDEO_DEVICES": "音訊和視訊檢查",
+		"PRESENTATION_ONLY": "僅啟用簡報模式",
+		"CALL_ME": "撥號給我",
+		"PIN_REQUEST": {
+			"TITLE_PIN_ASSIGN": "請建立一個一次性 PIN。僅允許使用數字。",
+			"ENTER_PIN": "輸入 PIN",
+			"OK": "好",
+			"CANCEL": "取消"
+		},
+		"ENTER_YOUR_NAME": "請輸入您的名稱以加入會議",
+		"OPEN_MC": "開啟 Avaya Workplace Mobile 用戶端？",
+		"OK": "好",
+		"OPEN": "開啟",
+		"CANCEL": "取消",
+		"DONE": "完成",
+		"WAITING_FOR_MODERATOR": "會議尚未開始",
+		"NEXT_CHECK_IN_SECS": "將在 {{countDown}} 秒鐘後進行下一次檢查",
+		"CHECK_NOW": "立即檢查",
+		"ERROR": {
+			"CAPTION": "發生錯誤",
+			"NOT_VALID_USER_NAME": "使用者名稱太長",
+			"NOT_VALID_MEETING_ID": "會議 ID 無效！",
+			"CONFERENCE_DOES_NOT_EXIST": "找不到會議室。請檢查會議 ID，然後重試。",
+			"INVALID_MEETING_ID": "您輸入的會議 ID 不存在。您應輸入有效的 ID。",
+			"SERVICE_UNAVAILABLE": "沒有來自伺服器的回應，或伺服器錯誤。請稍後重試。",
+			"SERVICE_INTERNAL_ERROR": "伺服器遇到內部錯誤或組態不正確，無法完成您的要求。請聯絡伺服器管理員。",
+			"MISSING_REQUEST_PARAM": "缺少要求參數。請洽詢您的管理員。",
+			"MEETING_NOT_STARTED_YET": "會議尚未開始",
+			"FAIL_TO_JOIN_UNAUTHORIZED_PARTICIPANT_ID": "會議僅限授權使用者參加。您必須先登入，然後才能加入會議。",
+			"TOKEN_EXPIRED": "驗證權杖已過期。",
+			"TOKEN_INVALID": "驗證權杖無效。",
+			"ERROR": "遇到非預期錯誤。請聯絡伺服器管理員。",
+			"YOU_DONT_HAVE_VIRTUAL_ROOM": "您沒有虛擬會議室。",
+			"WRONG_CURRENT_CONFERENCE": "目前的會議不存在",
+			"DISALLOW_INITIATE_NON_VIRTUAL_ROOM_MEETING": "無法啟動非虛擬會議室會議",
+			"FORBIDDEN_ONE_TIME_PIN_REQUIRED": "不允許您加入，或會議尚未開始",
+			"ERC_LOCKED_CONFERENCE": "此會議已經被鎖定，您無法加入。請聯絡會議主持人解除鎖定，然後重試",
+			"ERC_START_CONF_FAILED": "會議伺服器發生問題。請聯絡您的支援團隊。",
+			"ERC_NO_DEFAULT_MCU_SERVICE_DEFINED_IN_VIRTUAL_ROOM": "會議伺服器發生問題。請聯絡您的支援團隊。",
+			"ERC_WEB_COLLABORATION_DISABLED": "已停用 Web 協同作業功能",
+			"ERC_VIRTUAL_ROOM_NOT_ALLOW_INSTANT_MEETING": "虛擬會議室不允許進行即時會議",
+			"ERC_AUTH_ACCESS_DENIED": "不允許訪客存取。請登入。"
+		},
+		"WARNING": {
+			"NO_NAME_OR_ID": "請輸入 {{noName ? '您的名稱' : ''}}{{noName && noId ? ' 和 ' : ''}}{{noId ? '會議 ID' : ''}}"
+		},
+		"GUEST": "訪客",
+		"FIRST_TIME_DOWNLOAD_SUGGESTION": "如果您沒有 Avaya Workplace 用戶端，請<a href=\"{{link}}\" target=\"_blank\">下載</a>。",
+		"OPTIONAL_UPGRADE_DOWNLOAD": "應用程式之最新版本可用。如要獲得更佳的使用體驗，請升級到 <a href=\"\" ng-click=\"showAppIsInstalled()\" translate-once=\"{{text}}\"></a>",
+		"OPTIONAL_UPGRADE_DOWNLOAD_LINK": "最新應用程式",
+		"LEGAL_TEXT": {
+			"DEFAULT": "按一下<b>加入</b>即表示，您同意使用自己的姓名作為會議參加者的顯示名稱，並同意使用瀏覽器 Cookie，以獲取更好的使用者體驗。",
+			"QUICK_START": "快速入門",
+			"APP_GUIDE": "應用程式指南",
+			"PORTAL_GUIDE": "入口網站指南",
+			"CONTACT_SUPPORT": "聯絡支援團隊",
+			"AGREEMENT": "按一下<small><b>加入</b></small>即表示您同意 ",
+			"TERMS": "使用規定",
+			"PRIVACY": "隱私權聲明",
+			"DIAL_IN_NUMBER": "撥入號碼"
+		},
+		"STARTED_MOBILE": "如果未安裝所需的 Avaya Workplace 應用程式，您必須在安裝後才能加入會議。"
+	},
 	"NAVIGATION": {
 		"JOIN": "立即開始會議",
 		"RECORDING": "錄製 + 事件",
 		"SCHEDULE": "排程",
 		"SETTINGS": "設定",
 		"SIGN_OUT": "登出"
+	},
+	"RECORDINGS": {
+		"PLAYBACK": {
+			"QA": "問答",
+			"RELATED_VIDEOS": "相關視訊",
+			"BROWSE": "瀏覽",
+			"VIDEO_DATE_AT": "日期：{{date1}}，時間：{{date2}}",
+			"NOT_ACTIVE": "此事件未處於作用中狀態"
+		},
+		"CHAT": {
+			"NEW_ONLY": "僅顯示新項目",
+			"QUESTIONS_AND_ANSWERS": "問答對話",
+			"ENTER_QUESTION": "輸入要問會議主持人的問題",
+			"ENTER_RESPONSE": "輸入給 {{name}} 的回覆",
+			"ME": "我",
+			"GUEST": "訪客",
+			"REPLY_TO": "回覆 {{name}}",
+			"NAME_REQUEST": {
+				"TITLE": "請輸入您的名稱以加入問答",
+				"JOIN_QA": "加入問答",
+				"PLACE_HOLDER": "名稱"
+			},
+			"PIN_REQUEST": {
+				"TITLE": "輸入問答會議主持人 PIN",
+				"PLACE_HOLDER": "輸入 PIN",
+				"MODERATE": "主持",
+				"CANCEL": "取消",
+				"ERROR": "您提供的 PIN 無效"
+			}
+		},
+		"PIN_REQUEST": {
+			"TITLE": "此視訊受 PIN 保護",
+			"ENTER_PIN": "輸入 PIN",
+			"OK": "確定",
+			"CANCEL": "取消",
+			"ERROR": "您提供的 PIN 無效"
+		},
+		"TAB": {
+			"RECOMMENDED": "推薦",
+			"EVENTS": "事件",
+			"ALL_RECORDINGS": "所有錄製",
+			"MY_RECORDINGS": "我的錄製",
+			"CATEGORY": "類別",
+			"TRASH": "垃圾桶"
+		},
+		"TABLE_HEADER": {
+			"DATE": "日期",
+			"EXPIRY": "到期時間",
+			"DURATION": "持續時間",
+			"IMAGE": "影像",
+			"TITLE": "標題",
+			"VIEWS": "檢視次數",
+			"OWNER": "擁有者",
+			"SIZE": "大小"
+		},
+		"TRASH": {
+			"DELETE_ITEMS": "刪除 {{n}} 個項目？",
+			"DELETE_ITEM": "刪除 1 個項目？",
+			"CANNOT_UNDONE": "此操作無法復原",
+			"DELETE": "刪除",
+			"CANCEL": "取消"
+		},
+		"SEARCH_RECORDINGS": "搜尋",
+		"RECORDING_DETAILS": {
+			"RECORDING_INFO": {
+				"MEETING_ID": "會議 ID：",
+				"OWNER": "擁有者：",
+				"DATE": "日期：",
+				"EXPIRY": "到期時間：",
+				"CHECKSUM": "總和檢查碼：",
+				"DIRECT_URL": "直接 URL：",
+				"DURATION": "持續時間：",
+				"SIZE": "大小：",
+				"PROFILE": "設定檔：",
+				"SIZE_W_X_H": "{{width}}x{{height}}",
+				"SIZE_W_X_H_BITRATE": "{{width}}x{{height}}，{{bitrate}} Kb/s",
+				"VIEWS": "檢視次數：{{number}}",
+				"VIEWERS": "檢視人數：{{number}}",
+				"ACCESS_LEVEL": "此錄製的使用者存取權限層級已設定為「私人」。如需公開共用此視訊，請將使用者存取權限層級變更為「公開」。"
+			},
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "可存取此錄製的人員：",
+				"ACCESS_FOOTNOTE": "*如果已在上方輸入存取 PIN，則需要提供該 PIN 才能存取此錄製。",
+				"ONLY_ME": "私人（僅限我自己）",
+				"ONLY_FOLLOWING_USERS": "私人 - 僅選取的使用者",
+				"ALL_AUTH_USERS": "所有經過驗證的使用者",
+				"ALL_USERS": "公開（所有使用者）",
+				"ADD_ALL": "新增所有已知與會者",
+				"NAME_OR_USER_ID": "輸入名稱或使用者 ID",
+				"N_SELECTED": "已選取 {{n}} 項",
+				"CHANGE_LEVEL": "將使用者存取權限層級變更為「公開」將允許任何人檢視此錄製",
+				"DOWNLOAD_RECORDING": "下載錄製",
+				"SEE_RECORDING_IN_USER_PORTAL": "在使用者入口網站中查看錄製",
+				"ALLOW_USER": "允許這些使用者"
+			},
+			"ERROR": {
+				"INVALID_TITLE": "錄製的名稱不能為空白！"
+			},
+			"UPLOAD": "請新增影像，以協助使用者識別此錄製",
+			"THUMBNAIL": "視訊縮圖",
+			"RECORDING_INFO_TAB_NAME": "錄製資訊",
+			"USER_ACCESS_TAB_NAME": "使用者存取",
+			"RECORDING_MAIN_TAB_NAME": "主要",
+			"CLOSE": "關閉",
+			"VIEW_RECORDING_DETAILS": "檢視錄製詳細資料",
+			"EDIT_RECORDING_DETAILS": "編輯錄製詳細資料",
+			"DESCRIPTION": "描述：",
+			"CATEGORY": "類別：",
+			"ACCESS_PIN": "存取 PIN：",
+			"ADD_CATEGORY": "新增類別",
+			"OPTIONAL": "選用",
+			"REQUIRED": "必填",
+			"ALLOW_RECORDING_TO_BE_DOWNLOADED": "允許下載錄製",
+			"SHOW_PUBLICLY": "在入口網站中公開顯示",
+			"SAVE": "儲存",
+			"CANCEL": "取消",
+			"ENTER_DESCRIPTION": "輸入描述",
+			"RECORDING_TITLE": "標題"
+		},
+		"BROADCAST_DETAILS": {
+			"USER_ACCESS": {
+				"DESCRIPTION_TEXT": "可存取此廣播的人員：",
+				"SEE_BROADCAST_IN_USER_PORTAL": "在使用者入口網站中查看廣播"
+			},
+			"BROADCAST_DETAILS": "廣播詳細資料",
+			"VIEW_BROADCAST_DETAILS": "檢視廣播詳細資料",
+			"EDIT_BROADCAST_DETAILS": "編輯廣播詳細資料",
+			"BROADCAST_INFO_TAB_NAME": "廣播資訊"
+		},
+		"NOW": "目前進行中",
+		"HAPPENING_TODAY": "今天的事件",
+		"RECENTLY_ADDED": "最近新增",
+		"MOST_VIEWED": "最多人檢視",
+		"UPCOMING": "即將召開的會議",
+		"LATER_TODAY": "今天晚些時候",
+		"TOMORROW": "明天",
+		"VIEW_DETAILS": "檢視詳細資料",
+		"EDIT_DETAILS": "編輯詳細資料",
+		"BROADCAST_MODERATE": "主持",
+		"COPY_LINK": "複製連結",
+		"SHARE_LINK": "透過電子郵件共用",
+		"DOWNLOAD": "下載",
+		"DELETE": "刪除",
+		"RECOVER": "復原",
+		"TODAY": "今天",
+		"YESTERDAY": "昨天",
+		"TRASH_NOTICE": "將在 {{n}} 天後自動刪除垃圾桶中的項目",
+		"DELETE_ALL": "全部刪除",
+		"RECOVER_ALL": "全部復原",
+		"PAGE": "第",
+		"OF": "頁，共 {{n}} 頁",
+		"SHOW": "顯示：",
+		"ITEMS": "個項目",
+		"LOAD_MORE": "載入更多",
+		"RESULTS": "{{n}} 個結果",
+		"RESULT": "1 個結果",
+		"SHOWING": "（顯示第 {{first}}-{{second}} 個）",
+		"TYPE_IN_SEARCH": "輸入搜尋字詞然後按 Enter",
+		"SEARCHING": "正在搜尋...",
+		"NO_RECOMMENDED": "沒有推薦的錄製",
+		"NO_BROADCASTS": "沒有即時事件",
+		"NO_RECORDINGS": "沒有錄製",
+		"NO_ACCESS": "請<a class='sign-in'>登入</a>或透過所提供的連結來檢視錄製或事件。",
+		"VIEWS": "{{n}} 次檢視",
+		"VIEWERS": "{{n}} 個檢視者",
+		"CANCEL": "取消",
+		"CONTINUE": "繼續",
+		"ERROR": {
+			"DOWNLOAD": "下載錯誤",
+			"DOWNLOAD_LINK": "下載連結無法使用",
+			"RECORDING_DELETED": "錄製已被刪除。需要復原錄製才能播放。",
+			"RECORDING_NOT_ACTIVE": "事件非進行中。",
+			"UPDATE_FAILED": "無法更新錄製"
+		},
+		"EXPIRY": {
+			"TITLE": "到期時間：",
+			"IN": "於",
+			"DAY": "天",
+			"DAYS": "天",
+			"HOUR": "小時",
+			"HOURS": "小時",
+			"EXPIRED": "已過期"
+		},
+		"SIZE": {
+			"KB": "KB",
+			"MB": "MB",
+			"GB": "GB",
+			"TB": "TB",
+			"PB": "PB"
+		}
 	},
 	"SETTINGS": {
 		"TITLE": "Avaya 設定",
